commit translated contents

--- a/docs/visual-basic/misc/bc31419.md
+++ b/docs/visual-basic/misc/bc31419.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31419
 ms.assetid: c44d2936-8c07-443a-b320-ac2bfbc1e9ec
-ms.openlocfilehash: 167a44e18faa58aa35d72e2b3692ef4f34059111
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 06b77eff32ffca4d41bc6a46e2b6f8f5dc397ed9
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53771302"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54633936"
 ---
 # <a name="isnot-requires-operands-that-have-reference-types-but-this-operand-has-the-value-type-lttypenamegt"></a>'IsNot' 피연산자는 참조 형식 이어야 하는데이 피연산자의 값 형식은 '&lt;typename&gt;'.
 식에서 하나 이상의 값 형식 피연산자가 있는 [IsNot Operator](../../visual-basic/language-reference/operators/isnot-operator.md) 를 사용합니다.  
@@ -27,6 +27,6 @@ ms.locfileid: "53771302"
   
 -   두 참조 형식의 포인터를 비교하려는 경우 두 피연산자에 대한 개체 참조를 사용해야 합니다. [Me](~/docs/visual-basic/programming-guide/program-structure/me-my-mybase-and-myclass.md#me) 키워드와 같이 참조 변수처럼 동작하는 참조 변수 또는 요소를 사용할 수 있습니다.  
   
-## <a name="see-also"></a>참고 항목  
- [Comparison Operators in Visual Basic](../../visual-basic/programming-guide/language-features/operators-and-expressions/comparison-operators.md)  
- [방법: 두 개체가 같은지 여부를 테스트 합니다.](../../visual-basic/programming-guide/language-features/operators-and-expressions/how-to-test-whether-two-objects-are-the-same.md)
+## <a name="see-also"></a>참고자료
+- [Comparison Operators in Visual Basic](../../visual-basic/programming-guide/language-features/operators-and-expressions/comparison-operators.md)
+- [방법: 두 개체가 같은지 여부를 테스트 합니다.](../../visual-basic/programming-guide/language-features/operators-and-expressions/how-to-test-whether-two-objects-are-the-same.md)
