--- a/docs/visual-basic/misc/bc33032.md
+++ b/docs/visual-basic/misc/bc33032.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC33032
 ms.assetid: 877f626f-7aa1-41d8-b7ca-eb4337d012d1
-ms.openlocfilehash: 0f4309a781112b03a3ecab5a14c5d8272764e65c
-ms.sourcegitcommit: 2eceb05f1a5bb261291a1f6a91c5153727ac1c19
+ms.openlocfilehash: 259cfb44328b650839d48290939dc113bdf00ed8
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 09/04/2018
-ms.locfileid: "43507721"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54637442"
 ---
 # <a name="conversion-operators-cannot-convert-from-object"></a>변환 연산자는 Object에서 변환할 수 없습니다.
 변환 연산자가 [Object Data Type](../../visual-basic/language-reference/data-types/object-data-type.md)의 매개 변수와 함께 선언되었습니다.  
@@ -27,9 +27,9 @@ ms.locfileid: "43507721"
   
 -   이 연산자 정의를 완전히 제거합니다. 이미 미리 정의되어 있습니다.  
   
-## <a name="see-also"></a>참고 항목  
- [연산자 프로시저](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)  
- [Operator 문](../../visual-basic/language-reference/statements/operator-statement.md)  
- [방법: 연산자 정의](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)  
- [방법: 변환 연산자 정의](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)  
- [개체로 유니버설 데이터 형식 (Visual Basic)](https://msdn.microsoft.com/library/5315bf21-2b22-45ab-98cd-5631dffbcb2f)
+## <a name="see-also"></a>참고자료
+- [연산자 프로시저](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)
+- [Operator 문](../../visual-basic/language-reference/statements/operator-statement.md)
+- [방법: 연산자 정의](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)
+- [방법: 변환 연산자를 정의 합니다.](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
+- [유니버설 데이터 형식 개체(Visual Basic)](https://msdn.microsoft.com/library/5315bf21-2b22-45ab-98cd-5631dffbcb2f)
