commit bilingual contents

--- a/docs/visual-basic/misc/bc31419.md
+++ b/docs/visual-basic/misc/bc31419.md
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC31419
 ms.assetid: c44d2936-8c07-443a-b320-ac2bfbc1e9ec
-ms.openlocfilehash: 167a44e18faa58aa35d72e2b3692ef4f34059111
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 06b77eff32ffca4d41bc6a46e2b6f8f5dc397ed9
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53771302"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54633936"
 ---
-# <a name="isnot-requires-operands-that-have-reference-types-but-this-operand-has-the-value-type-lttypenamegt"></a><span data-ttu-id="97bab-102">'IsNot' 피연산자는 참조 형식 이어야 하는데이 피연산자의 값 형식은 '&lt;typename&gt;'.</span><span class="sxs-lookup"><span data-stu-id="97bab-102">'IsNot' requires operands that have reference types, but this operand has the value type '&lt;typename&gt;'.</span></span>
-<span data-ttu-id="97bab-103">식에서 하나 이상의 값 형식 피연산자가 있는 [IsNot Operator](../../visual-basic/language-reference/operators/isnot-operator.md) 를 사용합니다.</span><span class="sxs-lookup"><span data-stu-id="97bab-103">An expression uses the [IsNot Operator](../../visual-basic/language-reference/operators/isnot-operator.md) with at least one value type operand.</span></span>  
+# <a name="isnot-requires-operands-that-have-reference-types-but-this-operand-has-the-value-type-lttypenamegt"></a><span data-ttu-id="5634d-102">'IsNot' 피연산자는 참조 형식 이어야 하는데이 피연산자의 값 형식은 '&lt;typename&gt;'.</span><span class="sxs-lookup"><span data-stu-id="5634d-102">'IsNot' requires operands that have reference types, but this operand has the value type '&lt;typename&gt;'.</span></span>
+<span data-ttu-id="5634d-103">식에서 하나 이상의 값 형식 피연산자가 있는 [IsNot Operator](../../visual-basic/language-reference/operators/isnot-operator.md) 를 사용합니다.</span><span class="sxs-lookup"><span data-stu-id="5634d-103">An expression uses the [IsNot Operator](../../visual-basic/language-reference/operators/isnot-operator.md) with at least one value type operand.</span></span>  
   
- <span data-ttu-id="97bab-104">`IsNot` 연산자는 두 개체 참조가 서로 다른 개체를 참조하는지 여부를 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="97bab-104">The `IsNot` operator determines whether two object references refer to different objects.</span></span> <span data-ttu-id="97bab-105">참조 형식의 포인터 값을 비교하므로 값 형식에는 의미가 없습니다.</span><span class="sxs-lookup"><span data-stu-id="97bab-105">It compares the pointer values of reference types and is meaningless with value types.</span></span>  
+ <span data-ttu-id="5634d-104">`IsNot` 연산자는 두 개체 참조가 서로 다른 개체를 참조하는지 여부를 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="5634d-104">The `IsNot` operator determines whether two object references refer to different objects.</span></span> <span data-ttu-id="5634d-105">참조 형식의 포인터 값을 비교하므로 값 형식에는 의미가 없습니다.</span><span class="sxs-lookup"><span data-stu-id="5634d-105">It compares the pointer values of reference types and is meaningless with value types.</span></span>  
   
- <span data-ttu-id="97bab-106">**오류 ID:** BC31419</span><span class="sxs-lookup"><span data-stu-id="97bab-106">**Error ID:** BC31419</span></span>  
+ <span data-ttu-id="5634d-106">**오류 ID:** BC31419</span><span class="sxs-lookup"><span data-stu-id="5634d-106">**Error ID:** BC31419</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="97bab-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="97bab-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="5634d-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="5634d-107">To correct this error</span></span>  
   
--   <span data-ttu-id="97bab-108">두 값 형식의 값을 비교하려는 경우 `=` 또는 `<>` 비교 연산자를 사용합니다.</span><span class="sxs-lookup"><span data-stu-id="97bab-108">If you intend to compare the values of two value types, use the `=` or `<>` comparison operator.</span></span>  
+-   <span data-ttu-id="5634d-108">두 값 형식의 값을 비교하려는 경우 `=` 또는 `<>` 비교 연산자를 사용합니다.</span><span class="sxs-lookup"><span data-stu-id="5634d-108">If you intend to compare the values of two value types, use the `=` or `<>` comparison operator.</span></span>  
   
--   <span data-ttu-id="97bab-109">두 참조 형식의 포인터를 비교하려는 경우 두 피연산자에 대한 개체 참조를 사용해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="97bab-109">If you intend to compare the pointers of two reference types, be sure you are using object references for both operands.</span></span> <span data-ttu-id="97bab-110">[Me](~/docs/visual-basic/programming-guide/program-structure/me-my-mybase-and-myclass.md#me) 키워드와 같이 참조 변수처럼 동작하는 참조 변수 또는 요소를 사용할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="97bab-110">You can use reference variables or elements, such as the [Me](~/docs/visual-basic/programming-guide/program-structure/me-my-mybase-and-myclass.md#me) keyword, that behave like reference variables.</span></span>  
+-   <span data-ttu-id="5634d-109">두 참조 형식의 포인터를 비교하려는 경우 두 피연산자에 대한 개체 참조를 사용해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="5634d-109">If you intend to compare the pointers of two reference types, be sure you are using object references for both operands.</span></span> <span data-ttu-id="5634d-110">[Me](~/docs/visual-basic/programming-guide/program-structure/me-my-mybase-and-myclass.md#me) 키워드와 같이 참조 변수처럼 동작하는 참조 변수 또는 요소를 사용할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="5634d-110">You can use reference variables or elements, such as the [Me](~/docs/visual-basic/programming-guide/program-structure/me-my-mybase-and-myclass.md#me) keyword, that behave like reference variables.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="97bab-111">참고 항목</span><span class="sxs-lookup"><span data-stu-id="97bab-111">See Also</span></span>  
- [<span data-ttu-id="97bab-112">Comparison Operators in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="97bab-112">Comparison Operators in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/operators-and-expressions/comparison-operators.md)  
- [<span data-ttu-id="97bab-113">방법: 두 개체가 같은지 여부를 테스트 합니다.</span><span class="sxs-lookup"><span data-stu-id="97bab-113">How to: Test Whether Two Objects Are the Same</span></span>](../../visual-basic/programming-guide/language-features/operators-and-expressions/how-to-test-whether-two-objects-are-the-same.md)
+## <a name="see-also"></a><span data-ttu-id="5634d-111">참고자료</span><span class="sxs-lookup"><span data-stu-id="5634d-111">See also</span></span>
+- [<span data-ttu-id="5634d-112">Comparison Operators in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="5634d-112">Comparison Operators in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/operators-and-expressions/comparison-operators.md)
+- [<span data-ttu-id="5634d-113">방법: 두 개체가 같은지 여부를 테스트 합니다.</span><span class="sxs-lookup"><span data-stu-id="5634d-113">How to: Test Whether Two Objects Are the Same</span></span>](../../visual-basic/programming-guide/language-features/operators-and-expressions/how-to-test-whether-two-objects-are-the-same.md)
