commit translated contents

--- a/docs/visual-basic/misc/bc30970.md
+++ b/docs/visual-basic/misc/bc30970.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30970
 ms.assetid: 81cc4f7b-cc16-46cc-9a49-74980300e158
-ms.openlocfilehash: c600330531a30af9c3b9c8beb95776a78a33d82c
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: c5ddde4e7e175a1ae0439c114adb25de44d3c965
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53766630"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54631404"
 ---
 # <a name="ltmessagegt-this-error-could-also-be-due-to-mixing-a-file-reference-to-ltfilename1gt-in-project-ltprojectname1gt-with-a-file-reference-to-ltfilename2gt-in-project-ltprojectname2gt"></a>&lt;메시지&gt; 대 한 파일 참조가 섞여 있기 때문에이 오류도 수 '&lt;filename1&gt;'in project'&lt;projectname1&gt;'에 대 한 파일 참조' with&lt;filename2&gt;'에서 프로젝트 '&lt;projectname2&gt;'
 \<메시지 >이 오류 때문일 수도 있습니다에 대 한 파일 참조가 섞여 '\<filepathname1 >' 프로젝트에서 '\<projectname1 >'에 대 한 파일 참조를 사용 하 여 '\<filepathname2 >' 프로젝트에서 '\<projectname2 > '.  두 어셈블리가 동일하면 동일한 대상을 참조하도록 두 참조를 바꿔 보세요.  
@@ -29,7 +29,7 @@ ms.locfileid: "53766630"
   
 2.  프로젝트 속성에서 사용 중인 형식을 정의하는 어셈블리가 포함된 파일에 대한 참조를 추가합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [프로젝트의 참조 관리](/visualstudio/ide/managing-references-in-a-project)  
- [프로젝트 및 솔루션 속성 관리](/visualstudio/ide/managing-project-and-solution-properties)  
- [끊어진 참조 문제 해결](/visualstudio/ide/troubleshooting-broken-references)
+## <a name="see-also"></a>참고자료
+- [프로젝트의 참조 관리](/visualstudio/ide/managing-references-in-a-project)
+- [프로젝트 및 솔루션 속성 관리](/visualstudio/ide/managing-project-and-solution-properties)
+- [끊어진 참조 문제 해결](/visualstudio/ide/troubleshooting-broken-references)
