--- a/docs/visual-basic/misc/bc30139.md
+++ b/docs/visual-basic/misc/bc30139.md
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC30139
 ms.assetid: f6f32f4b-4d57-4255-9b04-06c6461e0a78
-ms.openlocfilehash: 7a6c4f49dac5b5813a26a26625cbbdf6de03bd72
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: 903308e1cd36451c760313e1e99352d665babb26
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33610073"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54634027"
 ---
 # <a name="error-setting-assembly-manifest-option-lterror-messagegt"></a>어셈블리 매니페스트 옵션을 설정 하는 오류: &lt;오류 메시지&gt;
-Visual Basic 컴파일러는 매니페스트를 사용해 어셈블리를 생성 하는 어셈블리 링커 (Al.exe, Alink 라고도 함)를 호출 합니다. 어셈블리를 서명할 키 파일 또는 키 이름을 찾는 동안 링커에서 오류를 보고했습니다.  
+Visual Basic 컴파일러는 매니페스트를 사용 하 여 어셈블리를 생성 하려면 어셈블리 링커 (Al.exe, Alink 라고도)를 호출 합니다. 어셈블리를 서명할 키 파일 또는 키 이름을 찾는 동안 링커에서 오류를 보고했습니다.  
   
  **오류 ID:** BC30139  
   
 ## <a name="to-correct-this-error"></a>이 오류를 해결하려면  
   
-1.  따옴표 붙은 오류 메시지를 검사 하 고에 나열 된 오류를 참조 하십시오. [Al.exe (어셈블리 링커)](../../framework/tools/al-exe-assembly-linker.md) 추가 설명과 권장 사항을 대 한 합니다.  
+1.  따옴표 붙은 오류 메시지를 확인 하 고에 나열 된 오류를 참조 하십시오 [Al.exe (어셈블리 링커)](../../framework/tools/al-exe-assembly-linker.md) 추가 설명과 권장 사항을 대 한 합니다.  
   
 2.  오류가 계속 발생하면 해당 상황에 대한 정보를 수집하여 Microsoft 기술 지원 서비스에 알립니다.  
   
-## <a name="see-also"></a>참고 항목  
-  [Al.exe(어셈블리 링커)](../../framework/tools/al-exe-assembly-linker.md)   
-   
+## <a name="see-also"></a>참고자료
+- [Al.exe(어셈블리 링커)](../../framework/tools/al-exe-assembly-linker.md)
+
 
