--- a/docs/visual-basic/misc/bc30620.md
+++ b/docs/visual-basic/misc/bc30620.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30620
 ms.assetid: 21939456-e36c-4886-8923-cc1fa0c26666
-ms.openlocfilehash: cd361d538231096ede5f357453e62e53287ea798
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 154f95c03269d82a280a97907afaebabcaaa45c7
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53771536"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54613651"
 ---
 # <a name="option-strict-can-be-followed-only-by-on-or-off"></a>'Option Strict' 뒤에는 'On' 또는 'Off'만 올 수 있습니다.
 `Option Strict` 문은 `On` 또는 `Off`를 지정해야 합니다. 다른 모든 값이 올바르지 않습니다.  
@@ -23,8 +23,8 @@ ms.locfileid: "53771536"
   
 -   `On` 문에 대해 `Off` 또는 `Option Strict` 를 지정합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [옵션 \<키워드 > 문](../../visual-basic/language-reference/statements/option-keyword-statement.md)  
- [Option Compare 문](../../visual-basic/language-reference/statements/option-compare-statement.md)  
- [Option Explicit 문](../../visual-basic/language-reference/statements/option-explicit-statement.md)  
- [Option Strict 문](../../visual-basic/language-reference/statements/option-strict-statement.md)
+## <a name="see-also"></a>참고자료
+- [옵션 \<키워드 > 문](../../visual-basic/language-reference/statements/option-keyword-statement.md)
+- [Option Compare 문](../../visual-basic/language-reference/statements/option-compare-statement.md)
+- [Option Explicit 문](../../visual-basic/language-reference/statements/option-explicit-statement.md)
+- [Option Strict 문](../../visual-basic/language-reference/statements/option-strict-statement.md)
