--- a/docs/visual-basic/misc/bc30944.md
+++ b/docs/visual-basic/misc/bc30944.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30944
 ms.assetid: 1f7ed4a1-6ff5-4836-8424-21618c68ff45
-ms.openlocfilehash: e3bde47c6f7a46ab91c0120e41ae03dd9fb9ae91
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: 1c46d6078c6783a31d0ea9c3a2d9141fbd04f642
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33617967"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54615405"
 ---
 # <a name="syntax-error-in-cast-operator-two-arguments-separated-by-comma-are-required"></a>캐스트 연산자에 구문 오류가 있습니다. 쉼표로 구분된 인수 두 개가 필요합니다.
 식이 `CType` 변환 함수 또는 `DirectCast` 나 `TryCast` 변환 키워드를 사용하지만 인수를 하나만 제공합니다.  
@@ -25,10 +25,10 @@ ms.locfileid: "33617967"
   
 -   변환에 필요한 두 개의 인수를 제공합니다.  
   
--   특정 중 하나를 사용 하려는 경우 [형식 변환 함수](../../visual-basic/language-reference/functions/type-conversion-functions.md) 같은 `CString`, 대신 해당 함수 이름을 사용 해야 `CType`합니다. 그러면 인수가 하나만 필요합니다.  
+-   특정 중 하나를 사용 하려는 경우 [형식 변환 함수](../../visual-basic/language-reference/functions/type-conversion-functions.md) 와 같은 `CString`, 대신 해당 함수 이름을 사용 해야 `CType`합니다. 그러면 인수가 하나만 필요합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [CType 함수](../../visual-basic/language-reference/functions/ctype-function.md)  
- [DirectCast 연산자](../../visual-basic/language-reference/operators/directcast-operator.md)  
- [TryCast 연산자](../../visual-basic/language-reference/operators/trycast-operator.md)  
- [형식 변환 함수](../../visual-basic/language-reference/functions/type-conversion-functions.md)
+## <a name="see-also"></a>참고자료
+- [CType 함수](../../visual-basic/language-reference/functions/ctype-function.md)
+- [DirectCast 연산자](../../visual-basic/language-reference/operators/directcast-operator.md)
+- [TryCast 연산자](../../visual-basic/language-reference/operators/trycast-operator.md)
+- [형식 변환 함수](../../visual-basic/language-reference/functions/type-conversion-functions.md)
