--- a/docs/visual-basic/misc/bc32030.md
+++ b/docs/visual-basic/misc/bc32030.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC32030
 ms.assetid: 248d6464-3019-4753-8a33-7070bbe5d2a6
-ms.openlocfilehash: efeee964d9dcc617773f433553d4409ea459e960
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 755b975e647b1afca8fc9a31617037d2aa09405c
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53762059"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54623519"
 ---
 # <a name="elseif-cannot-follow-else-as-part-of-an-if-block"></a>'#ElseIf'는 ''#If' 블록의 일부로 '#Else' 뒤에 올 수 없습니다.
 `#ElseIf` 조건부 컴파일 지시문은 `#Else` 지시문 뒤에 옵니다. `#Else` 는 `#End If` 지시문 앞에서 조건부 블록의 마지막 지시문이어야 합니다.  
@@ -27,5 +27,5 @@ ms.locfileid: "53762059"
   
 3.  다른 모든 항목이 올바르면 이 `#ElseIf` 지시문과 해당 문 블록이 `#Else` 블록 앞에 오도록 이동합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [#If...Then...#Else 지시문](../../visual-basic/language-reference/directives/if-then-else-directives.md)
+## <a name="see-also"></a>참고자료
+- [#If...Then...#Else 지시문](../../visual-basic/language-reference/directives/if-then-else-directives.md)
