--- a/docs/visual-basic/misc/bc32071.md
+++ b/docs/visual-basic/misc/bc32071.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC32071
 ms.assetid: 6b0e85e9-3ac8-4181-97de-ca690b95a63c
-ms.openlocfilehash: 1f424f8f21173efb8dcc903dfe4cbfdd3882cb49
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 1654f4fa7095ff25d4df12b6b78782dba08ceb2e
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53758562"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54606714"
 ---
 # <a name="constraint-type-lttypenamegt-already-specified-for-this-type-parameter"></a>제약 조건 형식이 '&lt;typename&gt;'이 형식 매개 변수에 대해 이미 지정
 제약 조건 목록에 클래스 또는 인터페이스 제약 조건이 두 번 이상 포함되어 있습니다.  
@@ -31,6 +31,6 @@ ms.locfileid: "53758562"
   
 -   동일한 클래스 또는 인터페이스의 중복 지정을 모두 제거합니다. 제약 조건 목록에 한 번만 표시되어야 합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)  
- [형식 목록](../../visual-basic/language-reference/statements/type-list.md)
+## <a name="see-also"></a>참고자료
+- [Visual Basic의 제네릭 형식](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+- [형식 목록](../../visual-basic/language-reference/statements/type-list.md)
