--- a/docs/visual-basic/misc/bc30620.md
+++ b/docs/visual-basic/misc/bc30620.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30620
 ms.assetid: 21939456-e36c-4886-8923-cc1fa0c26666
-ms.openlocfilehash: cd361d538231096ede5f357453e62e53287ea798
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 154f95c03269d82a280a97907afaebabcaaa45c7
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53771536"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54613651"
 ---
-# <a name="option-strict-can-be-followed-only-by-on-or-off"></a><span data-ttu-id="cfdef-102">'Option Strict' 뒤에는 'On' 또는 'Off'만 올 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="cfdef-102">'Option Strict' can be followed only by 'On' or 'Off'</span></span>
-<span data-ttu-id="cfdef-103">`Option Strict` 문은 `On` 또는 `Off`를 지정해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="cfdef-103">`Option Strict` statements must specify either `On` or `Off`.</span></span> <span data-ttu-id="cfdef-104">다른 모든 값이 올바르지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="cfdef-104">All other values are invalid.</span></span>  
+# <a name="option-strict-can-be-followed-only-by-on-or-off"></a><span data-ttu-id="ea66e-102">'Option Strict' 뒤에는 'On' 또는 'Off'만 올 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="ea66e-102">'Option Strict' can be followed only by 'On' or 'Off'</span></span>
+<span data-ttu-id="ea66e-103">`Option Strict` 문은 `On` 또는 `Off`를 지정해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="ea66e-103">`Option Strict` statements must specify either `On` or `Off`.</span></span> <span data-ttu-id="ea66e-104">다른 모든 값이 올바르지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="ea66e-104">All other values are invalid.</span></span>  
   
- <span data-ttu-id="cfdef-105">**오류 ID:** BC30620</span><span class="sxs-lookup"><span data-stu-id="cfdef-105">**Error ID:** BC30620</span></span>  
+ <span data-ttu-id="ea66e-105">**오류 ID:** BC30620</span><span class="sxs-lookup"><span data-stu-id="ea66e-105">**Error ID:** BC30620</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="cfdef-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="cfdef-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="ea66e-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="ea66e-106">To correct this error</span></span>  
   
--   <span data-ttu-id="cfdef-107">`On` 문에 대해 `Off` 또는 `Option Strict` 를 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="cfdef-107">Specify either `On` or `Off` for the `Option Strict` statement.</span></span>  
+-   <span data-ttu-id="ea66e-107">`On` 문에 대해 `Off` 또는 `Option Strict` 를 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="ea66e-107">Specify either `On` or `Off` for the `Option Strict` statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="cfdef-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="cfdef-108">See Also</span></span>  
- [<span data-ttu-id="cfdef-109">옵션 \<키워드 > 문</span><span class="sxs-lookup"><span data-stu-id="cfdef-109">Option \<keyword> Statement</span></span>](../../visual-basic/language-reference/statements/option-keyword-statement.md)  
- [<span data-ttu-id="cfdef-110">Option Compare 문</span><span class="sxs-lookup"><span data-stu-id="cfdef-110">Option Compare Statement</span></span>](../../visual-basic/language-reference/statements/option-compare-statement.md)  
- [<span data-ttu-id="cfdef-111">Option Explicit 문</span><span class="sxs-lookup"><span data-stu-id="cfdef-111">Option Explicit Statement</span></span>](../../visual-basic/language-reference/statements/option-explicit-statement.md)  
- [<span data-ttu-id="cfdef-112">Option Strict 문</span><span class="sxs-lookup"><span data-stu-id="cfdef-112">Option Strict Statement</span></span>](../../visual-basic/language-reference/statements/option-strict-statement.md)
+## <a name="see-also"></a><span data-ttu-id="ea66e-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="ea66e-108">See also</span></span>
+- [<span data-ttu-id="ea66e-109">옵션 \<키워드 > 문</span><span class="sxs-lookup"><span data-stu-id="ea66e-109">Option \<keyword> Statement</span></span>](../../visual-basic/language-reference/statements/option-keyword-statement.md)
+- [<span data-ttu-id="ea66e-110">Option Compare 문</span><span class="sxs-lookup"><span data-stu-id="ea66e-110">Option Compare Statement</span></span>](../../visual-basic/language-reference/statements/option-compare-statement.md)
+- [<span data-ttu-id="ea66e-111">Option Explicit 문</span><span class="sxs-lookup"><span data-stu-id="ea66e-111">Option Explicit Statement</span></span>](../../visual-basic/language-reference/statements/option-explicit-statement.md)
+- [<span data-ttu-id="ea66e-112">Option Strict 문</span><span class="sxs-lookup"><span data-stu-id="ea66e-112">Option Strict Statement</span></span>](../../visual-basic/language-reference/statements/option-strict-statement.md)
