--- a/docs/visual-basic/misc/bc32030.md
+++ b/docs/visual-basic/misc/bc32030.md
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC32030
 ms.assetid: 248d6464-3019-4753-8a33-7070bbe5d2a6
-ms.openlocfilehash: efeee964d9dcc617773f433553d4409ea459e960
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 755b975e647b1afca8fc9a31617037d2aa09405c
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53762059"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54623519"
 ---
-# <a name="elseif-cannot-follow-else-as-part-of-an-if-block"></a><span data-ttu-id="0527d-102">'#ElseIf'는 ''#If' 블록의 일부로 '#Else' 뒤에 올 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="0527d-102">'#ElseIf' cannot follow '#Else' as part of an '#If' block</span></span>
-<span data-ttu-id="0527d-103">`#ElseIf` 조건부 컴파일 지시문은 `#Else` 지시문 뒤에 옵니다.</span><span class="sxs-lookup"><span data-stu-id="0527d-103">An `#ElseIf` conditional compilation directive follows an `#Else` directive.</span></span> <span data-ttu-id="0527d-104">`#Else` 는 `#End If` 지시문 앞에서 조건부 블록의 마지막 지시문이어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="0527d-104">`#Else` must be the last directive in the conditional block before the `#End If` directive.</span></span>  
+# <a name="elseif-cannot-follow-else-as-part-of-an-if-block"></a><span data-ttu-id="b44cd-102">'#ElseIf'는 ''#If' 블록의 일부로 '#Else' 뒤에 올 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="b44cd-102">'#ElseIf' cannot follow '#Else' as part of an '#If' block</span></span>
+<span data-ttu-id="b44cd-103">`#ElseIf` 조건부 컴파일 지시문은 `#Else` 지시문 뒤에 옵니다.</span><span class="sxs-lookup"><span data-stu-id="b44cd-103">An `#ElseIf` conditional compilation directive follows an `#Else` directive.</span></span> <span data-ttu-id="b44cd-104">`#Else` 는 `#End If` 지시문 앞에서 조건부 블록의 마지막 지시문이어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="b44cd-104">`#Else` must be the last directive in the conditional block before the `#End If` directive.</span></span>  
   
- <span data-ttu-id="0527d-105">**오류 ID:** BC32030</span><span class="sxs-lookup"><span data-stu-id="0527d-105">**Error ID:** BC32030</span></span>  
+ <span data-ttu-id="b44cd-105">**오류 ID:** BC32030</span><span class="sxs-lookup"><span data-stu-id="b44cd-105">**Error ID:** BC32030</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="0527d-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="0527d-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="b44cd-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="b44cd-106">To correct this error</span></span>  
   
-1.  <span data-ttu-id="0527d-107">앞의 `#Else` 가 `#ElseIf`이어야 하는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="0527d-107">Check if the preceding `#Else` should be an `#ElseIf`.</span></span>  
+1.  <span data-ttu-id="b44cd-107">앞의 `#Else` 가 `#ElseIf`이어야 하는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="b44cd-107">Check if the preceding `#Else` should be an `#ElseIf`.</span></span>  
   
-2.  <span data-ttu-id="0527d-108">앞의 `#If` 블록이 올바르게 종료되고 새 `#If` 블록이 시작되었는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="0527d-108">Check that a preceding `#If` block is properly terminated and that a new `#If` block is initiated.</span></span>  
+2.  <span data-ttu-id="b44cd-108">앞의 `#If` 블록이 올바르게 종료되고 새 `#If` 블록이 시작되었는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="b44cd-108">Check that a preceding `#If` block is properly terminated and that a new `#If` block is initiated.</span></span>  
   
-3.  <span data-ttu-id="0527d-109">다른 모든 항목이 올바르면 이 `#ElseIf` 지시문과 해당 문 블록이 `#Else` 블록 앞에 오도록 이동합니다.</span><span class="sxs-lookup"><span data-stu-id="0527d-109">If everything else is correct, move this `#ElseIf` directive and its corresponding statement block to precede the `#Else` block.</span></span>  
+3.  <span data-ttu-id="b44cd-109">다른 모든 항목이 올바르면 이 `#ElseIf` 지시문과 해당 문 블록이 `#Else` 블록 앞에 오도록 이동합니다.</span><span class="sxs-lookup"><span data-stu-id="b44cd-109">If everything else is correct, move this `#ElseIf` directive and its corresponding statement block to precede the `#Else` block.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="0527d-110">참고 항목</span><span class="sxs-lookup"><span data-stu-id="0527d-110">See Also</span></span>  
- [<span data-ttu-id="0527d-111">#If...Then...#Else 지시문</span><span class="sxs-lookup"><span data-stu-id="0527d-111">#If...Then...#Else Directives</span></span>](../../visual-basic/language-reference/directives/if-then-else-directives.md)
+## <a name="see-also"></a><span data-ttu-id="b44cd-110">참고자료</span><span class="sxs-lookup"><span data-stu-id="b44cd-110">See also</span></span>
+- [<span data-ttu-id="b44cd-111">#If...Then...#Else 지시문</span><span class="sxs-lookup"><span data-stu-id="b44cd-111">#If...Then...#Else Directives</span></span>](../../visual-basic/language-reference/directives/if-then-else-directives.md)
