--- a/docs/visual-basic/misc/bc32071.md
+++ b/docs/visual-basic/misc/bc32071.md
@@ -7,30 +7,30 @@ f1_keywords:
 helpviewer_keywords:
 - BC32071
 ms.assetid: 6b0e85e9-3ac8-4181-97de-ca690b95a63c
-ms.openlocfilehash: 1f424f8f21173efb8dcc903dfe4cbfdd3882cb49
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 1654f4fa7095ff25d4df12b6b78782dba08ceb2e
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53758562"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54606714"
 ---
-# <a name="constraint-type-lttypenamegt-already-specified-for-this-type-parameter"></a><span data-ttu-id="9387b-102">제약 조건 형식이 '&lt;typename&gt;'이 형식 매개 변수에 대해 이미 지정</span><span class="sxs-lookup"><span data-stu-id="9387b-102">Constraint type '&lt;typename&gt;' already specified for this type parameter</span></span>
-<span data-ttu-id="9387b-103">제약 조건 목록에 클래스 또는 인터페이스 제약 조건이 두 번 이상 포함되어 있습니다.</span><span class="sxs-lookup"><span data-stu-id="9387b-103">A constraint list includes a class or interface constraint more than once.</span></span>  
+# <a name="constraint-type-lttypenamegt-already-specified-for-this-type-parameter"></a><span data-ttu-id="049c5-102">제약 조건 형식이 '&lt;typename&gt;'이 형식 매개 변수에 대해 이미 지정</span><span class="sxs-lookup"><span data-stu-id="049c5-102">Constraint type '&lt;typename&gt;' already specified for this type parameter</span></span>
+<span data-ttu-id="049c5-103">제약 조건 목록에 클래스 또는 인터페이스 제약 조건이 두 번 이상 포함되어 있습니다.</span><span class="sxs-lookup"><span data-stu-id="049c5-103">A constraint list includes a class or interface constraint more than once.</span></span>  
   
- <span data-ttu-id="9387b-104">제약 조건 목록은 형식 매개 변수에 전달되는 형식 인수에 대해 요구 사항을 적용합니다.</span><span class="sxs-lookup"><span data-stu-id="9387b-104">A constraint list imposes requirements on the type argument passed to the type parameter.</span></span> <span data-ttu-id="9387b-105">다음 요구 사항을 임의로 조합해서 지정할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="9387b-105">You can specify the following requirements in any combination:</span></span>  
+ <span data-ttu-id="049c5-104">제약 조건 목록은 형식 매개 변수에 전달되는 형식 인수에 대해 요구 사항을 적용합니다.</span><span class="sxs-lookup"><span data-stu-id="049c5-104">A constraint list imposes requirements on the type argument passed to the type parameter.</span></span> <span data-ttu-id="049c5-105">다음 요구 사항을 임의로 조합해서 지정할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="049c5-105">You can specify the following requirements in any combination:</span></span>  
   
--   <span data-ttu-id="9387b-106">형식 인수는 하나 이상의 인터페이스를 구현해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="9387b-106">The type argument must implement one or more interfaces</span></span>  
+-   <span data-ttu-id="049c5-106">형식 인수는 하나 이상의 인터페이스를 구현해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="049c5-106">The type argument must implement one or more interfaces</span></span>  
   
--   <span data-ttu-id="9387b-107">형식 인수는 최대 하나의 클래스에서 상속해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="9387b-107">The type argument must inherit from at most one class</span></span>  
+-   <span data-ttu-id="049c5-107">형식 인수는 최대 하나의 클래스에서 상속해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="049c5-107">The type argument must inherit from at most one class</span></span>  
   
- <span data-ttu-id="9387b-108">형식은 동일한 형식에서 두 번 이상 상속하거나 구현될 수 없으며, 동일한 제약 조건 목록에 형식을 두 번 이상 지정할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="9387b-108">A type cannot implement or inherit from the same type more than once, and you cannot specify a type more than once in the same constraint list.</span></span>  
+ <span data-ttu-id="049c5-108">형식은 동일한 형식에서 두 번 이상 상속하거나 구현될 수 없으며, 동일한 제약 조건 목록에 형식을 두 번 이상 지정할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="049c5-108">A type cannot implement or inherit from the same type more than once, and you cannot specify a type more than once in the same constraint list.</span></span>  
   
- <span data-ttu-id="9387b-109">**오류 ID:** BC32071</span><span class="sxs-lookup"><span data-stu-id="9387b-109">**Error ID:** BC32071</span></span>  
+ <span data-ttu-id="049c5-109">**오류 ID:** BC32071</span><span class="sxs-lookup"><span data-stu-id="049c5-109">**Error ID:** BC32071</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="9387b-110">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="9387b-110">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="049c5-110">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="049c5-110">To correct this error</span></span>  
   
--   <span data-ttu-id="9387b-111">동일한 클래스 또는 인터페이스의 중복 지정을 모두 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="9387b-111">Remove any redundant specifications of the same class or interface.</span></span> <span data-ttu-id="9387b-112">제약 조건 목록에 한 번만 표시되어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="9387b-112">It should appear only once in the constraint list.</span></span>  
+-   <span data-ttu-id="049c5-111">동일한 클래스 또는 인터페이스의 중복 지정을 모두 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="049c5-111">Remove any redundant specifications of the same class or interface.</span></span> <span data-ttu-id="049c5-112">제약 조건 목록에 한 번만 표시되어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="049c5-112">It should appear only once in the constraint list.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="9387b-113">참고 항목</span><span class="sxs-lookup"><span data-stu-id="9387b-113">See Also</span></span>  
- [<span data-ttu-id="9387b-114">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="9387b-114">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)  
- [<span data-ttu-id="9387b-115">형식 목록</span><span class="sxs-lookup"><span data-stu-id="9387b-115">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
+## <a name="see-also"></a><span data-ttu-id="049c5-113">참고자료</span><span class="sxs-lookup"><span data-stu-id="049c5-113">See also</span></span>
+- [<span data-ttu-id="049c5-114">Visual Basic의 제네릭 형식</span><span class="sxs-lookup"><span data-stu-id="049c5-114">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="049c5-115">형식 목록</span><span class="sxs-lookup"><span data-stu-id="049c5-115">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
