--- a/docs/visual-basic/misc/bc30519.md
+++ b/docs/visual-basic/misc/bc30519.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30519
 ms.assetid: 3b3e724d-6fad-4146-b47d-6525493b2fa8
-ms.openlocfilehash: c8ccff7961fec90c933ed82b12a9a5c04f1156d0
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 58c503a753c659fca2ea96adf92ca91256172d06
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53772615"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54603585"
 ---
 # <a name="overload-resolution-failed-because-no-accessible-ltmethodgt-can-be-called-without-a-narrowing-conversion-lterrorgt"></a>오버 로드 확인에 실패 했습니다 액세스 가능한 '&lt;메서드&gt;' 축소 변환 없이 호출할 수 있습니다: &lt;오류&gt;
 오버로드된 메서드를 호출했지만 컴파일러에서 축소 변환 없이 호출할 수 있는 메서드를 찾을 수 없습니다. 축소 변환은 가능한 값의 일부를 정확하게 저장하지 못할 수도 있는 데이터 형식으로 값을 변경합니다.  
@@ -23,7 +23,7 @@ ms.locfileid: "53772615"
   
 -   `Option Strict Off`을 지정합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [오버로드된 속성 및 메서드](../../visual-basic/programming-guide/language-features/objects-and-classes/overloaded-properties-and-methods.md)  
- [확대 변환과 축소 변환](../../visual-basic/programming-guide/language-features/data-types/widening-and-narrowing-conversions.md)  
- [Option Strict 문](../../visual-basic/language-reference/statements/option-strict-statement.md)
+## <a name="see-also"></a>참고자료
+- [오버로드된 속성 및 메서드](../../visual-basic/programming-guide/language-features/objects-and-classes/overloaded-properties-and-methods.md)
+- [확대 변환과 축소 변환](../../visual-basic/programming-guide/language-features/data-types/widening-and-narrowing-conversions.md)
+- [Option Strict 문](../../visual-basic/language-reference/statements/option-strict-statement.md)
