--- a/docs/visual-basic/misc/bc31083.md
+++ b/docs/visual-basic/misc/bc31083.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31083
 ms.assetid: 0b6a42a0-16bd-4727-a178-48be145172bb
-ms.openlocfilehash: 14dfade6b9a7032ea8f7e8646608345a27c82ff1
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: c0521e5d26b5ee940397405c74f8a673b1b1b468
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33622046"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54592083"
 ---
 # <a name="methods-in-a-module-cannot-implement-interface-members"></a>모듈의 메서드는 인터페이스 멤버를 구현할 수 없습니다.
 인터페이스 멤버는 클래스 또는 구조체에 의해 구현되어야 합니다.  
@@ -23,8 +23,8 @@ ms.locfileid: "33622046"
   
 -   클래스 또는 구조체에서 인터페이스 멤버를 구현합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [Class 문](../../visual-basic/language-reference/statements/class-statement.md)  
- [Structure 문](../../visual-basic/language-reference/statements/structure-statement.md)  
- [Implements 문](../../visual-basic/language-reference/statements/implements-statement.md)  
- [Interface 문](../../visual-basic/language-reference/statements/interface-statement.md)
+## <a name="see-also"></a>참고자료
+- [Class 문](../../visual-basic/language-reference/statements/class-statement.md)
+- [Structure 문](../../visual-basic/language-reference/statements/structure-statement.md)
+- [Implements 문](../../visual-basic/language-reference/statements/implements-statement.md)
+- [Interface 문](../../visual-basic/language-reference/statements/interface-statement.md)
