--- a/docs/visual-basic/misc/bc31434.md
+++ b/docs/visual-basic/misc/bc31434.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31434
 ms.assetid: 61cba19e-db11-4a06-89d6-4244d411588c
-ms.openlocfilehash: 11268cd6c51789af3ddfae59e7b4e1f0c2407db9
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: d5b526f114f426a116e9677b2cfe6e890a1bcc87
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53783132"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54633294"
 ---
 # <a name="method-ltmethodname1gt-cannot-implement-partial-method-ltmethodname2gt-because-ltmethodname3gt-already-implements-it"></a>메서드 '&lt;methodname1&gt;'부분 메서드를 구현할 수 없습니다.'&lt;methodname2&gt;'하므로'&lt;methodname3&gt;' 이미 구현
 메서드 '\<methodname1 >' 부분 메서드를 구현할 수 없습니다. '\<methodname2 >' 때문에 '\<methodname3 >' 이미 구현 합니다. 하나의 메서드만 부분 메서드(Partial method)를 구현할 수 있습니다.  
@@ -47,5 +47,5 @@ End Class
   
  **오류 ID:** BC31434  
   
-## <a name="see-also"></a>참고 항목  
- [부분 메서드](../../visual-basic/programming-guide/language-features/procedures/partial-methods.md)
+## <a name="see-also"></a>참고자료
+- [부분 메서드](../../visual-basic/programming-guide/language-features/procedures/partial-methods.md)
