--- a/docs/visual-basic/misc/bc31083.md
+++ b/docs/visual-basic/misc/bc31083.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC31083
 ms.assetid: 0b6a42a0-16bd-4727-a178-48be145172bb
-ms.openlocfilehash: 14dfade6b9a7032ea8f7e8646608345a27c82ff1
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: c0521e5d26b5ee940397405c74f8a673b1b1b468
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33622046"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54592083"
 ---
-# <a name="methods-in-a-module-cannot-implement-interface-members"></a><span data-ttu-id="99eaf-102">모듈의 메서드는 인터페이스 멤버를 구현할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="99eaf-102">Methods in a Module cannot implement interface members</span></span>
-<span data-ttu-id="99eaf-103">인터페이스 멤버는 클래스 또는 구조체에 의해 구현되어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="99eaf-103">Interface members must be implemented by classes or structures.</span></span>  
+# <a name="methods-in-a-module-cannot-implement-interface-members"></a><span data-ttu-id="0bf45-102">모듈의 메서드는 인터페이스 멤버를 구현할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="0bf45-102">Methods in a Module cannot implement interface members</span></span>
+<span data-ttu-id="0bf45-103">인터페이스 멤버는 클래스 또는 구조체에 의해 구현되어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="0bf45-103">Interface members must be implemented by classes or structures.</span></span>  
   
- <span data-ttu-id="99eaf-104">**오류 ID:** BC31083</span><span class="sxs-lookup"><span data-stu-id="99eaf-104">**Error ID:** BC31083</span></span>  
+ <span data-ttu-id="0bf45-104">**오류 ID:** BC31083</span><span class="sxs-lookup"><span data-stu-id="0bf45-104">**Error ID:** BC31083</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="99eaf-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="99eaf-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="0bf45-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="0bf45-105">To correct this error</span></span>  
   
--   <span data-ttu-id="99eaf-106">클래스 또는 구조체에서 인터페이스 멤버를 구현합니다.</span><span class="sxs-lookup"><span data-stu-id="99eaf-106">Implement interface members from classes or structures.</span></span>  
+-   <span data-ttu-id="0bf45-106">클래스 또는 구조체에서 인터페이스 멤버를 구현합니다.</span><span class="sxs-lookup"><span data-stu-id="0bf45-106">Implement interface members from classes or structures.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="99eaf-107">참고 항목</span><span class="sxs-lookup"><span data-stu-id="99eaf-107">See Also</span></span>  
- [<span data-ttu-id="99eaf-108">Class 문</span><span class="sxs-lookup"><span data-stu-id="99eaf-108">Class Statement</span></span>](../../visual-basic/language-reference/statements/class-statement.md)  
- [<span data-ttu-id="99eaf-109">Structure 문</span><span class="sxs-lookup"><span data-stu-id="99eaf-109">Structure Statement</span></span>](../../visual-basic/language-reference/statements/structure-statement.md)  
- [<span data-ttu-id="99eaf-110">Implements 문</span><span class="sxs-lookup"><span data-stu-id="99eaf-110">Implements Statement</span></span>](../../visual-basic/language-reference/statements/implements-statement.md)  
- [<span data-ttu-id="99eaf-111">Interface 문</span><span class="sxs-lookup"><span data-stu-id="99eaf-111">Interface Statement</span></span>](../../visual-basic/language-reference/statements/interface-statement.md)
+## <a name="see-also"></a><span data-ttu-id="0bf45-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="0bf45-107">See also</span></span>
+- [<span data-ttu-id="0bf45-108">Class 문</span><span class="sxs-lookup"><span data-stu-id="0bf45-108">Class Statement</span></span>](../../visual-basic/language-reference/statements/class-statement.md)
+- [<span data-ttu-id="0bf45-109">Structure 문</span><span class="sxs-lookup"><span data-stu-id="0bf45-109">Structure Statement</span></span>](../../visual-basic/language-reference/statements/structure-statement.md)
+- [<span data-ttu-id="0bf45-110">Implements 문</span><span class="sxs-lookup"><span data-stu-id="0bf45-110">Implements Statement</span></span>](../../visual-basic/language-reference/statements/implements-statement.md)
+- [<span data-ttu-id="0bf45-111">Interface 문</span><span class="sxs-lookup"><span data-stu-id="0bf45-111">Interface Statement</span></span>](../../visual-basic/language-reference/statements/interface-statement.md)
