commit bilingual contents

--- a/docs/visual-basic/misc/bc30021.md
+++ b/docs/visual-basic/misc/bc30021.md
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC30021
 ms.assetid: a6e76fc8-9c7f-4e55-8b68-e6e7b03a6737
-ms.openlocfilehash: 397e56f4dd4eaa51152d48a4600e466314e403e3
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 45de6a04a66050ebf5bdd45ab8c4a89a00860976
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53783366"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54647913"
 ---
-# <a name="typeofis-requires-its-left-operand-to-have-a-reference-type-but-this-operand-has-the-type-lttypegt"></a><span data-ttu-id="195f5-102">' TypeOf... '의 왼쪽 피연산자는 참조 형식 이어야 하는데이 피연산자의 형식은 '&lt;형식&gt;'</span><span class="sxs-lookup"><span data-stu-id="195f5-102">'TypeOf...Is' requires its left operand to have a reference type, but this operand has the type '&lt;type&gt;'</span></span>
-<span data-ttu-id="195f5-103">`TypeOf...Is` 식은 개체 변수의 런타임 형식 호환성을 검사합니다.</span><span class="sxs-lookup"><span data-stu-id="195f5-103">The `TypeOf...Is` expression checks an object variable's run-time type compatibility.</span></span> <span data-ttu-id="195f5-104">이 호환성은 값 형식에 대해 정의되지 않았습니다.</span><span class="sxs-lookup"><span data-stu-id="195f5-104">This compatibility is not defined for value types.</span></span>  
+# <a name="typeofis-requires-its-left-operand-to-have-a-reference-type-but-this-operand-has-the-type-lttypegt"></a><span data-ttu-id="f12f3-102">' TypeOf... '의 왼쪽 피연산자는 참조 형식 이어야 하는데이 피연산자의 형식은 '&lt;형식&gt;'</span><span class="sxs-lookup"><span data-stu-id="f12f3-102">'TypeOf...Is' requires its left operand to have a reference type, but this operand has the type '&lt;type&gt;'</span></span>
+<span data-ttu-id="f12f3-103">`TypeOf...Is` 식은 개체 변수의 런타임 형식 호환성을 검사합니다.</span><span class="sxs-lookup"><span data-stu-id="f12f3-103">The `TypeOf...Is` expression checks an object variable's run-time type compatibility.</span></span> <span data-ttu-id="f12f3-104">이 호환성은 값 형식에 대해 정의되지 않았습니다.</span><span class="sxs-lookup"><span data-stu-id="f12f3-104">This compatibility is not defined for value types.</span></span>  
   
- <span data-ttu-id="195f5-105">**오류 ID:** BC30021</span><span class="sxs-lookup"><span data-stu-id="195f5-105">**Error ID:** BC30021</span></span>  
+ <span data-ttu-id="f12f3-105">**오류 ID:** BC30021</span><span class="sxs-lookup"><span data-stu-id="f12f3-105">**Error ID:** BC30021</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="195f5-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="195f5-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="f12f3-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="f12f3-106">To correct this error</span></span>  
   
--   <span data-ttu-id="195f5-107">`Option Strict` 가 `Off`인 경우 `TypeName` 또는 `VarType` 함수를 사용하여 변수의 데이터 형식 정보를 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="195f5-107">If `Option Strict` is `Off`, use the `TypeName` or `VarType` function to obtain the variable's data type information.</span></span>  
+-   <span data-ttu-id="f12f3-107">`Option Strict` 가 `Off`인 경우 `TypeName` 또는 `VarType` 함수를 사용하여 변수의 데이터 형식 정보를 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="f12f3-107">If `Option Strict` is `Off`, use the `TypeName` or `VarType` function to obtain the variable's data type information.</span></span>  
   
--   <span data-ttu-id="195f5-108">`Option Strict` 가 `On`인 경우 변수 선언을 통해 변수의 데이터 형식이 결정됩니다.</span><span class="sxs-lookup"><span data-stu-id="195f5-108">If `Option Strict` is `On`, the variable declaration determines the variable's data type.</span></span>  
+-   <span data-ttu-id="f12f3-108">`Option Strict` 가 `On`인 경우 변수 선언을 통해 변수의 데이터 형식이 결정됩니다.</span><span class="sxs-lookup"><span data-stu-id="f12f3-108">If `Option Strict` is `On`, the variable declaration determines the variable's data type.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="195f5-109">참고 항목</span><span class="sxs-lookup"><span data-stu-id="195f5-109">See Also</span></span>  
- [<span data-ttu-id="195f5-110">Comparison Operators in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="195f5-110">Comparison Operators in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/operators-and-expressions/comparison-operators.md)  
-   
-   
- [<span data-ttu-id="195f5-111">Option Strict 문</span><span class="sxs-lookup"><span data-stu-id="195f5-111">Option Strict Statement</span></span>](../../visual-basic/language-reference/statements/option-strict-statement.md)
+## <a name="see-also"></a><span data-ttu-id="f12f3-109">참고자료</span><span class="sxs-lookup"><span data-stu-id="f12f3-109">See also</span></span>
+- [<span data-ttu-id="f12f3-110">Comparison Operators in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="f12f3-110">Comparison Operators in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/operators-and-expressions/comparison-operators.md)
+
+
+- [<span data-ttu-id="f12f3-111">Option Strict 문</span><span class="sxs-lookup"><span data-stu-id="f12f3-111">Option Strict Statement</span></span>](../../visual-basic/language-reference/statements/option-strict-statement.md)
