--- a/docs/visual-basic/misc/bc32099.md
+++ b/docs/visual-basic/misc/bc32099.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC32099
 ms.assetid: 8ab77752-3b65-48ef-abd1-09cfc0ccb63b
-ms.openlocfilehash: 66e66c5b4f82662fa0221ac414dafce6e5bee4b1
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 2ac2e9fd24948359ef872bb6fc2bc193234e7331
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53770483"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54735372"
 ---
-# <a name="comma-or--expected-type-parameter-list"></a><span data-ttu-id="7c42c-102">쉼표 또는 ')'가 필요합니다(형식 매개 변수 목록).</span><span class="sxs-lookup"><span data-stu-id="7c42c-102">Comma or ')' expected (Type Parameter List)</span></span>
-<span data-ttu-id="7c42c-103">형식 매개 변수 목록에 예기치 않은 요소가 포함되어 있습니다.</span><span class="sxs-lookup"><span data-stu-id="7c42c-103">A type parameter list contains an unexpected element.</span></span> <span data-ttu-id="7c42c-104">쉼표(`,`)를 사용하여 이러한 목록의 형식 매개 변수를 분리하고, 닫는 괄호(`)`)를 사용하여 목록을 종료합니다.</span><span class="sxs-lookup"><span data-stu-id="7c42c-104">Use commas (`,`) to separate type parameters in such a list, and use a closing parenthesis (`)`) to end the list.</span></span>  
+# <a name="comma-or--expected-type-parameter-list"></a><span data-ttu-id="8d950-102">쉼표 또는 ')'가 필요합니다(형식 매개 변수 목록).</span><span class="sxs-lookup"><span data-stu-id="8d950-102">Comma or ')' expected (Type Parameter List)</span></span>
+<span data-ttu-id="8d950-103">형식 매개 변수 목록에 예기치 않은 요소가 포함되어 있습니다.</span><span class="sxs-lookup"><span data-stu-id="8d950-103">A type parameter list contains an unexpected element.</span></span> <span data-ttu-id="8d950-104">쉼표(`,`)를 사용하여 이러한 목록의 형식 매개 변수를 분리하고, 닫는 괄호(`)`)를 사용하여 목록을 종료합니다.</span><span class="sxs-lookup"><span data-stu-id="8d950-104">Use commas (`,`) to separate type parameters in such a list, and use a closing parenthesis (`)`) to end the list.</span></span>  
   
- <span data-ttu-id="7c42c-105">**오류 ID:** BC32099</span><span class="sxs-lookup"><span data-stu-id="7c42c-105">**Error ID:** BC32099</span></span>  
+ <span data-ttu-id="8d950-105">**오류 ID:** BC32099</span><span class="sxs-lookup"><span data-stu-id="8d950-105">**Error ID:** BC32099</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="7c42c-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="7c42c-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="8d950-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="8d950-106">To correct this error</span></span>  
   
--   <span data-ttu-id="7c42c-107">쉼표를 추가하고 형식 매개 변수 목록에 계속 추가하거나 닫는 괄호 문자를 추가하여 목록을 종료합니다.</span><span class="sxs-lookup"><span data-stu-id="7c42c-107">Add a comma and continue the type parameter list, or add a closing parenthesis character to terminate the list.</span></span>  
+-   <span data-ttu-id="8d950-107">쉼표를 추가하고 형식 매개 변수 목록에 계속 추가하거나 닫는 괄호 문자를 추가하여 목록을 종료합니다.</span><span class="sxs-lookup"><span data-stu-id="8d950-107">Add a comma and continue the type parameter list, or add a closing parenthesis character to terminate the list.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="7c42c-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="7c42c-108">See Also</span></span>  
- [<span data-ttu-id="7c42c-109">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="7c42c-109">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)  
- [<span data-ttu-id="7c42c-110">형식 목록</span><span class="sxs-lookup"><span data-stu-id="7c42c-110">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
+## <a name="see-also"></a><span data-ttu-id="8d950-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="8d950-108">See also</span></span>
+- [<span data-ttu-id="8d950-109">Visual Basic의 제네릭 형식</span><span class="sxs-lookup"><span data-stu-id="8d950-109">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="8d950-110">형식 목록</span><span class="sxs-lookup"><span data-stu-id="8d950-110">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
