--- a/docs/visual-basic/misc/bc30067.md
+++ b/docs/visual-basic/misc/bc30067.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30067
 ms.assetid: 207fef65-4383-4120-9e5a-e0e14d168a72
-ms.openlocfilehash: 961f6b4e84d2759d0db3eebac1bdd81cd2704504
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 4d385d58d29ad6003ecd1926fb779f563ffd6ce5
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53765205"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54739341"
 ---
-# <a name="exit-function-is-not-valid-in-a-sub-or-property"></a><span data-ttu-id="6e07e-102">Sub 또는 Property에서는 'Exit Function'을 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="6e07e-102">'Exit Function' is not valid in a Sub or Property</span></span>
-<span data-ttu-id="6e07e-103">`Exit Function`는 `Sub` 프로시저 또는 `Property` 프로시저에 나타납니다.</span><span class="sxs-lookup"><span data-stu-id="6e07e-103">`Exit Function` appears in a `Sub` procedure or a `Property` procedure.</span></span> <span data-ttu-id="6e07e-104">`Exit` 문은 해당 문이 발생한 블록과 일치해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="6e07e-104">An `Exit` statement must match the block in which it occurs.</span></span>  
+# <a name="exit-function-is-not-valid-in-a-sub-or-property"></a><span data-ttu-id="52ef9-102">Sub 또는 Property에서는 'Exit Function'을 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="52ef9-102">'Exit Function' is not valid in a Sub or Property</span></span>
+<span data-ttu-id="52ef9-103">`Exit Function` 는 `Sub` 프로시저 또는 `Property` 프로시저에 나타납니다.</span><span class="sxs-lookup"><span data-stu-id="52ef9-103">`Exit Function` appears in a `Sub` procedure or a `Property` procedure.</span></span> <span data-ttu-id="52ef9-104">`Exit` 문은 해당 문이 발생한 블록과 일치해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="52ef9-104">An `Exit` statement must match the block in which it occurs.</span></span>  
   
- <span data-ttu-id="6e07e-105">**오류 ID:** BC30067</span><span class="sxs-lookup"><span data-stu-id="6e07e-105">**Error ID:** BC30067</span></span>  
+ <span data-ttu-id="52ef9-105">**오류 ID:** BC30067</span><span class="sxs-lookup"><span data-stu-id="52ef9-105">**Error ID:** BC30067</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="6e07e-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="6e07e-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="52ef9-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="52ef9-106">To correct this error</span></span>  
   
--   <span data-ttu-id="6e07e-107">`Exit Function` 를 `Exit Sub` 또는 `Exit Property` 문으로 적절하게 바꿉니다.</span><span class="sxs-lookup"><span data-stu-id="6e07e-107">Replace the `Exit Function` with the `Exit Sub` or `Exit Property` statement as appropriate.</span></span>  
+-   <span data-ttu-id="52ef9-107">`Exit Function` 를 `Exit Sub` 또는 `Exit Property` 문으로 적절하게 바꿉니다.</span><span class="sxs-lookup"><span data-stu-id="52ef9-107">Replace the `Exit Function` with the `Exit Sub` or `Exit Property` statement as appropriate.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="6e07e-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="6e07e-108">See Also</span></span>  
- [<span data-ttu-id="6e07e-109">Sub 프로시저</span><span class="sxs-lookup"><span data-stu-id="6e07e-109">Sub Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/sub-procedures.md)  
- [<span data-ttu-id="6e07e-110">Function 프로시저</span><span class="sxs-lookup"><span data-stu-id="6e07e-110">Function Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/function-procedures.md)  
- [<span data-ttu-id="6e07e-111">속성 프로시저</span><span class="sxs-lookup"><span data-stu-id="6e07e-111">Property Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)
+## <a name="see-also"></a><span data-ttu-id="52ef9-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="52ef9-108">See also</span></span>
+- [<span data-ttu-id="52ef9-109">Sub 프로시저</span><span class="sxs-lookup"><span data-stu-id="52ef9-109">Sub Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/sub-procedures.md)
+- [<span data-ttu-id="52ef9-110">Function 프로시저</span><span class="sxs-lookup"><span data-stu-id="52ef9-110">Function Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/function-procedures.md)
+- [<span data-ttu-id="52ef9-111">속성 프로시저</span><span class="sxs-lookup"><span data-stu-id="52ef9-111">Property Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)
