--- a/docs/visual-basic/misc/bc30183.md
+++ b/docs/visual-basic/misc/bc30183.md
@@ -7,21 +7,21 @@ f1_keywords:
 helpviewer_keywords:
 - BC30183
 ms.assetid: 37206d31-4247-414c-88d0-ebba1b00f10c
-ms.openlocfilehash: 5588ddeeb0cbf39d4eb590b686a9a2e88b28ce47
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: 2a906197a1d6bdcd54e4fb171134f1d621a3b6ba
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33607200"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54603862"
 ---
-# <a name="keyword-is-not-valid-as-an-identifier"></a><span data-ttu-id="fcb6b-102">키워드를 식별자로 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="fcb6b-102">Keyword is not valid as an identifier</span></span>
-<span data-ttu-id="fcb6b-103">키워드는 요소 이름이 필요한 경우에 발생합니다.</span><span class="sxs-lookup"><span data-stu-id="fcb6b-103">A keyword occurs where an element name is required.</span></span> <span data-ttu-id="fcb6b-104">변수 또는 프로시저와 같은 요소에 대한 컨텍스트 호출입니다.</span><span class="sxs-lookup"><span data-stu-id="fcb6b-104">The context calls for an element such as a variable or a procedure.</span></span>  
+# <a name="keyword-is-not-valid-as-an-identifier"></a><span data-ttu-id="082f8-102">키워드를 식별자로 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="082f8-102">Keyword is not valid as an identifier</span></span>
+<span data-ttu-id="082f8-103">키워드는 요소 이름이 필요한 경우에 발생합니다.</span><span class="sxs-lookup"><span data-stu-id="082f8-103">A keyword occurs where an element name is required.</span></span> <span data-ttu-id="082f8-104">변수 또는 프로시저와 같은 요소에 대한 컨텍스트 호출입니다.</span><span class="sxs-lookup"><span data-stu-id="082f8-104">The context calls for an element such as a variable or a procedure.</span></span>  
   
- <span data-ttu-id="fcb6b-105">**오류 ID:** BC30183</span><span class="sxs-lookup"><span data-stu-id="fcb6b-105">**Error ID:** BC30183</span></span>  
+ <span data-ttu-id="082f8-105">**오류 ID:** BC30183</span><span class="sxs-lookup"><span data-stu-id="082f8-105">**Error ID:** BC30183</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="fcb6b-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="fcb6b-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="082f8-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="082f8-106">To correct this error</span></span>  
   
--   <span data-ttu-id="fcb6b-107">키워드를 잘못된 요소 이름으로 바꿉니다.</span><span class="sxs-lookup"><span data-stu-id="fcb6b-107">Replace the keyword with a valid element name.</span></span>  
+-   <span data-ttu-id="082f8-107">키워드를 잘못된 요소 이름으로 바꿉니다.</span><span class="sxs-lookup"><span data-stu-id="082f8-107">Replace the keyword with a valid element name.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="fcb6b-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="fcb6b-108">See Also</span></span>  
- [<span data-ttu-id="fcb6b-109">연산자 및 식</span><span class="sxs-lookup"><span data-stu-id="fcb6b-109">Operators and Expressions</span></span>](../../visual-basic/programming-guide/language-features/operators-and-expressions/index.md)
+## <a name="see-also"></a><span data-ttu-id="082f8-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="082f8-108">See also</span></span>
+- [<span data-ttu-id="082f8-109">연산자 및 식</span><span class="sxs-lookup"><span data-stu-id="082f8-109">Operators and Expressions</span></span>](../../visual-basic/programming-guide/language-features/operators-and-expressions/index.md)
