--- a/docs/visual-basic/misc/bc30412.md
+++ b/docs/visual-basic/misc/bc30412.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30412
 ms.assetid: 8c941523-8e5d-4bf0-8a52-772ecd5d5592
-ms.openlocfilehash: f2544e578b08216412b1e5f3a919fc001626ceb2
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: a6aa157049b821af86134be17545084502b589c3
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53780974"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54674013"
 ---
-# <a name="withevents-variables-must-have-an-as-clause"></a><span data-ttu-id="b7632-102">'WithEvents' 변수에는 'As' 절이 있어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="b7632-102">'WithEvents' variables must have an 'As' clause</span></span>
-<span data-ttu-id="b7632-103">`As` 절에 `WithEvents` 키워드를 제공하지 않았습니다.</span><span class="sxs-lookup"><span data-stu-id="b7632-103">You did not supply an `As` clause with the keyword `WithEvents`.</span></span> <span data-ttu-id="b7632-104">이벤트를 발생시킬 수 있는 특정 클래스로 변수를 선언합니다.</span><span class="sxs-lookup"><span data-stu-id="b7632-104">Declare the variable as the specific class that can raise the events.</span></span>  
+# <a name="withevents-variables-must-have-an-as-clause"></a><span data-ttu-id="1cb3a-102">'WithEvents' 변수에는 'As' 절이 있어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="1cb3a-102">'WithEvents' variables must have an 'As' clause</span></span>
+<span data-ttu-id="1cb3a-103">`As` 절에 `WithEvents`키워드를 제공하지 않았습니다.</span><span class="sxs-lookup"><span data-stu-id="1cb3a-103">You did not supply an `As` clause with the keyword `WithEvents`.</span></span> <span data-ttu-id="1cb3a-104">이벤트를 발생시킬 수 있는 특정 클래스로 변수를 선언합니다.</span><span class="sxs-lookup"><span data-stu-id="1cb3a-104">Declare the variable as the specific class that can raise the events.</span></span>  
   
- <span data-ttu-id="b7632-105">**오류 ID:** BC30412</span><span class="sxs-lookup"><span data-stu-id="b7632-105">**Error ID:** BC30412</span></span>  
+ <span data-ttu-id="1cb3a-105">**오류 ID:** BC30412</span><span class="sxs-lookup"><span data-stu-id="1cb3a-105">**Error ID:** BC30412</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="b7632-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="b7632-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="1cb3a-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="1cb3a-106">To correct this error</span></span>  
   
-1.  <span data-ttu-id="b7632-107">이벤트를 발생시킬 수 있는 클래스를 지정하는 `As` 절을 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="b7632-107">Add the `As` clause that specifies the class that can raise the events.</span></span>  
+1.  <span data-ttu-id="1cb3a-107">이벤트를 발생시킬 수 있는 클래스를 지정하는 `As` 절을 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="1cb3a-107">Add the `As` clause that specifies the class that can raise the events.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="b7632-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="b7632-108">See Also</span></span>  
- [<span data-ttu-id="b7632-109">WithEvents 및 Handles 절</span><span class="sxs-lookup"><span data-stu-id="b7632-109">WithEvents and the Handles clause</span></span>](~/docs/visual-basic/programming-guide/language-features/events/index.md#withevents-and-the-handles-clause)  
- [<span data-ttu-id="b7632-110">Dim 문</span><span class="sxs-lookup"><span data-stu-id="b7632-110">Dim Statement</span></span>](../../visual-basic/language-reference/statements/dim-statement.md)
+## <a name="see-also"></a><span data-ttu-id="1cb3a-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="1cb3a-108">See also</span></span>
+- [<span data-ttu-id="1cb3a-109">WithEvents 및 Handles 절</span><span class="sxs-lookup"><span data-stu-id="1cb3a-109">WithEvents and the Handles clause</span></span>](~/docs/visual-basic/programming-guide/language-features/events/index.md#withevents-and-the-handles-clause)
+- [<span data-ttu-id="1cb3a-110">Dim 문</span><span class="sxs-lookup"><span data-stu-id="1cb3a-110">Dim Statement</span></span>](../../visual-basic/language-reference/statements/dim-statement.md)
