--- a/docs/visual-basic/misc/bc31077.md
+++ b/docs/visual-basic/misc/bc31077.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC31077
 ms.assetid: 9d0c8a3b-2609-44a6-a8d2-c9235264c123
-ms.openlocfilehash: 3c5274fc51f3e4d6d56e3f36650bd1abfa9d660e
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 00bd12a3f46c0c207cd3af339ed4a797314149b6
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53774136"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54728864"
 ---
-# <a name="ltassemblynamegt-is-an-assembly-and-cannot-be-referenced-as-a-module"></a><span data-ttu-id="ac253-102">'&lt;assemblyname&gt;'은 어셈블리 이며 모듈로 참조할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="ac253-102">'&lt;assemblyname&gt;' is an assembly and cannot be referenced as a module</span></span>
-<span data-ttu-id="ac253-103">어셈블리를 모듈로 사용하려고 했습니다.</span><span class="sxs-lookup"><span data-stu-id="ac253-103">An attempt was made to use an assembly as a module.</span></span>  
+# <a name="ltassemblynamegt-is-an-assembly-and-cannot-be-referenced-as-a-module"></a><span data-ttu-id="af22c-102">'&lt;assemblyname&gt;'은 어셈블리 이며 모듈로 참조할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="af22c-102">'&lt;assemblyname&gt;' is an assembly and cannot be referenced as a module</span></span>
+<span data-ttu-id="af22c-103">어셈블리를 모듈로 사용하려고 했습니다.</span><span class="sxs-lookup"><span data-stu-id="af22c-103">An attempt was made to use an assembly as a module.</span></span>  
   
- <span data-ttu-id="ac253-104">**오류 ID:** BC31077</span><span class="sxs-lookup"><span data-stu-id="ac253-104">**Error ID:** BC31077</span></span>  
+ <span data-ttu-id="af22c-104">**오류 ID:** BC31077</span><span class="sxs-lookup"><span data-stu-id="af22c-104">**Error ID:** BC31077</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="ac253-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="ac253-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="af22c-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="af22c-105">To correct this error</span></span>  
   
--   <span data-ttu-id="ac253-106">모듈에 대한 참조를 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="ac253-106">Change the reference to a module.</span></span>  
+-   <span data-ttu-id="af22c-106">모듈에 대한 참조를 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="af22c-106">Change the reference to a module.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="ac253-107">참고 항목</span><span class="sxs-lookup"><span data-stu-id="ac253-107">See Also</span></span>  
- [<span data-ttu-id="ac253-108">Module 문</span><span class="sxs-lookup"><span data-stu-id="ac253-108">Module Statement</span></span>](../../visual-basic/language-reference/statements/module-statement.md)  
- [<span data-ttu-id="ac253-109">어셈블리</span><span class="sxs-lookup"><span data-stu-id="ac253-109">Assembly</span></span>](../../visual-basic/language-reference/modifiers/assembly.md)
+## <a name="see-also"></a><span data-ttu-id="af22c-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="af22c-107">See also</span></span>
+- [<span data-ttu-id="af22c-108">Module 문</span><span class="sxs-lookup"><span data-stu-id="af22c-108">Module Statement</span></span>](../../visual-basic/language-reference/statements/module-statement.md)
+- [<span data-ttu-id="af22c-109">어셈블리</span><span class="sxs-lookup"><span data-stu-id="af22c-109">Assembly</span></span>](../../visual-basic/language-reference/modifiers/assembly.md)
