--- a/docs/visual-basic/misc/bc33010.md
+++ b/docs/visual-basic/misc/bc33010.md
@@ -7,29 +7,29 @@ f1_keywords:
 helpviewer_keywords:
 - BC33010
 ms.assetid: ec4023e7-9ba6-4532-a6b9-4ae6b4f9063a
-ms.openlocfilehash: a44de5fa023bf1c8791373d11dcfaa97f807dc2e
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 50f40fa27ab38937818ab9f431a4bbe71bc16216
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53763398"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54704253"
 ---
-# <a name="lttypegt-parameters-cannot-be-declared-optional"></a><span data-ttu-id="efff9-102">&lt;형식&gt; 매개 변수 'o'로 선언할 수 없습니다</span><span class="sxs-lookup"><span data-stu-id="efff9-102">&lt;type&gt; parameters cannot be declared 'Optional'</span></span>
-<span data-ttu-id="efff9-103">대리자, 이벤트 또는 연산자의 정의가 [Optional](../../visual-basic/language-reference/modifiers/optional.md) 매개 변수를 선언합니다.</span><span class="sxs-lookup"><span data-stu-id="efff9-103">A definition of a delegate, event, or operator declares an [Optional](../../visual-basic/language-reference/modifiers/optional.md) parameter.</span></span>  
+# <a name="lttypegt-parameters-cannot-be-declared-optional"></a><span data-ttu-id="81150-102">&lt;형식&gt; 매개 변수 'o'로 선언할 수 없습니다</span><span class="sxs-lookup"><span data-stu-id="81150-102">&lt;type&gt; parameters cannot be declared 'Optional'</span></span>
+<span data-ttu-id="81150-103">대리자, 이벤트 또는 연산자의 정의가 [Optional](../../visual-basic/language-reference/modifiers/optional.md) 매개 변수를 선언합니다.</span><span class="sxs-lookup"><span data-stu-id="81150-103">A definition of a delegate, event, or operator declares an [Optional](../../visual-basic/language-reference/modifiers/optional.md) parameter.</span></span>  
   
- <span data-ttu-id="efff9-104">`Optional` 매개 변수는 `Declare`, `Function`, `Property`및 `Sub` 매개 변수에서만 사용할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="efff9-104">`Optional` parameters are allowed only on `Declare`, `Function`, `Property`, and `Sub` parameters.</span></span>  
+ <span data-ttu-id="81150-104">`Optional` 매개 변수는 `Declare`, `Function`, `Property`및 `Sub` 매개 변수에서만 사용할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="81150-104">`Optional` parameters are allowed only on `Declare`, `Function`, `Property`, and `Sub` parameters.</span></span>  
   
- <span data-ttu-id="efff9-105">**오류 ID:** BC33010</span><span class="sxs-lookup"><span data-stu-id="efff9-105">**Error ID:** BC33010</span></span>  
+ <span data-ttu-id="81150-105">**오류 ID:** BC33010</span><span class="sxs-lookup"><span data-stu-id="81150-105">**Error ID:** BC33010</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="efff9-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="efff9-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="81150-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="81150-106">To correct this error</span></span>  
   
--   <span data-ttu-id="efff9-107">매개 변수 목록에서 `Optional` 키워드를 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="efff9-107">Remove the `Optional` keyword from the parameter list.</span></span>  
+-   <span data-ttu-id="81150-107">매개 변수 목록에서 `Optional` 키워드를 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="81150-107">Remove the `Optional` keyword from the parameter list.</span></span>  
   
--   <span data-ttu-id="efff9-108">연산자를 정의하는 경우 일련의 오버로드가 있는 `Optional` 기능을 사용할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="efff9-108">If you are defining an operator, you might be able to achieve the `Optional` functionality with a series of overloads.</span></span>  
+-   <span data-ttu-id="81150-108">연산자를 정의하는 경우 일련의 오버로드가 있는 `Optional` 기능을 사용할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="81150-108">If you are defining an operator, you might be able to achieve the `Optional` functionality with a series of overloads.</span></span>  
   
--   <span data-ttu-id="efff9-109">대리자 또는 이벤트를 정의하는 경우 응용 프로그램의 이 부분에 대한 전체 논리를 다시 작업해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="efff9-109">If you are defining a delegate or event, you must rework the overall logic of this part of your application.</span></span> <span data-ttu-id="efff9-110">대리자 또는 이벤트 매개 변수에서 `Optional` 이나 [ParamArray](../../visual-basic/language-reference/modifiers/paramarray.md) 매개 변수 또는 오버로드된 버전을 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="efff9-110">You cannot use `Optional` or [ParamArray](../../visual-basic/language-reference/modifiers/paramarray.md) parameters, or overloaded versions, on delegate or event parameters.</span></span>  
+-   <span data-ttu-id="81150-109">대리자 또는 이벤트를 정의하는 경우 애플리케이션의 이 부분에 대한 전체 논리를 다시 작업해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="81150-109">If you are defining a delegate or event, you must rework the overall logic of this part of your application.</span></span> <span data-ttu-id="81150-110">대리자 또는 이벤트 매개 변수에서 `Optional` 이나 [ParamArray](../../visual-basic/language-reference/modifiers/paramarray.md) 매개 변수 또는 오버로드된 버전을 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="81150-110">You cannot use `Optional` or [ParamArray](../../visual-basic/language-reference/modifiers/paramarray.md) parameters, or overloaded versions, on delegate or event parameters.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="efff9-111">참고 항목</span><span class="sxs-lookup"><span data-stu-id="efff9-111">See Also</span></span>  
- [<span data-ttu-id="efff9-112">오버로드</span><span class="sxs-lookup"><span data-stu-id="efff9-112">Overloads</span></span>](../../visual-basic/language-reference/modifiers/overloads.md)  
- [<span data-ttu-id="efff9-113">연산자 프로시저</span><span class="sxs-lookup"><span data-stu-id="efff9-113">Operator Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)  
- [<span data-ttu-id="efff9-114">Operator 문</span><span class="sxs-lookup"><span data-stu-id="efff9-114">Operator Statement</span></span>](../../visual-basic/language-reference/statements/operator-statement.md)
+## <a name="see-also"></a><span data-ttu-id="81150-111">참고자료</span><span class="sxs-lookup"><span data-stu-id="81150-111">See also</span></span>
+- [<span data-ttu-id="81150-112">오버로드</span><span class="sxs-lookup"><span data-stu-id="81150-112">Overloads</span></span>](../../visual-basic/language-reference/modifiers/overloads.md)
+- [<span data-ttu-id="81150-113">연산자 프로시저</span><span class="sxs-lookup"><span data-stu-id="81150-113">Operator Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)
+- [<span data-ttu-id="81150-114">Operator 문</span><span class="sxs-lookup"><span data-stu-id="81150-114">Operator Statement</span></span>](../../visual-basic/language-reference/statements/operator-statement.md)
