--- a/docs/visual-basic/misc/bc33109.md
+++ b/docs/visual-basic/misc/bc33109.md
@@ -7,29 +7,29 @@ f1_keywords:
 helpviewer_keywords:
 - BC33109
 ms.assetid: 135def20-3535-4239-bffb-43208d1b3f63
-ms.openlocfilehash: 4c3d5089b56b006552291685946252ce9708d942
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 025fb41c1863aededdb1ab061e186d3d75458700
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53774162"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54643867"
 ---
-# <a name="nullable-modifier-cannot-be-specified-in-variable-declarations-with-as-new"></a><span data-ttu-id="b97ba-102">'As New'를 사용하는 변수 선언에는 null 허용 한정자를 지정할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="b97ba-102">Nullable modifier cannot be specified in variable declarations with 'As New'</span></span>
-<span data-ttu-id="b97ba-103">nullable 형식 한정자(?)가 `As New`가 지정된 변수 선언에 포함되어 있습니다.</span><span class="sxs-lookup"><span data-stu-id="b97ba-103">The nullable type modifier (?) has been included in a variable declaration where `As New` has been specified.</span></span> <span data-ttu-id="b97ba-104">다음 예제는 이 오류를 생성합니다.</span><span class="sxs-lookup"><span data-stu-id="b97ba-104">The following example causes this error:</span></span>  
+# <a name="nullable-modifier-cannot-be-specified-in-variable-declarations-with-as-new"></a><span data-ttu-id="c4811-102">'As New'를 사용하는 변수 선언에는 null 허용 한정자를 지정할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="c4811-102">Nullable modifier cannot be specified in variable declarations with 'As New'</span></span>
+<span data-ttu-id="c4811-103">nullable 형식 한정자(?)가 `As New` 가 지정된 변수 선언에 포함되어 있습니다.</span><span class="sxs-lookup"><span data-stu-id="c4811-103">The nullable type modifier (?) has been included in a variable declaration where `As New` has been specified.</span></span> <span data-ttu-id="c4811-104">다음 예제는 이 오류를 생성합니다.</span><span class="sxs-lookup"><span data-stu-id="c4811-104">The following example causes this error:</span></span>  
   
 ```vb  
 Dim num? As New ExampleStructure  
 ```  
   
- <span data-ttu-id="b97ba-105">**오류 ID:** BC33109</span><span class="sxs-lookup"><span data-stu-id="b97ba-105">**Error ID:** BC33109</span></span>  
+ <span data-ttu-id="c4811-105">**오류 ID:** BC33109</span><span class="sxs-lookup"><span data-stu-id="c4811-105">**Error ID:** BC33109</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="b97ba-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="b97ba-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="c4811-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="c4811-106">To correct this error</span></span>  
   
-1.  <span data-ttu-id="b97ba-107">다음 예제와 같이 null 허용 변수 선언에서 `New` 키워드를 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="b97ba-107">Remove the `New` keyword from the nullable variable declaration, as shown in the following example:</span></span>  
+1.  <span data-ttu-id="c4811-107">다음 예제와 같이 null 허용 변수 선언에서 `New` 키워드를 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="c4811-107">Remove the `New` keyword from the nullable variable declaration, as shown in the following example:</span></span>  
   
 ```vb  
 Dim num? As ExampleStructure  
 ```  
   
-## <a name="see-also"></a><span data-ttu-id="b97ba-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="b97ba-108">See Also</span></span>  
- [<span data-ttu-id="b97ba-109">Nullable 값 형식</span><span class="sxs-lookup"><span data-stu-id="b97ba-109">Nullable Value Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/nullable-value-types.md)
+## <a name="see-also"></a><span data-ttu-id="c4811-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="c4811-108">See also</span></span>
+- [<span data-ttu-id="c4811-109">Nullable 값 형식</span><span class="sxs-lookup"><span data-stu-id="c4811-109">Nullable Value Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/nullable-value-types.md)
