commit translated contents

--- a/docs/visual-basic/misc/bc30618.md
+++ b/docs/visual-basic/misc/bc30618.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30618
 ms.assetid: bcd365a4-5d84-4c3c-83dc-40cb4c47f73b
-ms.openlocfilehash: 9166c6178f4dfe6442a3570b3a52d6d1ac751f2a
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 4c0182850cf82466b24fd596565c0121426c0d47
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53760824"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54735301"
 ---
 # <a name="namespace-statements-can-occur-only-at-file-or-namespace-level"></a>'Namespace' 문은 파일이나 네임스페이스 수준에서만 사용할 수 있습니다.
 `Namespace` 문은 `Option` 문, `Imports` 문 및 전역 특성 뒤에, 원본 파일의 다른 모든 선언 앞에 와야 합니다.  
@@ -23,6 +23,6 @@ ms.locfileid: "53760824"
   
 -   `Namespace` 문을 네임스페이스 선언 또는 원본 파일의 맨 위로 이동합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [Namespace 문](../../visual-basic/language-reference/statements/namespace-statement.md)  
- [Visual Basic의 네임 스페이스](../../visual-basic/programming-guide/program-structure/namespaces.md)
+## <a name="see-also"></a>참고자료
+- [Namespace 문](../../visual-basic/language-reference/statements/namespace-statement.md)
+- [Visual Basic의 네임 스페이스](../../visual-basic/programming-guide/program-structure/namespaces.md)
