--- a/docs/visual-basic/misc/bc30166.md
+++ b/docs/visual-basic/misc/bc30166.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30166
 ms.assetid: 40b9dbd3-9b57-450f-a631-b0ab06ca19c4
-ms.openlocfilehash: 72567bb0318055233a3475696a283f9dd6b6591f
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 88a5b3e8f630de42c114c3d040e2c101be7b3480
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53777776"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54682309"
 ---
 # <a name="cannot-create-an-instance-of-module-ltmodulenamegt"></a>모듈의 인스턴스를 만들 수 없습니다. '&lt;modulename&gt;'
 모듈은 단일 공유 인스턴스로만 존재하며 추가 인스턴스를 만들 수 없습니다.  
@@ -23,6 +23,6 @@ ms.locfileid: "53777776"
   
 -   모듈을 클래스로 변경하거나 `New` 절에서 클래스 이름으로 바꿉니다.  
   
-## <a name="see-also"></a>참고 항목  
- [Module 문](../../visual-basic/language-reference/statements/module-statement.md)  
- 
+## <a name="see-also"></a>참고자료
+- [Module 문](../../visual-basic/language-reference/statements/module-statement.md)
+
