--- a/docs/visual-basic/misc/bc30359.md
+++ b/docs/visual-basic/misc/bc30359.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30359
 ms.assetid: d8dd0aa6-ebe1-4601-beec-130edc12f81e
-ms.openlocfilehash: d6b83e7ceb81efaa79ea83205cb32cdc63028100
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: e0e3bb7c0cdef757b11e5618f1c80bdaab0ca34d
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53766570"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54709720"
 ---
 # <a name="default-can-be-applied-to-only-one-property-name-in-a-lttypegt"></a>하나의 속성 이름에 적용할 수 '기본값'을 &lt;형식&gt;
 `Default` 를 한 클래스, 인터페이스 또는 구조체 내에서 둘 이상의 속성 이름에 적용하려고 했습니다.  
@@ -23,5 +23,5 @@ ms.locfileid: "53766570"
   
 -   `Default` 선언 중 하나만 남기고 모두 제거합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [기본](../../visual-basic/language-reference/modifiers/default.md)
+## <a name="see-also"></a>참고자료
+- [기본](../../visual-basic/language-reference/modifiers/default.md)
