--- a/docs/visual-basic/misc/bc30581.md
+++ b/docs/visual-basic/misc/bc30581.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30581
 ms.assetid: 5db7589a-5456-4b3a-9d6b-93d9157f0484
-ms.openlocfilehash: 8c338a7650875dbd3134285aff04d763d0c71dc7
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: b85cea30c481a1e44e3d6c683e075239d2bb35e1
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53784341"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54745580"
 ---
 # <a name="addressof-expression-cannot-be-converted-to-lttypenamegt-because-lttypenamegt-is-not-a-delegate-type"></a>'AddressOf' 식을 변환할 수 없는 '&lt;typename&gt;'하므로'&lt;typename&gt;' 대리자 형식이 아닌
 문이 `AddressOf` 식을 대리자 형식이 아닌 형식으로 변환하려고 합니다.  
@@ -25,6 +25,6 @@ ms.locfileid: "53784341"
   
 -   대상 유형을 대리자 형식으로 변경합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [AddressOf 연산자](../../visual-basic/language-reference/operators/addressof-operator.md)  
- 
+## <a name="see-also"></a>참고자료
+- [AddressOf 연산자](../../visual-basic/language-reference/operators/addressof-operator.md)
+
