--- a/docs/visual-basic/misc/bc30629.md
+++ b/docs/visual-basic/misc/bc30629.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30629
 ms.assetid: f4298ef7-85b1-4543-b764-4c3abda84baa
-ms.openlocfilehash: e335ec97b872815fc2513a9d1186bcedaa7cdc34
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 1ef5a391d85b8e5d4923040ec65fe1f12c0bcde6
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53767376"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54741219"
 ---
 # <a name="structures-cannot-declare-a-non-shared-sub-new-with-no-parameters"></a>구조체에는 매개 변수가 없고 Shared가 아닌 'Sub New'를 선언할 수 없습니다.
 구조체 내에서 선언된`Sub New` 생성자가 인수를 허용해야 하거나 `Shared` 한정자로 선언되어야 합니다.  
@@ -25,6 +25,6 @@ ms.locfileid: "53767376"
   
 -   생성자가 공유하도록 `Shared` 한정자를 적용합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [Structure 문](../../visual-basic/language-reference/statements/structure-statement.md)  
- [구조체](../../visual-basic/programming-guide/language-features/data-types/structures.md)
+## <a name="see-also"></a>참고자료
+- [Structure 문](../../visual-basic/language-reference/statements/structure-statement.md)
+- [구조체](../../visual-basic/programming-guide/language-features/data-types/structures.md)
