--- a/docs/visual-basic/misc/bc30671.md
+++ b/docs/visual-basic/misc/bc30671.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30671
 ms.assetid: 57bbdd58-b58d-4144-8fa6-366a7167df27
-ms.openlocfilehash: 8f769c067dd69eb1890adf7d4354edb872d2d66c
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: c54c4aa8c0e475192ed7427b833412db6ccac7dd
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33614353"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54716978"
 ---
 # <a name="explicit-initialization-is-not-permitted-with-multiple-variables-declared-with-a-single-type-specifier"></a>단일 형식 지정자로 선언된 여러 개의 변수로는 명시적으로 초기화할 수 없습니다.
 같은 줄에서 여러 변수를 선언하는 경우 초기화가 허용되지 않습니다.  
@@ -31,6 +31,6 @@ ms.locfileid: "33614353"
     ' ":" is the same as a new line.  
     ```  
   
-## <a name="see-also"></a>참고 항목  
- [Dim 문](../../visual-basic/language-reference/statements/dim-statement.md)  
- [변수 선언](../../visual-basic/programming-guide/language-features/variables/variable-declaration.md)
+## <a name="see-also"></a>참고자료
+- [Dim 문](../../visual-basic/language-reference/statements/dim-statement.md)
+- [변수 선언](../../visual-basic/programming-guide/language-features/variables/variable-declaration.md)
