--- a/docs/visual-basic/misc/bc30815.md
+++ b/docs/visual-basic/misc/bc30815.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30815
 ms.assetid: 3ae91dd4-567d-4101-951c-834be77c4f07
-ms.openlocfilehash: cab118ffd5f12991a6dd29ed96f288beda8ef833
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 40c12aadb85fd0fa4a41ab0ef603a39e7880d56b
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53757145"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54741026"
 ---
 # <a name="ltfunctionnamegt-is-not-declared-visual-basic-error"></a>'&lt;functionname&gt;' (Visual Basic 오류)으로 선언 되지
 '\<functionname >'가 선언 되지 않았습니다. 파일 I/O 기능은 'Microsoft.VisualBasic' 네임스페이스에서 사용할 수 있습니다.  
@@ -23,6 +23,6 @@ ms.locfileid: "53757145"
   
 -   `My.Computer.FileSystem` `System.IO` 네임스페이스, Visual Basic 런타임 함수 또는 `Microsoft.VisualBasic.FileSystem` 개체에 정의된 파일 I/O 함수를 사용합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [Visual Basic을 사용한 파일 액세스](../../visual-basic/developing-apps/programming/drives-directories-files/file-access.md)  
- [My.Computer.FileSystem](xref:Microsoft.VisualBasic.FileIO.FileSystem)
+## <a name="see-also"></a>참고자료
+- [Visual Basic을 사용한 파일 액세스](../../visual-basic/developing-apps/programming/drives-directories-files/file-access.md)
+- [My.Computer.FileSystem](xref:Microsoft.VisualBasic.FileIO.FileSystem)
