--- a/docs/visual-basic/misc/bc30960.md
+++ b/docs/visual-basic/misc/bc30960.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30960
 ms.assetid: 4ed4bff5-c670-46f6-8360-7287444d50e5
-ms.openlocfilehash: 4d8f719d73c3f5d3188d1acf41620085973825c3
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: cdff0c21616e9025118195258fc7e66b5c8c1ae3
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53770353"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54736067"
 ---
 # <a name="ltelementnamegt-refers-to-type-lttypenamegt-in-project-ltprojectnamegt-but-type-lttypenamegt-was-not-found-in-project-ltprojectnamegt"></a>'&lt;elementname&gt;'형식을 참조'&lt;typename&gt;'in project'&lt;projectname&gt;'에 형식이 '&lt;typename&gt;'에서 찾을 프로젝트'&lt;projectname&gt;'
 식이 다른 프로젝트에서 참조된 클래스, 구조체, 모듈 또는 인터페이스에 액세스하지만 해당 프로젝트에 지정된 형식이 포함되어 있지 않습니다.  
@@ -27,6 +27,6 @@ ms.locfileid: "53770353"
   
 -   해당 형식이 다른 위치에 정의되어 있으면 정의하는 프로젝트 또는 어셈블리를 직접 참조합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [프로젝트의 참조 관리](/visualstudio/ide/managing-references-in-a-project)  
- 
+## <a name="see-also"></a>참고자료
+- [프로젝트의 참조 관리](/visualstudio/ide/managing-references-in-a-project)
+
