--- a/docs/visual-basic/misc/bc31089.md
+++ b/docs/visual-basic/misc/bc31089.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31089
 ms.assetid: 44ea5fe4-4af6-4cea-a4a5-2cf966df2937
-ms.openlocfilehash: 988ee1303f389f7b3294f9ee2b51e424ddb39ff2
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: bc13fbd196ca3c8764318ba6686fce3e103377cc
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53776788"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54724319"
 ---
 # <a name="types-declared-private-must-be-inside-another-type"></a>'Private'으로 선언된 형식은 다른 형식의 내부에 있어야 합니다.
 `Private` 한정자가 다른 형식에 포함되지 않은 형식에서 사용되었습니다.  
@@ -25,5 +25,5 @@ ms.locfileid: "53776788"
   
 2.  다른 형식 내에서 형식을 선언합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [전용](../../visual-basic/language-reference/modifiers/private.md)
+## <a name="see-also"></a>참고자료
+- [전용](../../visual-basic/language-reference/modifiers/private.md)
