--- a/docs/visual-basic/misc/bc32047.md
+++ b/docs/visual-basic/misc/bc32047.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC32047
 ms.assetid: ac7ab76b-5300-4c79-b519-5a1287ed5fa9
-ms.openlocfilehash: df27ad1360f363e153a291659354d8933973010d
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 28b5de02bb2086547cd34334766c107b30cb3cb8
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53768195"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54729300"
 ---
 # <a name="type-parameter-lttypeparameternamegt-can-only-have-one-constraint-that-is-a-class"></a>형식 매개 변수 '&lt;typeparametername&gt;' 클래스는 제약 조건 하나만 사용할 수 있습니다
 제약 조건 목록에는 둘 이상의 클래스가 있습니다.  
@@ -27,5 +27,5 @@ ms.locfileid: "53768195"
   
 -   이 제약 조건 목록에 포함할 수 없는 클래스를 수용하기 위해 추가 형식 매개 변수를 정의할 수도 있습니다.  
   
-## <a name="see-also"></a>참고 항목  
- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+## <a name="see-also"></a>참고자료
+- [Visual Basic의 제네릭 형식](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
