--- a/docs/visual-basic/misc/bc33041.md
+++ b/docs/visual-basic/misc/bc33041.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC33041
 ms.assetid: 5cd56f6d-2f0f-49de-a8e6-59bdb57bdb1d
-ms.openlocfilehash: 2555fbbfd48c1eaaa7b46eb402d7c49d27062503
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: ace25f2753dc580998ba85a6f3fa9e1bdf175de1
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53761578"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54739899"
 ---
 # <a name="operator-ltoperatorgt-must-have-a-second-parameter-of-type-integer"></a>연산자 '&lt;연산자&gt;' 'Integer' 형식의 두 번째 매개 변수가 있어야
 비트 시프트 연산자가 `Integer`가 아닌 형식의 두 번째 매개 변수를 사용하여 선언되었습니다.  
@@ -25,9 +25,9 @@ ms.locfileid: "53761578"
   
 -   `Integer` 값을 반환하도록 비트 시프트 연산자의 정의를 변경합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [연산자 프로시저](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)  
- [Operator 문](../../visual-basic/language-reference/statements/operator-statement.md)  
- [방법: 연산자 정의](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)  
- [방법: 변환 연산자를 정의 합니다.](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)  
- [비트 시프트 연산자](../../visual-basic/language-reference/operators/bit-shift-operators.md)
+## <a name="see-also"></a>참고자료
+- [연산자 프로시저](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)
+- [Operator 문](../../visual-basic/language-reference/statements/operator-statement.md)
+- [방법: 연산자 정의](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)
+- [방법: 변환 연산자를 정의 합니다.](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
+- [비트 시프트 연산자](../../visual-basic/language-reference/operators/bit-shift-operators.md)
