--- a/docs/visual-basic/misc/bc36602.md
+++ b/docs/visual-basic/misc/bc36602.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC36602
 ms.assetid: f96f8c79-86df-4727-bc6d-f0844da21395
-ms.openlocfilehash: 42769193b0a3647641c2cd569afa00c0c00f0cda
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: ceefa7f61b544209f2693f6a68f551f5bb771669
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53766838"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54695311"
 ---
 # <a name="readonly-variable-cannot-be-the-target-of-an-assignment-in-a-lambda-expression-inside-a-constructor"></a>'ReadOnly' 변수는 생성자 내부의 람다 식에서 할당 대상일 수 없습니다.
 람다 식에서 `ReadOnly` 변수를 참조했으며 이는 허용되지 않습니다. 다음 코드는 `ReadOnly` 변수 `m` 를 `ByRef` 매개 변수에 대한 인수로 전송하여 이 오류를 발생시킵니다.  
@@ -73,7 +73,7 @@ End Class
     End Class  
     ```  
   
-## <a name="see-also"></a>참고 항목  
- [람다 식](../../visual-basic/programming-guide/language-features/procedures/lambda-expressions.md)  
- [ReadOnly](../../visual-basic/language-reference/modifiers/readonly.md)  
- [생성자(C++)](~/docs/visual-basic/programming-guide/concepts/object-oriented-programming.md#constructors)
+## <a name="see-also"></a>참고자료
+- [람다 식](../../visual-basic/programming-guide/language-features/procedures/lambda-expressions.md)
+- [ReadOnly](../../visual-basic/language-reference/modifiers/readonly.md)
+- [생성자](~/docs/visual-basic/programming-guide/concepts/object-oriented-programming.md#constructors)
