commit bilingual contents

--- a/docs/visual-basic/misc/bc30629.md
+++ b/docs/visual-basic/misc/bc30629.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30629
 ms.assetid: f4298ef7-85b1-4543-b764-4c3abda84baa
-ms.openlocfilehash: e335ec97b872815fc2513a9d1186bcedaa7cdc34
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 1ef5a391d85b8e5d4923040ec65fe1f12c0bcde6
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53767376"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54741219"
 ---
-# <a name="structures-cannot-declare-a-non-shared-sub-new-with-no-parameters"></a><span data-ttu-id="f3c0d-102">구조체에는 매개 변수가 없고 Shared가 아닌 'Sub New'를 선언할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="f3c0d-102">Structures cannot declare a non-shared 'Sub New' with no parameters</span></span>
-<span data-ttu-id="f3c0d-103">구조체 내에서 선언된`Sub New` 생성자가 인수를 허용해야 하거나 `Shared` 한정자로 선언되어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="f3c0d-103">`Sub New` constructors declared within structures must either accept arguments or be declared with the `Shared` modifier.</span></span>  
+# <a name="structures-cannot-declare-a-non-shared-sub-new-with-no-parameters"></a><span data-ttu-id="33037-102">구조체에는 매개 변수가 없고 Shared가 아닌 'Sub New'를 선언할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="33037-102">Structures cannot declare a non-shared 'Sub New' with no parameters</span></span>
+<span data-ttu-id="33037-103">구조체 내에서 선언된`Sub New` 생성자가 인수를 허용해야 하거나 `Shared` 한정자로 선언되어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="33037-103">`Sub New` constructors declared within structures must either accept arguments or be declared with the `Shared` modifier.</span></span>  
   
- <span data-ttu-id="f3c0d-104">**오류 ID:** BC30629</span><span class="sxs-lookup"><span data-stu-id="f3c0d-104">**Error ID:** BC30629</span></span>  
+ <span data-ttu-id="33037-104">**오류 ID:** BC30629</span><span class="sxs-lookup"><span data-stu-id="33037-104">**Error ID:** BC30629</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="f3c0d-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="f3c0d-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="33037-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="33037-105">To correct this error</span></span>  
   
--   <span data-ttu-id="f3c0d-106">`Sub New` 생성자를 변경하여 인수를 허용하도록 합니다.</span><span class="sxs-lookup"><span data-stu-id="f3c0d-106">Change the `Sub New` constructor so that it accepts arguments.</span></span>  
+-   <span data-ttu-id="33037-106">`Sub New` 생성자를 변경하여 인수를 허용하도록 합니다.</span><span class="sxs-lookup"><span data-stu-id="33037-106">Change the `Sub New` constructor so that it accepts arguments.</span></span>  
   
--   <span data-ttu-id="f3c0d-107">생성자가 공유하도록 `Shared` 한정자를 적용합니다.</span><span class="sxs-lookup"><span data-stu-id="f3c0d-107">Apply the `Shared` modifier to make the constructor shared.</span></span>  
+-   <span data-ttu-id="33037-107">생성자가 공유하도록 `Shared` 한정자를 적용합니다.</span><span class="sxs-lookup"><span data-stu-id="33037-107">Apply the `Shared` modifier to make the constructor shared.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="f3c0d-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="f3c0d-108">See Also</span></span>  
- [<span data-ttu-id="f3c0d-109">Structure 문</span><span class="sxs-lookup"><span data-stu-id="f3c0d-109">Structure Statement</span></span>](../../visual-basic/language-reference/statements/structure-statement.md)  
- [<span data-ttu-id="f3c0d-110">구조체</span><span class="sxs-lookup"><span data-stu-id="f3c0d-110">Structures</span></span>](../../visual-basic/programming-guide/language-features/data-types/structures.md)
+## <a name="see-also"></a><span data-ttu-id="33037-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="33037-108">See also</span></span>
+- [<span data-ttu-id="33037-109">Structure 문</span><span class="sxs-lookup"><span data-stu-id="33037-109">Structure Statement</span></span>](../../visual-basic/language-reference/statements/structure-statement.md)
+- [<span data-ttu-id="33037-110">구조체</span><span class="sxs-lookup"><span data-stu-id="33037-110">Structures</span></span>](../../visual-basic/programming-guide/language-features/data-types/structures.md)
