--- a/docs/visual-basic/misc/bc30359.md
+++ b/docs/visual-basic/misc/bc30359.md
@@ -7,21 +7,21 @@ f1_keywords:
 helpviewer_keywords:
 - BC30359
 ms.assetid: d8dd0aa6-ebe1-4601-beec-130edc12f81e
-ms.openlocfilehash: d6b83e7ceb81efaa79ea83205cb32cdc63028100
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: e0e3bb7c0cdef757b11e5618f1c80bdaab0ca34d
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53766570"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54709720"
 ---
-# <a name="default-can-be-applied-to-only-one-property-name-in-a-lttypegt"></a><span data-ttu-id="c1dfa-102">하나의 속성 이름에 적용할 수 '기본값'을 &lt;형식&gt;</span><span class="sxs-lookup"><span data-stu-id="c1dfa-102">'Default' can be applied to only one property name in a &lt;type&gt;</span></span>
-<span data-ttu-id="c1dfa-103">`Default` 를 한 클래스, 인터페이스 또는 구조체 내에서 둘 이상의 속성 이름에 적용하려고 했습니다.</span><span class="sxs-lookup"><span data-stu-id="c1dfa-103">You have attempted to apply `Default` to more than one property name within a class, interface, or structure.</span></span>  
+# <a name="default-can-be-applied-to-only-one-property-name-in-a-lttypegt"></a><span data-ttu-id="a6d76-102">하나의 속성 이름에 적용할 수 '기본값'을 &lt;형식&gt;</span><span class="sxs-lookup"><span data-stu-id="a6d76-102">'Default' can be applied to only one property name in a &lt;type&gt;</span></span>
+<span data-ttu-id="a6d76-103">`Default` 를 한 클래스, 인터페이스 또는 구조체 내에서 둘 이상의 속성 이름에 적용하려고 했습니다.</span><span class="sxs-lookup"><span data-stu-id="a6d76-103">You have attempted to apply `Default` to more than one property name within a class, interface, or structure.</span></span>  
   
- <span data-ttu-id="c1dfa-104">**오류 ID:** BC30359</span><span class="sxs-lookup"><span data-stu-id="c1dfa-104">**Error ID:** BC30359</span></span>  
+ <span data-ttu-id="a6d76-104">**오류 ID:** BC30359</span><span class="sxs-lookup"><span data-stu-id="a6d76-104">**Error ID:** BC30359</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="c1dfa-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="c1dfa-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="a6d76-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="a6d76-105">To correct this error</span></span>  
   
--   <span data-ttu-id="c1dfa-106">`Default` 선언 중 하나만 남기고 모두 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="c1dfa-106">Remove all but one of the `Default` declarations.</span></span>  
+-   <span data-ttu-id="a6d76-106">`Default` 선언 중 하나만 남기고 모두 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="a6d76-106">Remove all but one of the `Default` declarations.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="c1dfa-107">참고 항목</span><span class="sxs-lookup"><span data-stu-id="c1dfa-107">See Also</span></span>  
- [<span data-ttu-id="c1dfa-108">기본</span><span class="sxs-lookup"><span data-stu-id="c1dfa-108">Default</span></span>](../../visual-basic/language-reference/modifiers/default.md)
+## <a name="see-also"></a><span data-ttu-id="a6d76-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="a6d76-107">See also</span></span>
+- [<span data-ttu-id="a6d76-108">기본</span><span class="sxs-lookup"><span data-stu-id="a6d76-108">Default</span></span>](../../visual-basic/language-reference/modifiers/default.md)
