--- a/docs/visual-basic/misc/bc30581.md
+++ b/docs/visual-basic/misc/bc30581.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30581
 ms.assetid: 5db7589a-5456-4b3a-9d6b-93d9157f0484
-ms.openlocfilehash: 8c338a7650875dbd3134285aff04d763d0c71dc7
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: b85cea30c481a1e44e3d6c683e075239d2bb35e1
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53784341"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54745580"
 ---
-# <a name="addressof-expression-cannot-be-converted-to-lttypenamegt-because-lttypenamegt-is-not-a-delegate-type"></a><span data-ttu-id="1d8fe-102">'AddressOf' 식을 변환할 수 없는 '&lt;typename&gt;'하므로'&lt;typename&gt;' 대리자 형식이 아닌</span><span class="sxs-lookup"><span data-stu-id="1d8fe-102">'AddressOf' expression cannot be converted to '&lt;typename&gt;' because '&lt;typename&gt;' is not a delegate type</span></span>
-<span data-ttu-id="1d8fe-103">문이 `AddressOf` 식을 대리자 형식이 아닌 형식으로 변환하려고 합니다.</span><span class="sxs-lookup"><span data-stu-id="1d8fe-103">A statement attempts to convert an `AddressOf` expression to a type that is not a delegate type.</span></span>  
+# <a name="addressof-expression-cannot-be-converted-to-lttypenamegt-because-lttypenamegt-is-not-a-delegate-type"></a><span data-ttu-id="108cc-102">'AddressOf' 식을 변환할 수 없는 '&lt;typename&gt;'하므로'&lt;typename&gt;' 대리자 형식이 아닌</span><span class="sxs-lookup"><span data-stu-id="108cc-102">'AddressOf' expression cannot be converted to '&lt;typename&gt;' because '&lt;typename&gt;' is not a delegate type</span></span>
+<span data-ttu-id="108cc-103">문이 `AddressOf` 식을 대리자 형식이 아닌 형식으로 변환하려고 합니다.</span><span class="sxs-lookup"><span data-stu-id="108cc-103">A statement attempts to convert an `AddressOf` expression to a type that is not a delegate type.</span></span>  
   
- <span data-ttu-id="1d8fe-104">`AddressOf` 연산자는 특정 프로시저를 참조하는 프로시저 대리자 인스턴스를 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="1d8fe-104">The `AddressOf` operator creates a procedure delegate instance that references a specific procedure.</span></span> <span data-ttu-id="1d8fe-105">`AddressOf` 는 대리자 생성자의 피연산자로 사용하거나 대리자의 형식이 컴파일러에 의해 결정될 수 있는 컨텍스트에서 사용할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="1d8fe-105">`AddressOf` can be used as the operand of a delegate constructor, or it can be used in a context in which the type of the delegate can be determined by the compiler.</span></span>  
+ <span data-ttu-id="108cc-104">`AddressOf` 연산자는 특정 프로시저를 참조하는 프로시저 대리자 인스턴스를 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="108cc-104">The `AddressOf` operator creates a procedure delegate instance that references a specific procedure.</span></span> <span data-ttu-id="108cc-105">`AddressOf` 는 대리자 생성자의 피연산자로 사용하거나 대리자의 형식이 컴파일러에 의해 결정될 수 있는 컨텍스트에서 사용할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="108cc-105">`AddressOf` can be used as the operand of a delegate constructor, or it can be used in a context in which the type of the delegate can be determined by the compiler.</span></span>  
   
- <span data-ttu-id="1d8fe-106">**오류 ID:** BC30581</span><span class="sxs-lookup"><span data-stu-id="1d8fe-106">**Error ID:** BC30581</span></span>  
+ <span data-ttu-id="108cc-106">**오류 ID:** BC30581</span><span class="sxs-lookup"><span data-stu-id="108cc-106">**Error ID:** BC30581</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="1d8fe-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="1d8fe-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="108cc-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="108cc-107">To correct this error</span></span>  
   
--   <span data-ttu-id="1d8fe-108">대상 유형을 대리자 형식으로 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="1d8fe-108">Change the target type to a delegate type.</span></span>  
+-   <span data-ttu-id="108cc-108">대상 유형을 대리자 형식으로 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="108cc-108">Change the target type to a delegate type.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="1d8fe-109">참고 항목</span><span class="sxs-lookup"><span data-stu-id="1d8fe-109">See Also</span></span>  
- [<span data-ttu-id="1d8fe-110">AddressOf 연산자</span><span class="sxs-lookup"><span data-stu-id="1d8fe-110">AddressOf Operator</span></span>](../../visual-basic/language-reference/operators/addressof-operator.md)  
- 
+## <a name="see-also"></a><span data-ttu-id="108cc-109">참고자료</span><span class="sxs-lookup"><span data-stu-id="108cc-109">See also</span></span>
+- [<span data-ttu-id="108cc-110">AddressOf 연산자</span><span class="sxs-lookup"><span data-stu-id="108cc-110">AddressOf Operator</span></span>](../../visual-basic/language-reference/operators/addressof-operator.md)
+
