--- a/docs/visual-basic/misc/bc30618.md
+++ b/docs/visual-basic/misc/bc30618.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30618
 ms.assetid: bcd365a4-5d84-4c3c-83dc-40cb4c47f73b
-ms.openlocfilehash: 9166c6178f4dfe6442a3570b3a52d6d1ac751f2a
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 4c0182850cf82466b24fd596565c0121426c0d47
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53760824"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54735301"
 ---
-# <a name="namespace-statements-can-occur-only-at-file-or-namespace-level"></a><span data-ttu-id="04e1d-102">'Namespace' 문은 파일이나 네임스페이스 수준에서만 사용할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="04e1d-102">'Namespace' statements can occur only at file or namespace level</span></span>
-<span data-ttu-id="04e1d-103">`Namespace` 문은 `Option` 문, `Imports` 문 및 전역 특성 뒤에, 원본 파일의 다른 모든 선언 앞에 와야 합니다.</span><span class="sxs-lookup"><span data-stu-id="04e1d-103">`Namespace` statements must appear after `Option` statements, `Imports` statements, and global attributes, but before all other declarations in your source file.</span></span>  
+# <a name="namespace-statements-can-occur-only-at-file-or-namespace-level"></a><span data-ttu-id="4bf1a-102">'Namespace' 문은 파일이나 네임스페이스 수준에서만 사용할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="4bf1a-102">'Namespace' statements can occur only at file or namespace level</span></span>
+<span data-ttu-id="4bf1a-103">`Namespace` 문은 `Option` 문, `Imports` 문 및 전역 특성 뒤에, 원본 파일의 다른 모든 선언 앞에 와야 합니다.</span><span class="sxs-lookup"><span data-stu-id="4bf1a-103">`Namespace` statements must appear after `Option` statements, `Imports` statements, and global attributes, but before all other declarations in your source file.</span></span>  
   
- <span data-ttu-id="04e1d-104">**오류 ID:** BC30618</span><span class="sxs-lookup"><span data-stu-id="04e1d-104">**Error ID:** BC30618</span></span>  
+ <span data-ttu-id="4bf1a-104">**오류 ID:** BC30618</span><span class="sxs-lookup"><span data-stu-id="4bf1a-104">**Error ID:** BC30618</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="04e1d-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="04e1d-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="4bf1a-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="4bf1a-105">To correct this error</span></span>  
   
--   <span data-ttu-id="04e1d-106">`Namespace` 문을 네임스페이스 선언 또는 원본 파일의 맨 위로 이동합니다.</span><span class="sxs-lookup"><span data-stu-id="04e1d-106">Move the `Namespace` statement to the top of your namespace declaration or source file.</span></span>  
+-   <span data-ttu-id="4bf1a-106">`Namespace` 문을 네임스페이스 선언 또는 원본 파일의 맨 위로 이동합니다.</span><span class="sxs-lookup"><span data-stu-id="4bf1a-106">Move the `Namespace` statement to the top of your namespace declaration or source file.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="04e1d-107">참고 항목</span><span class="sxs-lookup"><span data-stu-id="04e1d-107">See Also</span></span>  
- [<span data-ttu-id="04e1d-108">Namespace 문</span><span class="sxs-lookup"><span data-stu-id="04e1d-108">Namespace Statement</span></span>](../../visual-basic/language-reference/statements/namespace-statement.md)  
- [<span data-ttu-id="04e1d-109">Visual Basic의 네임 스페이스</span><span class="sxs-lookup"><span data-stu-id="04e1d-109">Namespaces in Visual Basic</span></span>](../../visual-basic/programming-guide/program-structure/namespaces.md)
+## <a name="see-also"></a><span data-ttu-id="4bf1a-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="4bf1a-107">See also</span></span>
+- [<span data-ttu-id="4bf1a-108">Namespace 문</span><span class="sxs-lookup"><span data-stu-id="4bf1a-108">Namespace Statement</span></span>](../../visual-basic/language-reference/statements/namespace-statement.md)
+- [<span data-ttu-id="4bf1a-109">Visual Basic의 네임 스페이스</span><span class="sxs-lookup"><span data-stu-id="4bf1a-109">Namespaces in Visual Basic</span></span>](../../visual-basic/programming-guide/program-structure/namespaces.md)
