--- a/docs/visual-basic/misc/bc30671.md
+++ b/docs/visual-basic/misc/bc30671.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30671
 ms.assetid: 57bbdd58-b58d-4144-8fa6-366a7167df27
-ms.openlocfilehash: 8f769c067dd69eb1890adf7d4354edb872d2d66c
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: c54c4aa8c0e475192ed7427b833412db6ccac7dd
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33614353"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54716978"
 ---
-# <a name="explicit-initialization-is-not-permitted-with-multiple-variables-declared-with-a-single-type-specifier"></a><span data-ttu-id="c5f93-102">단일 형식 지정자로 선언된 여러 개의 변수로는 명시적으로 초기화할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="c5f93-102">Explicit initialization is not permitted with multiple variables declared with a single type specifier</span></span>
-<span data-ttu-id="c5f93-103">같은 줄에서 여러 변수를 선언하는 경우 초기화가 허용되지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="c5f93-103">Initialization is not allowed when multiple variables are declared on the same line.</span></span>  
+# <a name="explicit-initialization-is-not-permitted-with-multiple-variables-declared-with-a-single-type-specifier"></a><span data-ttu-id="f4922-102">단일 형식 지정자로 선언된 여러 개의 변수로는 명시적으로 초기화할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="f4922-102">Explicit initialization is not permitted with multiple variables declared with a single type specifier</span></span>
+<span data-ttu-id="f4922-103">같은 줄에서 여러 변수를 선언하는 경우 초기화가 허용되지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="f4922-103">Initialization is not allowed when multiple variables are declared on the same line.</span></span>  
   
- <span data-ttu-id="c5f93-104">**오류 ID:** BC30671</span><span class="sxs-lookup"><span data-stu-id="c5f93-104">**Error ID:** BC30671</span></span>  
+ <span data-ttu-id="f4922-104">**오류 ID:** BC30671</span><span class="sxs-lookup"><span data-stu-id="f4922-104">**Error ID:** BC30671</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="c5f93-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="c5f93-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="f4922-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="f4922-105">To correct this error</span></span>  
   
-1.  <span data-ttu-id="c5f93-106">각 항목을 별도로 선언하고 초기화합니다.</span><span class="sxs-lookup"><span data-stu-id="c5f93-106">Declare and initialize each item separately.</span></span>  
+1.  <span data-ttu-id="f4922-106">각 항목을 별도로 선언하고 초기화합니다.</span><span class="sxs-lookup"><span data-stu-id="f4922-106">Declare and initialize each item separately.</span></span>  
   
-2.  <span data-ttu-id="c5f93-107">여러 항목을 함께 선언한 다음 각 항목을 초기화합니다. 예를 들면 다음과 같습니다.</span><span class="sxs-lookup"><span data-stu-id="c5f93-107">Declare multiple items together and then initialize each item; for example:</span></span>  
+2.  <span data-ttu-id="f4922-107">여러 항목을 함께 선언한 다음 각 항목을 초기화합니다. 예를 들면 다음과 같습니다.</span><span class="sxs-lookup"><span data-stu-id="f4922-107">Declare multiple items together and then initialize each item; for example:</span></span>  
   
     ```  
     Dim x, b, i As Integer  
@@ -31,6 +31,6 @@ ms.locfileid: "33614353"
     ' ":" is the same as a new line.  
     ```  
   
-## <a name="see-also"></a><span data-ttu-id="c5f93-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="c5f93-108">See Also</span></span>  
- [<span data-ttu-id="c5f93-109">Dim 문</span><span class="sxs-lookup"><span data-stu-id="c5f93-109">Dim Statement</span></span>](../../visual-basic/language-reference/statements/dim-statement.md)  
- [<span data-ttu-id="c5f93-110">변수 선언</span><span class="sxs-lookup"><span data-stu-id="c5f93-110">Variable Declaration</span></span>](../../visual-basic/programming-guide/language-features/variables/variable-declaration.md)
+## <a name="see-also"></a><span data-ttu-id="f4922-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="f4922-108">See also</span></span>
+- [<span data-ttu-id="f4922-109">Dim 문</span><span class="sxs-lookup"><span data-stu-id="f4922-109">Dim Statement</span></span>](../../visual-basic/language-reference/statements/dim-statement.md)
+- [<span data-ttu-id="f4922-110">변수 선언</span><span class="sxs-lookup"><span data-stu-id="f4922-110">Variable Declaration</span></span>](../../visual-basic/programming-guide/language-features/variables/variable-declaration.md)
