--- a/docs/visual-basic/misc/bc30815.md
+++ b/docs/visual-basic/misc/bc30815.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30815
 ms.assetid: 3ae91dd4-567d-4101-951c-834be77c4f07
-ms.openlocfilehash: cab118ffd5f12991a6dd29ed96f288beda8ef833
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 40c12aadb85fd0fa4a41ab0ef603a39e7880d56b
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53757145"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54741026"
 ---
-# <a name="ltfunctionnamegt-is-not-declared-visual-basic-error"></a><span data-ttu-id="9310d-102">'&lt;functionname&gt;' (Visual Basic 오류)으로 선언 되지</span><span class="sxs-lookup"><span data-stu-id="9310d-102">'&lt;functionname&gt;' is not declared (Visual Basic Error)</span></span>
-<span data-ttu-id="9310d-103">'\<functionname >'가 선언 되지 않았습니다.</span><span class="sxs-lookup"><span data-stu-id="9310d-103">'\<functionname>' is not declared.</span></span> <span data-ttu-id="9310d-104">파일 I/O 기능은 'Microsoft.VisualBasic' 네임스페이스에서 사용할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="9310d-104">File I/O functionality is available in the Microsoft.VisualBasic namespace.</span></span>  
+# <a name="ltfunctionnamegt-is-not-declared-visual-basic-error"></a><span data-ttu-id="034bb-102">'&lt;functionname&gt;' (Visual Basic 오류)으로 선언 되지</span><span class="sxs-lookup"><span data-stu-id="034bb-102">'&lt;functionname&gt;' is not declared (Visual Basic Error)</span></span>
+<span data-ttu-id="034bb-103">'\<functionname >'가 선언 되지 않았습니다.</span><span class="sxs-lookup"><span data-stu-id="034bb-103">'\<functionname>' is not declared.</span></span> <span data-ttu-id="034bb-104">파일 I/O 기능은 'Microsoft.VisualBasic' 네임스페이스에서 사용할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="034bb-104">File I/O functionality is available in the Microsoft.VisualBasic namespace.</span></span>  
   
- <span data-ttu-id="9310d-105">**오류 ID:** BC30815</span><span class="sxs-lookup"><span data-stu-id="9310d-105">**Error ID:** BC30815</span></span>  
+ <span data-ttu-id="034bb-105">**오류 ID:** BC30815</span><span class="sxs-lookup"><span data-stu-id="034bb-105">**Error ID:** BC30815</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="9310d-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="9310d-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="034bb-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="034bb-106">To correct this error</span></span>  
   
--   <span data-ttu-id="9310d-107">`My.Computer.FileSystem` `System.IO` 네임스페이스, Visual Basic 런타임 함수 또는 `Microsoft.VisualBasic.FileSystem` 개체에 정의된 파일 I/O 함수를 사용합니다.</span><span class="sxs-lookup"><span data-stu-id="9310d-107">Use the file I/O functions defined in `My.Computer.FileSystem`, the `System.IO` namespace, Visual Basic run-time functions, or the `Microsoft.VisualBasic.FileSystem` object.</span></span>  
+-   <span data-ttu-id="034bb-107">`My.Computer.FileSystem` `System.IO` 네임스페이스, Visual Basic 런타임 함수 또는 `Microsoft.VisualBasic.FileSystem` 개체에 정의된 파일 I/O 함수를 사용합니다.</span><span class="sxs-lookup"><span data-stu-id="034bb-107">Use the file I/O functions defined in `My.Computer.FileSystem`, the `System.IO` namespace, Visual Basic run-time functions, or the `Microsoft.VisualBasic.FileSystem` object.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="9310d-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="9310d-108">See Also</span></span>  
- [<span data-ttu-id="9310d-109">Visual Basic을 사용한 파일 액세스</span><span class="sxs-lookup"><span data-stu-id="9310d-109">File Access with Visual Basic</span></span>](../../visual-basic/developing-apps/programming/drives-directories-files/file-access.md)  
- [<span data-ttu-id="9310d-110">My.Computer.FileSystem</span><span class="sxs-lookup"><span data-stu-id="9310d-110">My.Computer.FileSystem</span></span>](xref:Microsoft.VisualBasic.FileIO.FileSystem)
+## <a name="see-also"></a><span data-ttu-id="034bb-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="034bb-108">See also</span></span>
+- [<span data-ttu-id="034bb-109">Visual Basic을 사용한 파일 액세스</span><span class="sxs-lookup"><span data-stu-id="034bb-109">File Access with Visual Basic</span></span>](../../visual-basic/developing-apps/programming/drives-directories-files/file-access.md)
+- [<span data-ttu-id="034bb-110">My.Computer.FileSystem</span><span class="sxs-lookup"><span data-stu-id="034bb-110">My.Computer.FileSystem</span></span>](xref:Microsoft.VisualBasic.FileIO.FileSystem)
