--- a/docs/visual-basic/misc/bc31089.md
+++ b/docs/visual-basic/misc/bc31089.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC31089
 ms.assetid: 44ea5fe4-4af6-4cea-a4a5-2cf966df2937
-ms.openlocfilehash: 988ee1303f389f7b3294f9ee2b51e424ddb39ff2
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: bc13fbd196ca3c8764318ba6686fce3e103377cc
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53776788"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54724319"
 ---
-# <a name="types-declared-private-must-be-inside-another-type"></a><span data-ttu-id="8700f-102">'Private'으로 선언된 형식은 다른 형식의 내부에 있어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="8700f-102">Types declared 'Private' must be inside another type</span></span>
-<span data-ttu-id="8700f-103">`Private` 한정자가 다른 형식에 포함되지 않은 형식에서 사용되었습니다.</span><span class="sxs-lookup"><span data-stu-id="8700f-103">The `Private` modifier was used on a type not inside another type.</span></span>  
+# <a name="types-declared-private-must-be-inside-another-type"></a><span data-ttu-id="dac9f-102">'Private'으로 선언된 형식은 다른 형식의 내부에 있어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="dac9f-102">Types declared 'Private' must be inside another type</span></span>
+<span data-ttu-id="dac9f-103">`Private` 한정자가 다른 형식에 포함되지 않은 형식에서 사용되었습니다.</span><span class="sxs-lookup"><span data-stu-id="dac9f-103">The `Private` modifier was used on a type not inside another type.</span></span>  
   
- <span data-ttu-id="8700f-104">**오류 ID:** BC31089</span><span class="sxs-lookup"><span data-stu-id="8700f-104">**Error ID:** BC31089</span></span>  
+ <span data-ttu-id="dac9f-104">**오류 ID:** BC31089</span><span class="sxs-lookup"><span data-stu-id="dac9f-104">**Error ID:** BC31089</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="8700f-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="8700f-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="dac9f-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="dac9f-105">To correct this error</span></span>  
   
-1.  <span data-ttu-id="8700f-106">`Friend`와 같은 덜 제한적인 액세스 한정자를 사용합니다.</span><span class="sxs-lookup"><span data-stu-id="8700f-106">Use a less restrictive access modifier, such as `Friend`.</span></span>  
+1.  <span data-ttu-id="dac9f-106">`Friend`와 같은 덜 제한적인 액세스 한정자를 사용합니다.</span><span class="sxs-lookup"><span data-stu-id="dac9f-106">Use a less restrictive access modifier, such as `Friend`.</span></span>  
   
-2.  <span data-ttu-id="8700f-107">다른 형식 내에서 형식을 선언합니다.</span><span class="sxs-lookup"><span data-stu-id="8700f-107">Declare the type within another type.</span></span>  
+2.  <span data-ttu-id="dac9f-107">다른 형식 내에서 형식을 선언합니다.</span><span class="sxs-lookup"><span data-stu-id="dac9f-107">Declare the type within another type.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="8700f-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="8700f-108">See Also</span></span>  
- [<span data-ttu-id="8700f-109">전용</span><span class="sxs-lookup"><span data-stu-id="8700f-109">Private</span></span>](../../visual-basic/language-reference/modifiers/private.md)
+## <a name="see-also"></a><span data-ttu-id="dac9f-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="dac9f-108">See also</span></span>
+- [<span data-ttu-id="dac9f-109">전용</span><span class="sxs-lookup"><span data-stu-id="dac9f-109">Private</span></span>](../../visual-basic/language-reference/modifiers/private.md)
