--- a/docs/visual-basic/misc/bc33041.md
+++ b/docs/visual-basic/misc/bc33041.md
@@ -7,27 +7,27 @@ f1_keywords:
 helpviewer_keywords:
 - BC33041
 ms.assetid: 5cd56f6d-2f0f-49de-a8e6-59bdb57bdb1d
-ms.openlocfilehash: 2555fbbfd48c1eaaa7b46eb402d7c49d27062503
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: ace25f2753dc580998ba85a6f3fa9e1bdf175de1
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53761578"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54739899"
 ---
-# <a name="operator-ltoperatorgt-must-have-a-second-parameter-of-type-integer"></a><span data-ttu-id="47d57-102">연산자 '&lt;연산자&gt;' 'Integer' 형식의 두 번째 매개 변수가 있어야</span><span class="sxs-lookup"><span data-stu-id="47d57-102">Operator '&lt;operator&gt;' must have a second parameter of type 'Integer'</span></span>
-<span data-ttu-id="47d57-103">비트 시프트 연산자가 `Integer`가 아닌 형식의 두 번째 매개 변수를 사용하여 선언되었습니다.</span><span class="sxs-lookup"><span data-stu-id="47d57-103">A bit-shift operator is declared with the second parameter of a type other than `Integer`.</span></span>  
+# <a name="operator-ltoperatorgt-must-have-a-second-parameter-of-type-integer"></a><span data-ttu-id="7541e-102">연산자 '&lt;연산자&gt;' 'Integer' 형식의 두 번째 매개 변수가 있어야</span><span class="sxs-lookup"><span data-stu-id="7541e-102">Operator '&lt;operator&gt;' must have a second parameter of type 'Integer'</span></span>
+<span data-ttu-id="7541e-103">비트 시프트 연산자가 `Integer`가 아닌 형식의 두 번째 매개 변수를 사용하여 선언되었습니다.</span><span class="sxs-lookup"><span data-stu-id="7541e-103">A bit-shift operator is declared with the second parameter of a type other than `Integer`.</span></span>  
   
- <span data-ttu-id="47d57-104">식에서 오른쪽 시프트(`>>`) 또는 왼쪽 시프트(`<<`) 연산자를 사용하는 경우 두 번째 피연산자에서 시프트 횟수를 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="47d57-104">When you use the right shift (`>>`) or left shift (`<<`) operator in an expression, you specify the shift amount in the second operand.</span></span> <span data-ttu-id="47d57-105">이 피연산자에 대 한 Visual Basic로 확대 되는 데이터 형식을 제공할 수 있습니다 `Integer`합니다.</span><span class="sxs-lookup"><span data-stu-id="47d57-105">For this operand, Visual Basic allows you to supply any data type that widens to `Integer`.</span></span> <span data-ttu-id="47d57-106">그러나 두 번째 피연산자의 정의는 엄격하게 `Integer`입니다.</span><span class="sxs-lookup"><span data-stu-id="47d57-106">However, the definition of the second operand is strictly `Integer`.</span></span> <span data-ttu-id="47d57-107">해당 클래스 또는 구조체에서 비트 시프트 연산자를 사용하는 클래스 또는 구조체를 정의하는 경우 정의에서 두 번째 피연산자에 대해 `Integer` 를 지정해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="47d57-107">If you define a class or structure with a bit-shift operator on that class or structure, your definition must specify `Integer` for the second operand.</span></span>  
+ <span data-ttu-id="7541e-104">식에서 오른쪽 시프트(`>>`) 또는 왼쪽 시프트(`<<`) 연산자를 사용하는 경우 두 번째 피연산자에서 시프트 횟수를 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="7541e-104">When you use the right shift (`>>`) or left shift (`<<`) operator in an expression, you specify the shift amount in the second operand.</span></span> <span data-ttu-id="7541e-105">이 피연산자에 대 한 Visual Basic로 확대 되는 데이터 형식을 제공할 수 있습니다 `Integer`합니다.</span><span class="sxs-lookup"><span data-stu-id="7541e-105">For this operand, Visual Basic allows you to supply any data type that widens to `Integer`.</span></span> <span data-ttu-id="7541e-106">그러나 두 번째 피연산자의 정의는 엄격하게 `Integer`입니다.</span><span class="sxs-lookup"><span data-stu-id="7541e-106">However, the definition of the second operand is strictly `Integer`.</span></span> <span data-ttu-id="7541e-107">해당 클래스 또는 구조체에서 비트 시프트 연산자를 사용하는 클래스 또는 구조체를 정의하는 경우 정의에서 두 번째 피연산자에 대해 `Integer` 를 지정해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="7541e-107">If you define a class or structure with a bit-shift operator on that class or structure, your definition must specify `Integer` for the second operand.</span></span>  
   
- <span data-ttu-id="47d57-108">**오류 ID:** BC33041</span><span class="sxs-lookup"><span data-stu-id="47d57-108">**Error ID:** BC33041</span></span>  
+ <span data-ttu-id="7541e-108">**오류 ID:** BC33041</span><span class="sxs-lookup"><span data-stu-id="7541e-108">**Error ID:** BC33041</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="47d57-109">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="47d57-109">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="7541e-109">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="7541e-109">To correct this error</span></span>  
   
--   <span data-ttu-id="47d57-110">`Integer` 값을 반환하도록 비트 시프트 연산자의 정의를 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="47d57-110">Change the definition of the bit-shift operator to return an `Integer` value.</span></span>  
+-   <span data-ttu-id="7541e-110">`Integer` 값을 반환하도록 비트 시프트 연산자의 정의를 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="7541e-110">Change the definition of the bit-shift operator to return an `Integer` value.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="47d57-111">참고 항목</span><span class="sxs-lookup"><span data-stu-id="47d57-111">See Also</span></span>  
- [<span data-ttu-id="47d57-112">연산자 프로시저</span><span class="sxs-lookup"><span data-stu-id="47d57-112">Operator Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)  
- [<span data-ttu-id="47d57-113">Operator 문</span><span class="sxs-lookup"><span data-stu-id="47d57-113">Operator Statement</span></span>](../../visual-basic/language-reference/statements/operator-statement.md)  
- [<span data-ttu-id="47d57-114">방법: 연산자 정의</span><span class="sxs-lookup"><span data-stu-id="47d57-114">How to: Define an Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)  
- [<span data-ttu-id="47d57-115">방법: 변환 연산자를 정의 합니다.</span><span class="sxs-lookup"><span data-stu-id="47d57-115">How to: Define a Conversion Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)  
- [<span data-ttu-id="47d57-116">비트 시프트 연산자</span><span class="sxs-lookup"><span data-stu-id="47d57-116">Bit Shift Operators</span></span>](../../visual-basic/language-reference/operators/bit-shift-operators.md)
+## <a name="see-also"></a><span data-ttu-id="7541e-111">참고자료</span><span class="sxs-lookup"><span data-stu-id="7541e-111">See also</span></span>
+- [<span data-ttu-id="7541e-112">연산자 프로시저</span><span class="sxs-lookup"><span data-stu-id="7541e-112">Operator Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)
+- [<span data-ttu-id="7541e-113">Operator 문</span><span class="sxs-lookup"><span data-stu-id="7541e-113">Operator Statement</span></span>](../../visual-basic/language-reference/statements/operator-statement.md)
+- [<span data-ttu-id="7541e-114">방법: 연산자 정의</span><span class="sxs-lookup"><span data-stu-id="7541e-114">How to: Define an Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)
+- [<span data-ttu-id="7541e-115">방법: 변환 연산자를 정의 합니다.</span><span class="sxs-lookup"><span data-stu-id="7541e-115">How to: Define a Conversion Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
+- [<span data-ttu-id="7541e-116">비트 시프트 연산자</span><span class="sxs-lookup"><span data-stu-id="7541e-116">Bit Shift Operators</span></span>](../../visual-basic/language-reference/operators/bit-shift-operators.md)
