commit translated contents

--- a/docs/csharp/language-reference/compiler-messages/cs1612.md
+++ b/docs/csharp/language-reference/compiler-messages/cs1612.md
@@ -6,12 +6,12 @@ f1_keywords:
 helpviewer_keywords:
 - CS1612
 ms.assetid: ef5db985-030a-4f15-b53f-e92c9297c6a3
-ms.openlocfilehash: 07831087e0c2f1ba3aa704d245f3a79a3992d333
-ms.sourcegitcommit: 2eceb05f1a5bb261291a1f6a91c5153727ac1c19
+ms.openlocfilehash: 2141de834a7dffb2bb519fbce0343887668f46c8
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: HT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 09/04/2018
-ms.locfileid: "43507620"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54516127"
 ---
 # <a name="compiler-error-cs1612"></a>컴파일러 오류 CS1612
 'expression'은(는) 변수가 아니므로 해당 반환 값을 수정할 수 없습니다.  
@@ -38,7 +38,7 @@ list[0] = ms;
   
  클래스 또는 구조체를 정의하는 경우 구조체의 멤버에 대한 액세스를 제공하도록 속성 선언을 수정하여 이 오류를 해결할 수 있습니다. 클라이언트 코드를 작성하는 경우 구조체의 고유한 인스턴스를 만들고, 해당 필드를 수정한 다음 전체 구조체를 속성에 다시 할당하여 오류를 해결할 수 있습니다. 세 번째 방법으로 구조체를 클래스로 변경할 수 있습니다.  
   
-## <a name="example"></a>예  
+## <a name="example"></a>예제  
  CS1612는 다음 예제와 같이 전체 구조체를 반환하는 바깥쪽 클래스의 속성을 통해 구조체의 멤버에 액세스하려는 경우에도 발생합니다.  
   
 ```csharp  
@@ -84,8 +84,8 @@ public class MyClass
 }  
 ```  
   
-## <a name="see-also"></a>참고 항목  
+## <a name="see-also"></a>참고 항목
 
-- [구조체](../../../csharp/programming-guide/classes-and-structs/structs.md)  
-- [값 형식](../../../csharp/language-reference/keywords/value-types.md)  
+- [구조체](../../../csharp/programming-guide/classes-and-structs/structs.md)
+- [값 형식](../../../csharp/language-reference/keywords/value-types.md)
 - [참조 형식](../../../csharp/language-reference/keywords/reference-types.md)
