--- a/docs/core/migration/20-21.md
+++ b/docs/core/migration/20-21.md
@@ -3,12 +3,12 @@ title: .NET Core 2.0에서 2.1로 마이그레이션
 description: .NET Core 2.0 앱을 2.1로 업그레이드하는 방법을 알아봅니다.
 ms.date: 08/06/2018
 ms.custom: seodec18
-ms.openlocfilehash: 49afbf8f873ec8b5be8ec2aff0bdc074f5b0b86f
-ms.sourcegitcommit: e6ad58812807937b03f5c581a219dcd7d1726b1d
+ms.openlocfilehash: ae5d5c8605b1b99427e49a98ce5b57519c3bd95d
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: HT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/10/2018
-ms.locfileid: "53169308"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54623380"
 ---
 # <a name="migrate-from-net-core-20-to-21"></a>.NET Core 2.0에서 2.1로 마이그레이션
 
@@ -45,5 +45,5 @@ ms.locfileid: "53169308"
 
 ## <a name="see-also"></a>참고 항목
 
-* [ASP.NET Core 2.0에서 2.1로 마이그레이션](/aspnet/core/migration/20_21)  
-* [.NET Core 2.1의 새로운 기능](../whats-new/dotnet-core-2-1.md)  
+- [ASP.NET Core 2.0에서 2.1로 마이그레이션](/aspnet/core/migration/20_21)
+- [.NET Core 2.1의 새로운 기능](../whats-new/dotnet-core-2-1.md)
