--- a/docs/csharp/language-reference/compiler-messages/cs0702.md
+++ b/docs/csharp/language-reference/compiler-messages/cs0702.md
@@ -6,19 +6,19 @@ f1_keywords:
 helpviewer_keywords:
 - CS0702
 ms.assetid: 55952b5b-66a6-4c53-ac53-2e90a363c335
-ms.openlocfilehash: f7ee4083273cf522e7b9ea51ce689df196f9e6a3
-ms.sourcegitcommit: 2eceb05f1a5bb261291a1f6a91c5153727ac1c19
+ms.openlocfilehash: ae1a0069097d6da36c8a098be819975749382ee2
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: HT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 09/04/2018
-ms.locfileid: "43511220"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54738656"
 ---
 # <a name="compiler-error-cs0702"></a>컴파일러 오류 CS0702
 제약 조건은 ‘identifier’ 특수 클래스가 될 수 없습니다.  
   
  <xref:System.Object>, <xref:System.Array> 또는 <xref:System.ValueType> 형식은 제약 조건으로 사용할 수 없습니다.  
   
-## <a name="example"></a>예  
+## <a name="example"></a>예제  
  다음 샘플에서는 CS0702를 생성합니다.  
   
 ```csharp  
@@ -28,6 +28,6 @@ class C<T> where T : System.Array  // CS0702
 }  
 ```  
   
-## <a name="see-also"></a>참고 항목  
+## <a name="see-also"></a>참고 항목
 
 - [형식 매개 변수에 대한 제약 조건](../../programming-guide/generics/constraints-on-type-parameters.md)
