--- a/docs/csharp/language-reference/compiler-messages/cs1060.md
+++ b/docs/csharp/language-reference/compiler-messages/cs1060.md
@@ -6,12 +6,12 @@ f1_keywords:
 helpviewer_keywords:
 - CS1060
 ms.assetid: af389239-672b-449e-84b5-edb52e320013
-ms.openlocfilehash: 9fb471658320751a38e5f412afa0338847253137
-ms.sourcegitcommit: 2eceb05f1a5bb261291a1f6a91c5153727ac1c19
+ms.openlocfilehash: e185325baba994f77c64c0c4f37e0101e550aa81
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: HT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 09/04/2018
-ms.locfileid: "43513135"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54668589"
 ---
 # <a name="compiler-warning-level-1-cs1060"></a>컴파일러 경고(수준 1) CS1060
 할당되지 않은 ‘name’ 필드를 사용하고 있는 것 같습니다. 구조체가 할당되지 않은 경우 구조체 인스턴스 변수도 처음에 할당되어 있지 않습니다.  
@@ -22,7 +22,7 @@ ms.locfileid: "43513135"
   
 1.  해당 멤버를 모두 초기화하는 `struct`에 대한 생성자를 제공합니다.  
   
-## <a name="example"></a>예  
+## <a name="example"></a>예제  
  클래스 형식 `U`가 `struct S`의 멤버이지만 초기화되지 않았으므로 다음 코드에서는 CS1060을 생성합니다.  
   
 ```csharp  
@@ -59,6 +59,6 @@ namespace CS1060
 }  
 ```  
   
-## <a name="see-also"></a>참고 항목  
+## <a name="see-also"></a>참고 항목
 
 - [구조체](../../../csharp/programming-guide/classes-and-structs/structs.md)
