--- a/docs/csharp/language-reference/compiler-messages/cs1705.md
+++ b/docs/csharp/language-reference/compiler-messages/cs1705.md
@@ -6,12 +6,12 @@ f1_keywords:
 helpviewer_keywords:
 - CS1705
 ms.assetid: 3612a542-0256-4fed-b020-41691ef5a052
-ms.openlocfilehash: 856758327f06feb92ccec8d80b23f942a4e95cbe
-ms.sourcegitcommit: 2eceb05f1a5bb261291a1f6a91c5153727ac1c19
+ms.openlocfilehash: 8c073efd43dee0dd66213833fc2e8496a78c4b9d
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: HT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 09/04/2018
-ms.locfileid: "43518267"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54499290"
 ---
 # <a name="compiler-error-cs1705"></a>컴파일러 오류 CS1705
 'AssemblyName1' 어셈블리는 참조된 어셈블리 'AssemblyName2' 이후 버전인 'TypeName'을 사용합니다.  
@@ -20,7 +20,7 @@ ms.locfileid: "43518267"
   
  예를 들어 Asmb1과 Asmb2라는 두 개의 어셈블리가 있다고 가정합니다. 어셈블리 Asmb1은 어셈블리 Asmb2의 버전 1.0을 참조합니다. 어셈블리 Asmb1은 또한 어셈블리 Asmb2 버전 2.0에 추가된 `MyClass` 클래스를 사용합니다. 컴파일러에는 참조 바인딩에 대한 통일된 규칙이 있으며 버전 1.0으로는 버전 2.0의 `MyClass`에 대한 참조를 충족시킬 수 없습니다.  
   
-## <a name="example"></a>예  
+## <a name="example"></a>예제  
  다음의 자세한 예제는 네 개의 코드 모듈로 구성되어 있습니다.  
   
 -   버전 특성을 제외하고 동일한 두 개의 DLL  
@@ -48,7 +48,7 @@ public class Class1
 }  
 ```  
   
-## <a name="example"></a>예  
+## <a name="example"></a>예제  
  다음 코드는 <xref:System.Reflection.AssemblyVersionAttribute> 특성으로 지정된 어셈블리의 버전 2.0을 정의합니다.  
   
 ```csharp  
@@ -68,7 +68,7 @@ public class Class1
 }  
 ```  
   
-## <a name="example"></a>예  
+## <a name="example"></a>예제  
  다음 코드는 앞의 코드에 정의된 두 개의 DLL 버전을 참조합니다. `AssemblyA`는 CS1705a.cs(버전 1.0)에서 만든 DLL을 참조합니다. `AssemblyB`는 CS1705b.cs(버전 2.0)에서 만든 DLL을 참조합니다. `ClassC`에 두 개의 메서드가 정의됩니다. 첫 번째 `Return1A`는 DLL 버전 1.0에서 `Class1A`의 별칭인 `Class1` 형식의 개체를 반환합니다. 두 번째 `Return1B`는 DLL 버전 2.0에서 `Class1B`의 별칭인 `Class1` 형식의 개체를 반환합니다. `Return1A`의 정의는 버전 1.0에 대한 종속성을 만들고, `Return1B`의 정의는 버전 2.0에 대한 종속성을 만듭니다.  
   
 ```csharp  
@@ -110,7 +110,7 @@ public class ClassC
 }  
 ```  
   
-## <a name="example"></a>예  
+## <a name="example"></a>예제  
  다음 코드는 컴파일러 오류 CS1705를 생성합니다. 이는 CS1705a.cs(버전 1.0)에서 생성된 DLL을 참조합니다. 그러나 `Main` 메서드에서 코드는 CS1705c.cs의 `ClassC`에 액세스합니다. `ClassC`는 CS1705b.cs (버전 2.0)에 정의된 형식을 사용합니다. 이로 인해 컴파일러 오류 CS1705가 발생합니다. 형식에 CS1705.dll의 참조된 버전보다 높은 CS1705.dll의 버전 번호가 있기 때문입니다.  
   
 ```csharp  
@@ -141,10 +141,10 @@ class Tester
   
      `csc /reference:C:\\CS1705.dll /reference:CS1705.dll /reference:CS1705c.dll CS1705d.cs`  
   
-     이 명령을 사용할 때 프로그램이 컴파일되더라도 프로그램이 실행되지는 않습니다. 프로그램이 실행되게 하려면 [\<assemblyIdentity>](../../../framework/configure-apps/file-schema/runtime/assemblyidentity-element-for-runtime.md) 및 [\<codeBase>](../../../framework/configure-apps/file-schema/runtime/codebase-element.md) 자식 요소를 사용하는 [\<dependentAssembly> 요소](../../../framework/configure-apps/file-schema/runtime/dependentassembly-element.md)를 포함하여 DLL 버전 1.0의 위치를 지정하는 응용 프로그램 구성 파일을 제공합니다. 구성 파일에 대한 자세한 내용은 [앱 구성](../../../framework/configure-apps/index.md)을 참조하세요.  
+     이 명령을 사용할 때 프로그램이 컴파일되더라도 프로그램이 실행되지는 않습니다. 프로그램이 실행되게 하려면 [\<assemblyIdentity&gt;](../../../framework/configure-apps/file-schema/runtime/assemblyidentity-element-for-runtime.md) 및 [\<codeBase&gt;](../../../framework/configure-apps/file-schema/runtime/codebase-element.md) 자식 요소를 사용하는 [\<dependentAssembly&gt; 요소](../../../framework/configure-apps/file-schema/runtime/dependentassembly-element.md)를 포함하여 DLL 버전 1.0의 위치를 지정하는 애플리케이션 구성 파일을 제공합니다. 구성 파일에 대한 자세한 내용은 [앱 구성](../../../framework/configure-apps/index.md)을 참조하세요.  
   
-## <a name="see-also"></a>참고 항목  
+## <a name="see-also"></a>참고 항목
 
-- [extern alias](../../../csharp/language-reference/keywords/extern-alias.md)  
-- [:: 연산자](../../../csharp/language-reference/operators/namespace-alias-qualifer.md)  
+- [extern alias](../../../csharp/language-reference/keywords/extern-alias.md)
+- [:: 연산자](../../../csharp/language-reference/operators/namespace-alias-qualifer.md)
 - [csc.exe를 사용한 명령줄 빌드](../../../csharp/language-reference/compiler-options/command-line-building-with-csc-exe.md)
