--- a/docs/csharp/language-reference/compiler-messages/cs1721.md
+++ b/docs/csharp/language-reference/compiler-messages/cs1721.md
@@ -6,19 +6,19 @@ f1_keywords:
 helpviewer_keywords:
 - CS1721
 ms.assetid: f02dc9b1-8e38-4562-b013-4d752ad79061
-ms.openlocfilehash: d4f7f880e96af44acf20933b0d36667dab7009a0
-ms.sourcegitcommit: 2eceb05f1a5bb261291a1f6a91c5153727ac1c19
+ms.openlocfilehash: 7225a037c06bb77a6eeaf8859fd9f0575e61f9af
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: HT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 09/04/2018
-ms.locfileid: "43518038"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54637179"
 ---
 # <a name="compiler-error-cs1721"></a>컴파일러 오류 CS1721
 ‘class’ 클래스는 여러 개의 기본 클래스(‘class_1’ 및 ‘class_2’)를 가질 수 없습니다.  
   
  이 오류 메시지가 표시되는 가장 일반적인 원인은 다중 상속을 사용하려고 시도하기 때문입니다. C#에서 하나의 클래스는 하나의 클래스에서만 직접 상속할 수 있습니다. 그러나 하나의 클래스는 원하는 수만큼의 인터페이스를 구현할 수 있습니다.  
   
-## <a name="example"></a>예  
+## <a name="example"></a>예제  
  다음 예제는 CS1721 오류가 발생하는 한 가지 경우와 오류를 방지할 수 있는 두 가지 방법을 보여 줍니다.  
   
 ```csharp  
@@ -38,7 +38,7 @@ public interface B {}
 public class C : A, B {}  
 ```  
   
-## <a name="see-also"></a>참고 항목  
+## <a name="see-also"></a>참고 항목
 
-- [다형성](../../../csharp/programming-guide/classes-and-structs/polymorphism.md)  
+- [다형성](../../../csharp/programming-guide/classes-and-structs/polymorphism.md)
 - [인터페이스](../../../csharp/programming-guide/interfaces/index.md)
