--- a/docs/csharp/language-reference/compiler-messages/cs1921.md
+++ b/docs/csharp/language-reference/compiler-messages/cs1921.md
@@ -6,12 +6,12 @@ f1_keywords:
 helpviewer_keywords:
 - CS1921
 ms.assetid: 0e8326dc-4ad9-49b6-948c-d37f10e6abaf
-ms.openlocfilehash: 39ad4a6a647c61cf1319968247e57a997f5f0adf
-ms.sourcegitcommit: 2eceb05f1a5bb261291a1f6a91c5153727ac1c19
+ms.openlocfilehash: bdc804ea017573eeaeaff2a777a4ade9f732e390
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: HT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 09/04/2018
-ms.locfileid: "43510592"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54738682"
 ---
 # <a name="compiler-error-cs1921"></a>컴파일러 오류 CS1921
 
@@ -19,7 +19,7 @@ ms.locfileid: "43510592"
   
  이 오류는 공용 비정적 `Add` 메서드가 없는 클래스와 함께 컬렉션 이니셜라이저를 사용하려고 할 때 발생합니다. 보호 수준(`private`, `protected`, `internal`) 때문에 `Add` 메서드에 액세스할 수 없는 경우에는 CS0122 오류가 발생합니다. 따라서 이 오류는 메서드가 `static`으로 정의되어 있음을 의미할 수 있습니다.  
   
-## <a name="example"></a>예
+## <a name="example"></a>예제
 
  다음 예제에서는 CS1921 오류가 발생합니다.  
 
@@ -41,6 +41,6 @@ public class Test
 }  
 ```
 
-## <a name="see-also"></a>참고 항목  
+## <a name="see-also"></a>참고 항목
 
 - [개체 이니셜라이저 및 컬렉션 이니셜라이저](../../../csharp/programming-guide/classes-and-structs/object-and-collection-initializers.md)
