--- a/docs/csharp/language-reference/compiler-messages/cs1926.md
+++ b/docs/csharp/language-reference/compiler-messages/cs1926.md
@@ -6,12 +6,12 @@ f1_keywords:
 helpviewer_keywords:
 - CS1926
 ms.assetid: 58cc8385-8d92-4cee-8941-d05e128e3674
-ms.openlocfilehash: a3becf71ab963921bc67759667657854a3dbe0f2
-ms.sourcegitcommit: ea00c05e0995dae928d48ead99ddab6296097b4c
+ms.openlocfilehash: 1b2c315e99e3f5f3ca42bae6c2b1965ce004af6d
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: HT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 10/02/2018
-ms.locfileid: "48031487"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54713011"
 ---
 # <a name="compiler-error-cs1926"></a>컴파일러 오류 CS1926
 
@@ -19,7 +19,7 @@ ms.locfileid: "48031487"
   
  이 오류는 다음 조건에 해당할 때 발생합니다.  
   
-1. 명령줄을 이용하거나 **솔루션 탐색기**에서 **프로젝트** 아이콘을 마우스 오른쪽 단추로 클릭하고 **추가**, **새 항목**, **응용 프로그램 매니페스트 파일**을 차례로 클릭하여 **/win32manifest** 옵션을 지정합니다.  
+1. 명령줄을 이용하거나 **솔루션 탐색기**에서 **프로젝트** 아이콘을 마우스 오른쪽 단추로 클릭하고 **추가**, **새 항목**, **애플리케이션 매니페스트 파일**을 차례로 클릭하여 **/win32manifest** 옵션을 지정합니다.  
   
 2. 파일이 손상되었거나 누락되었습니다.  
   
@@ -29,7 +29,7 @@ ms.locfileid: "48031487"
   
 2. 파일을 대체, 복구 또는 다시 생성합니다.  
   
-## <a name="example"></a>예
+## <a name="example"></a>예제
 
  다음 예제에서는 손상되었거나 누락된 win32 매니페스트 파일을 이용하여 컴파일할 때 CS1926 오류가 발생합니다.  
 
@@ -46,6 +46,6 @@ class Test
 }
 ```
 
-## <a name="see-also"></a>참고 항목  
+## <a name="see-also"></a>참고 항목
 
 - [/win32manifest(C# 컴파일러 옵션)](../../../csharp/language-reference/compiler-options/win32manifest-compiler-option.md)
