--- a/docs/csharp/language-reference/compiler-messages/cs7003.md
+++ b/docs/csharp/language-reference/compiler-messages/cs7003.md
@@ -6,12 +6,12 @@ f1_keywords:
 helpviewer_keywords:
 - CS7003
 author: sputier
-ms.openlocfilehash: 3a045cc822cc6b4b6e7023ebb843e6f8a455185e
-ms.sourcegitcommit: 2eceb05f1a5bb261291a1f6a91c5153727ac1c19
+ms.openlocfilehash: 42bb9d79ca24ed02363f0e09bdbc3ceff4890aa3
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: HT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 09/04/2018
-ms.locfileid: "43517703"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54620567"
 ---
 # <a name="compiler-error-cs7003"></a>컴파일러 오류 CS7003
 
@@ -23,7 +23,7 @@ ms.locfileid: "43517703"
 
 제네릭 형식을 사용할 때 꺾쇠 괄호에 하나의 매개 변수 형식 이름을 제공합니다.
 
-## <a name="example"></a>예
+## <a name="example"></a>예제
 
 다음 예제에서는 CS7003을 생성합니다.
 
@@ -42,6 +42,6 @@ ms.locfileid: "43517703"
     public class MyGenericClass<T> { }
 ```
 
-## <a name="see-also"></a>참고 항목  
+## <a name="see-also"></a>참고 항목
 
 - [제네릭](../../../csharp/programming-guide/generics/generic-type-parameters.md)
