commit translated contents

--- a/docs/visual-basic/misc/bc30645.md
+++ b/docs/visual-basic/misc/bc30645.md
@@ -1,5 +1,5 @@
 ---
-title: 특성 '&lt;attributename&gt;' 선택적 매개 변수가 있는 메서드에 적용할 수 없습니다.
+title: 특성 '<attributename>' 선택적 매개 변수가 있는 메서드에 적용할 수 없습니다.
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30645
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30645
 ms.assetid: 4de3d2c9-5588-47c2-a6b2-e165d16106b8
-ms.openlocfilehash: 510ac832eab27db3917821b302ac43ffc7c93d7a
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: d15c612a3ff98dd633f7412729d007ed496b08a5
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54518012"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55258450"
 ---
-# <a name="attribute-ltattributenamegt-cannot-be-applied-to-a-method-with-optional-parameters"></a>특성 '&lt;attributename&gt;' 선택적 매개 변수가 있는 메서드에 적용할 수 없습니다.
+# <a name="attribute-attributename-cannot-be-applied-to-a-method-with-optional-parameters"></a>특성 '\<attributename >' 선택적 매개 변수가 있는 메서드에 적용할 수 없습니다.
 특성은 필수 인수를 사용하거나 인수를 사용하지 않는 메서드에만 사용할 수 있습니다.  
   
  **오류 ID:** BC30645  
