--- a/docs/visual-basic/misc/bc30960.md
+++ b/docs/visual-basic/misc/bc30960.md
@@ -1,5 +1,5 @@
 ---
-title: "'&lt;elementname&gt;'형식을 참조'&lt;typename&gt;'in project'&lt;projectname&gt;'에 형식이 '&lt;typename&gt;'에서 찾을 프로젝트'&lt;projectname&gt;'"
+title: "'<elementname>'형식을 참조'<typename>'프로젝트' in에서<projectname>', 형식이 '<typename>'에서 찾을 프로젝트'<projectname>'"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30960
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30960
 ms.assetid: 4ed4bff5-c670-46f6-8360-7287444d50e5
-ms.openlocfilehash: cdff0c21616e9025118195258fc7e66b5c8c1ae3
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: a6f8c41ba2d3e8d764f55d8ab40801a66aa26e0a
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54736067"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55260868"
 ---
-# <a name="ltelementnamegt-refers-to-type-lttypenamegt-in-project-ltprojectnamegt-but-type-lttypenamegt-was-not-found-in-project-ltprojectnamegt"></a>'&lt;elementname&gt;'형식을 참조'&lt;typename&gt;'in project'&lt;projectname&gt;'에 형식이 '&lt;typename&gt;'에서 찾을 프로젝트'&lt;projectname&gt;'
+# <a name="elementname-refers-to-type-typename-in-project-projectname-but-type-typename-was-not-found-in-project-projectname"></a>'\<elementname >' 형식을 참조 '\<typename >' 프로젝트의 '\<projectname >'에 형식이 '\<typename >' 프로젝트에서 찾을 수 없습니다 '\<projectname >'
 식이 다른 프로젝트에서 참조된 클래스, 구조체, 모듈 또는 인터페이스에 액세스하지만 해당 프로젝트에 지정된 형식이 포함되어 있지 않습니다.  
   
  이 오류는 프로젝트가 동일한 솔루션의 다른 프로젝트를 간접적으로 참조하는 경우에 발생합니다. 일반적으로 프로젝트는 다른 프로젝트를 참조하는 어셈블리를 참조합니다. 어셈블리가 다른 프로젝트의 지정된 형식에 액세스하는 경우 형식에 대한 간접 참조가 설정됩니다. 그러나 다른 프로젝트에 형식이 없는 경우 이 오류가 생성됩니다.  
