--- a/docs/visual-basic/misc/bc32078.md
+++ b/docs/visual-basic/misc/bc32078.md
@@ -1,5 +1,5 @@
 ---
-title: "'&lt;membername&gt;'구현할 수 없습니다.'&lt;interfacename&gt;.&lt; 다르기&gt;' 형식 매개 변수 제약 조건이 다르기 때문에"
+title: "'<membername>'구현할 수 없습니다.'<interfacename>.<interfacemembername>' 형식 매개 변수 제약 조건이 다르기 때문에"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc32078
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC32078
 ms.assetid: 2c971345-edb4-491e-9202-8eb8286b66f8
-ms.openlocfilehash: a37a7e672d69219833ce63307f591aed33d5cd9d
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 05347a876ad9c816fb0d1403ff9b677c60259f76
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54500787"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55258177"
 ---
-# <a name="ltmembernamegt-cannot-implement-ltinterfacenamegtltinterfacemembernamegt-because-they-differ-by-type-parameter-constraints"></a>'&lt;membername&gt;'구현할 수 없습니다.'&lt;interfacename&gt;.&lt; 다르기&gt;' 형식 매개 변수 제약 조건이 다르기 때문에
+# <a name="membername-cannot-implement-interfacenameinterfacemembername-because-they-differ-by-type-parameter-constraints"></a>'\<membername >' 구현할 수 없습니다. '\<interfacename >.\< 다르기 >' 형식 매개 변수 제약 조건이 다르기 때문에
 제네릭 이벤트, 속성 또는 프로시저가 인터페이스에서 정의된 유사한 멤버를 구현하려고 하지만 각각의 형식 매개 변수가 서로 다른 제약 조건 목록을 가지고 있습니다.  
   
  인터페이스 멤버를 구현하려면 구현 멤버가 인터페이스 멤버의 전체 서명뿐만 아니라 각 매개 변수의 전달 메커니즘과도 일치해야 합니다.  
