--- a/docs/visual-basic/misc/bc30284.md
+++ b/docs/visual-basic/misc/bc30284.md
@@ -1,5 +1,5 @@
 ---
-title: "&lt;type1&gt; '&lt;typename&gt;' 재정의 하지 않으므로 'o v e로 선언할 수 없습니다는 &lt;type1&gt; 자료의 &lt;type2&gt;"
+title: <type1> '<typename>' 재정의 하지 않으므로 'o v e로 선언할 수 없습니다는 <type1> 자료의 <type2>
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30284
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30284
 ms.assetid: 8166bd09-dad3-495d-8cf7-66f90824a288
-ms.openlocfilehash: a2de7ffefd27ae693ceb181fdfb258438570a2c0
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: a9e1387981bccf9f241d75791e290373f1565790
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54529465"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55255878"
 ---
-# <a name="lttype1gt-lttypenamegt-cannot-be-declared-overrides-because-it-does-not-override-a-lttype1gt-in-a-base-lttype2gt"></a>&lt;type1&gt; '&lt;typename&gt;' 재정의 하지 않으므로 'o v e로 선언할 수 없습니다는 &lt;type1&gt; 자료의 &lt;type2&gt;
+# <a name="type1-typename-cannot-be-declared-overrides-because-it-does-not-override-a-type1-in-a-base-type2"></a>\<type1 > '\<typename >' 재정의 하지 않으므로 'o v e로 선언할 수 없습니다는 \<type1 > 자료의 \<type2 >
 기본 클래스에 동일한 이름을 가진 형식이 없을 때 `Sub`, `Function`또는 `Property` 문에서 `Overrides` 를 지정합니다.  
   
  **오류 ID:** BC30284  
