--- a/docs/visual-basic/misc/bc31108.md
+++ b/docs/visual-basic/misc/bc31108.md
@@ -1,5 +1,5 @@
 ---
-title: 속성을 선언할 수 없습니다. '&lt;propertymodifier&gt;'는 'Private' 접근자를 포함 하기 때문에
+title: 속성을 선언할 수 없습니다. '<propertymodifier>'는 'Private' 접근자를 포함 하기 때문에
 ms.date: 07/20/2015
 f1_keywords:
 - vbc31108
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC31108
 ms.assetid: 74fb36f4-54cd-4fda-bcc6-e965b5c7c37b
-ms.openlocfilehash: 1c3056642f16e313251c9961fe9b44dfce5cdf15
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: e6c477c34f3c8309d66fe7f29b8153d1efa9ec47
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54577060"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55259451"
 ---
-# <a name="property-cannot-be-declared-ltpropertymodifiergt-because-it-contains-a-private-accessor"></a>속성을 선언할 수 없습니다. '&lt;propertymodifier&gt;'는 'Private' 접근자를 포함 하기 때문에
+# <a name="property-cannot-be-declared-propertymodifier-because-it-contains-a-private-accessor"></a>속성을 선언할 수 없습니다. '\<propertymodifier >'는 'Private' 접근자를 포함 하기 때문에
 사용 하 여 속성을 `Private` 속성 프로시저 (`Get` 또는 `Set`) 표시 됩니다 [Overridable](../../visual-basic/language-reference/modifiers/overridable.md)합니다.  
   
  기본 클래스 속성 또는 프로시저가 [Private](../../visual-basic/language-reference/modifiers/private.md)로 선언된 경우 액세스할 수 없으므로 파생 클래스에서 해당 속성이나 프로시저를 재정의할 수 없습니다. 그러므로 `Private` 를 `Overridable`과 함께 사용할 수 없습니다. 이는 속성 자체뿐 아니라 개별 속성 프로시저에도 적용됩니다.  
