--- a/docs/visual-basic/misc/bc31131.md
+++ b/docs/visual-basic/misc/bc31131.md
@@ -1,5 +1,5 @@
 ---
-title: "'RemoveHandler' 정의가 없습니다. 이벤트에 대 한 '&lt;eventname&gt;'"
+title: 누락 이벤트에 대 한 'RemoveHandler' 정의가 '<eventname>'
 ms.date: 07/20/2015
 f1_keywords:
 - bc31131
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC31131
 ms.assetid: 0ef68daf-b66e-4ecf-bf2c-dcacabd8aa3d
-ms.openlocfilehash: b898b31cb5372679de0db3a7849c6b50d9849dab
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: ce5683ce6f5749a62e94698fb627423391f1a7c2
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54728949"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55257241"
 ---
-# <a name="removehandler-definition-missing-for-event-lteventnamegt"></a>'RemoveHandler' 정의가 없습니다. 이벤트에 대 한 '&lt;eventname&gt;'
+# <a name="removehandler-definition-missing-for-event-eventname"></a>누락 이벤트에 대 한 'RemoveHandler' 정의가 '\<eventname >'
 이벤트가 `Custom`으로 선언된 경우 이벤트 처리기를 제거하기 위한 프로시저를 제공해야 합니다.  
   
  **오류 ID:** BC31131  
