--- a/docs/visual-basic/misc/bc31139.md
+++ b/docs/visual-basic/misc/bc31139.md
@@ -1,5 +1,5 @@
 ---
-title: "'&lt;이름을&gt;' 'm e'를 대신 사용 하십시오 기본 인스턴스를 통해 자신을 참조할 수 없습니다."
+title: "'<name>' 'm e'를 대신 사용 하십시오 기본 인스턴스를 통해 자신을 참조할 수 없습니다."
 ms.date: 07/20/2015
 f1_keywords:
 - vbc31139
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC31139
 ms.assetid: 459e5d5a-d526-4cd0-934e-96e4e1eb51bb
-ms.openlocfilehash: 314d9f99bad397adb6d7d72f089596d9f0ef77e0
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: b08461f58f8be9cf46f36a361f526f69017385eb
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54618674"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55258268"
 ---
-# <a name="ltnamegt-cannot-refer-to-itself-through-its-default-instance-use-me-instead"></a>'&lt;이름을&gt;' 'm e'를 대신 사용 하십시오 기본 인스턴스를 통해 자신을 참조할 수 없습니다.
+# <a name="name-cannot-refer-to-itself-through-its-default-instance-use-me-instead"></a>'\<이름 >'은 기본 인스턴스를 통해 자신을 참조할 수 없습니다 'Me' 대신 사용 하세요
 폼 내부에서 해당 폼을 기본 인스턴스로 참조하려고 했습니다. 이 경우 폼이 자신을 재귀적으로 호출할 수 있습니다.  
   
  대체로 폼의 현재 인스턴스를 참조하는 경우 기본 인스턴스 대신 `Me` 를 사용해야 합니다.  
