--- a/docs/visual-basic/misc/bc31437.md
+++ b/docs/visual-basic/misc/bc31437.md
@@ -1,5 +1,5 @@
 ---
-title: "'&lt;elementname&gt;' 부분 메서드는 Sub 여야 하므로 'Partial'로 선언할 수 없습니다"
+title: "'<elementname>' 부분 메서드는 Sub 여야 하므로 'Partial'로 선언할 수 없습니다"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc31437
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC31437
 ms.assetid: 31ca12ab-2c26-4907-a253-e7c57bb4f34b
-ms.openlocfilehash: 2469b3b17f2b16e2bfcebbdea8f790f532ee856e
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: ccfa5569fab959e47e6c834e5c275c834e5ee5d9
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54526472"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55257280"
 ---
-# <a name="ltelementnamegt-cannot-be-declared-partial-because-partial-methods-must-be-subs"></a>'&lt;elementname&gt;' 부분 메서드는 Sub 여야 하므로 'Partial'로 선언할 수 없습니다
+# <a name="elementname-cannot-be-declared-partial-because-partial-methods-must-be-subs"></a>'\<elementname >' 부분 메서드는 Sub 여야 하므로 'Partial'로 선언할 수 없습니다
 `Sub` 프로시저만 부분 메서드(Partial Method)를 선언할 수 있습니다. 예를 들어 다음 코드는 `partialMethod` 가 함수이기 때문에 이 오류를 생성합니다.  
   
 ```  
