--- a/docs/visual-basic/misc/bc32087.md
+++ b/docs/visual-basic/misc/bc32087.md
@@ -1,5 +1,5 @@
 ---
-title: 오버 로드 확인에 실패 했습니다 액세스 가능한 '&lt;genericprocedurename&gt;'이 개수의 형식 인수를 허용 합니다.
+title: 오버 로드 확인에 실패 했습니다 액세스 가능한 '<genericprocedurename>'이 개수의 형식 인수를 허용 합니다.
 ms.date: 07/20/2015
 f1_keywords:
 - bc32087
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC32087
 ms.assetid: a3eaafd3-80f6-4b7d-9b75-47b043fe17b5
-ms.openlocfilehash: 8211c1b275f4c01f13724a18b119c3c3f0cca623
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: e6e340bc6a506b2cb1bc8acccd4710a6903e69c1
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54548939"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55256747"
 ---
-# <a name="overload-resolution-failed-because-no-accessible-ltgenericprocedurenamegt-accepts-this-number-of-type-arguments"></a>오버 로드 확인에 실패 했습니다 액세스 가능한 '&lt;genericprocedurename&gt;'이 개수의 형식 인수를 허용 합니다.
+# <a name="overload-resolution-failed-because-no-accessible-genericprocedurename-accepts-this-number-of-type-arguments"></a>오버 로드 확인에 실패 했습니다 액세스 가능한 '\<genericprocedurename >'이 개수의 형식 인수를 허용 합니다.
 컴파일러가 적절한 개수의 형식 매개 변수를 사용하여 오버로드된 버전에 액세스할 수 없으므로 오버로드된 제네릭 프로시저 호출을 확인할 수 없습니다.  
   
  제네릭 프로시저를 호출하는 경우 각 형식 매개 변수에 대해 하나의 형식 인수를 제공해야 합니다. 또는 형식 인수를 제공하지 않고 컴파일러에서 *형식 유추*를 수행하도록 할 수 있습니다. 자세한 내용은 [Generic Procedures in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)의 "형식 유추"를 참조하세요.  
