--- a/docs/visual-basic/misc/bc36585.md
+++ b/docs/visual-basic/misc/bc36585.md
@@ -1,5 +1,5 @@
 ---
-title: "'&lt;elementname&gt;' 매개 변수가 아닙니다. 확장 메서드의'&lt;methodname&gt;'에 정의 된'&lt;typename&gt;'"
+title: "'<elementname>' 매개 변수가 아닙니다. 확장 메서드의'<methodname>'에 정의 된'<typename>'"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc36585
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC36585
 ms.assetid: c83fb679-3559-473c-aaa9-6ff21e515f97
-ms.openlocfilehash: 8ae6652d39fcedde51eada7582a72b64b61a7b89
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 71dcc2cb02ee913b33846aaa68d9181084067087
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54674403"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55259084"
 ---
-# <a name="ltelementnamegt-is-not-a-parameter-of-extension-method-ltmethodnamegt-defined-in-lttypenamegt"></a>'&lt;elementname&gt;' 매개 변수가 아닙니다. 확장 메서드의'&lt;methodname&gt;'에 정의 된'&lt;typename&gt;'
+# <a name="elementname-is-not-a-parameter-of-extension-method-methodname-defined-in-typename"></a>'\<elementname >' 확장명 메서드의 매개 변수가 아닙니다. '\<methodname >'에 정의 된 '\<typename >'
 프로시저 호출이 확장 메서드에서 정의되지 않은 추가 인수를 제공합니다.  
   
  **오류 ID:** BC36585  
