--- a/docs/visual-basic/misc/bc36666-bc36665.md
+++ b/docs/visual-basic/misc/bc36666-bc36665.md
@@ -1,5 +1,5 @@
 ---
-title: "'&lt;methodname&gt;' 반환 형식에 액세스할 수 없기 때문에이 컨텍스트에서 액세스할 수 없는"
+title: "'<methodname>' 반환 형식에 액세스할 수 없기 때문에이 컨텍스트에서 액세스할 수 없는"
 ms.date: 07/20/2015
 f1_keywords:
 - bc36665
@@ -10,14 +10,14 @@ helpviewer_keywords:
 - BC36666
 - BC36665
 ms.assetid: 8f29eb7e-351f-486c-9d1f-3556cc11b7c5
-ms.openlocfilehash: 440e7f4e4396092ddee2c1f03e954e42e0bbe81a
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 1303a1991f898b3c6b2ed54c7c514e47290291fe
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54589060"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55259624"
 ---
-# <a name="ltmethodnamegt-is-not-accessible-in-this-context-because-the-return-type-is-not-accessible"></a>'&lt;methodname&gt;' 반환 형식에 액세스할 수 없기 때문에이 컨텍스트에서 액세스할 수 없는
+# <a name="methodname-is-not-accessible-in-this-context-because-the-return-type-is-not-accessible"></a>'\<methodname >' 반환 형식에 액세스할 수 없기 때문에이 컨텍스트에서 액세스할 수 없는
 호출 문에서 액세스할 수 없는 반환 형식을 가진 함수를 호출했습니다. 예를 들어 다음 코드에서 반환 형식인 `Main` 이 `PublicMethod` 클래스에서 `PrivateType`액세스 한정자를 사용하여 선언되므로 `Private` 에서 `TestClass`로의 호출은 실패합니다. 따라서 `PrivateType` 을 액세스할 수 있는 컨텍스트는 `TestClass`로 제한됩니다.  
   
 ```vb  
