--- a/docs/visual-basic/misc/bc36709.md
+++ b/docs/visual-basic/misc/bc36709.md
@@ -1,5 +1,5 @@
 ---
-title: Option Strict On에서는 없도록 확장 메서드 사이의 암시적 형식 변환에 축소 변환을 사용할 '&lt;extensionmethodname&gt;'에 정의 된'&lt;modulename&gt;'및 대리자'&lt;delegatename&gt;'
+title: Option Strict On에서는 없도록 확장 메서드 사이의 암시적 형식 변환에 축소 변환을 사용할 '<extensionmethodname>'에 정의 된'<modulename>'및' 대리자<delegatename>'
 ms.date: 07/20/2015
 f1_keywords:
 - bc36709
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC36709
 ms.assetid: 95d8c833-3525-411b-98e8-b7d3f61f75c9
-ms.openlocfilehash: 9a25148ad5c84d7fed1793d6f0ab47202be4196b
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 1d3df30ec4aeadcf81c16a7340736887ec961718
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54566335"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55259438"
 ---
-# <a name="option-strict-on-does-not-allow-narrowing-in-implicit-type-conversions-between-extension-method-ltextensionmethodnamegt-defined-in-ltmodulenamegt-and-delegate-ltdelegatenamegt"></a>Option Strict On에서는 없도록 확장 메서드 사이의 암시적 형식 변환에 축소 변환을 사용할 '&lt;extensionmethodname&gt;'에 정의 된'&lt;modulename&gt;'및 대리자'&lt;delegatename&gt;'
+# <a name="option-strict-on-does-not-allow-narrowing-in-implicit-type-conversions-between-extension-method-extensionmethodname-defined-in-modulename-and-delegate-delegatename"></a>Option Strict On에서는 없도록 확장 메서드 사이의 암시적 형식 변환에 축소 변환을 사용할 '\<extensionmethodname >'에 정의 된 '\<modulename >' 대리자와 '\<delegatename >'
 `Option Strict` 이 설정되면 대리자의 매개 변수 데이터 형식에서 해당 대리자 형식의 변수에 할당된 확장 메서드의 해당 변수로 축소 변환을 사용할 수 없습니다. 대리자 매개 변수의 데이터 형식을 확장 메서드의 데이터 형식으로 확장해야 합니다.  
   
  **오류 ID:** BC36709  
