--- a/docs/visual-basic/misc/bc40000.md
+++ b/docs/visual-basic/misc/bc40000.md
@@ -1,5 +1,5 @@
 ---
-title: "'&lt;elementname&gt;'은 사용 되지 않습니다. '&lt;errormessage&gt;'"
+title: "'<elementname>'는 사용 되지 않습니다. '<errormessage>'"
 ms.date: 07/20/2015
 f1_keywords:
 - bc40000
@@ -7,17 +7,17 @@ f1_keywords:
 helpviewer_keywords:
 - BC40000
 ms.assetid: dade0f57-eca1-4dd0-b978-020678838be6
-ms.openlocfilehash: 4eac5818011a3a844702797126d3b5e74dd28cb2
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 8e65f5c3aa8f20d4db10c8794f6ed8823982f3c5
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53775228"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55259023"
 ---
-# <a name="ltelementnamegt-is-obsolete-lterrormessagegt"></a>'&lt;elementname&gt;'은 사용 되지 않습니다. '&lt;errormessage&gt;'
+# <a name="elementname-is-obsolete-errormessage"></a>'\<elementname >'는 사용 되지 않습니다. '\<errormessage >'
 문에서 경고로 처리하는 <xref:System.ObsoleteAttribute> 특성 및 지시문으로 표시된 프로그래밍 요소에 액세스하려고 합니다.  
   
- 프로그래밍 요소에 <xref:System.ObsoleteAttribute>를 적용하여 더 이상 사용하지 않는 요소로 표시할 수 있습니다.  이렇게 하면 특성의 <xref:System.ObsoleteAttribute.IsError%2A> 속성을 `True` 또는 `False`로 설정할 수 있습니다. `True`로 설정하면 컴파일러가 요소를 사용하려는 시도를 오류로 처리합니다. `False`로 설정하거나 기본값인 `False`로 두면 컴파일러가 요소를 사용하려는 시도가 있을 경우 경고를 발생시킵니다.  
+ 프로그래밍 요소에 <xref:System.ObsoleteAttribute> 를 적용하여 더 이상 사용하지 않는 요소로 표시할 수 있습니다. 이렇게 하면 특성의 <xref:System.ObsoleteAttribute.IsError%2A> 속성을 `True` 또는 `False`로 설정할 수 있습니다. `True`로 설정하면 컴파일러가 요소를 사용하려는 시도를 오류로 처리합니다. `False`로 설정하거나 기본값인 `False`로 두면 컴파일러가 요소를 사용하려는 시도가 있을 경우 경고를 발생시킵니다.  
   
  <xref:System.ObsoleteAttribute.IsError%2A> 의 <xref:System.ObsoleteAttribute> 속성이 `False`이므로 이 메시지는 기본적으로 경고입니다. 경고를 숨기거나 오류로 처리하는 방법에 대한 자세한 내용은 [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)을 참조하세요.  
   
