--- a/docs/visual-basic/misc/bc40005.md
+++ b/docs/visual-basic/misc/bc40005.md
@@ -1,5 +1,5 @@
 ---
-title: "&lt;형식&gt; '&lt;typename&gt;' 기본 클래스에 재정의 가능한 메서드를 숨깁니다."
+title: <type> '<typename>' 기본 클래스에 재정의 가능한 메서드를 숨깁니다.
 ms.date: 07/20/2015
 f1_keywords:
 - vbc40005
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC40005
 ms.assetid: 1dadda7f-1d26-4ae8-a668-9f69d55ceb50
-ms.openlocfilehash: d4c745a28b06c0b4268d0da5c1b961a88fb81760
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 3b6f8dc0fc6bc72a5d5cdabae264073bc1d60fad
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54534295"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55258985"
 ---
-# <a name="lttypegt-lttypenamegt-shadows-an-overridable-method-in-the-base-class"></a>&lt;형식&gt; '&lt;typename&gt;' 기본 클래스에 재정의 가능한 메서드를 숨깁니다.
+# <a name="type-typename-shadows-an-overridable-method-in-the-base-class"></a>\<형식 > '\<typename >' 기본 클래스에 재정의 가능한 메서드를 숨깁니다.
 \<형식 > '\<typename >' 기본 클래스에 재정의 가능한 메서드를 섀도 처리 합니다. 기본 메서드를 재정의하려면 이 메서드를 'Overrides'로 선언해야 합니다.  
   
  프로그래밍 요소가 기본 클래스에 정의된 속성 또는 재정의 가능한 프로시저와 같은 이름을 사용하여 선언되었습니다. 이 상황에서 이 클래스의 요소는 기본 클래스 요소를 숨깁니다.  
