--- a/docs/visual-basic/misc/bc30284.md
+++ b/docs/visual-basic/misc/bc30284.md
@@ -1,5 +1,5 @@
 ---
-title: "&lt;type1&gt; '&lt;typename&gt;' 재정의 하지 않으므로 'o v e로 선언할 수 없습니다는 &lt;type1&gt; 자료의 &lt;type2&gt;"
+title: <type1> '<typename>' 재정의 하지 않으므로 'o v e로 선언할 수 없습니다는 <type1> 자료의 <type2>
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30284
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30284
 ms.assetid: 8166bd09-dad3-495d-8cf7-66f90824a288
-ms.openlocfilehash: a2de7ffefd27ae693ceb181fdfb258438570a2c0
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: a9e1387981bccf9f241d75791e290373f1565790
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54529465"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55255878"
 ---
-# <a name="lttype1gt-lttypenamegt-cannot-be-declared-overrides-because-it-does-not-override-a-lttype1gt-in-a-base-lttype2gt"></a><span data-ttu-id="c4f4e-102">&lt;type1&gt; '&lt;typename&gt;' 재정의 하지 않으므로 'o v e로 선언할 수 없습니다는 &lt;type1&gt; 자료의 &lt;type2&gt;</span><span class="sxs-lookup"><span data-stu-id="c4f4e-102">&lt;type1&gt; '&lt;typename&gt;' cannot be declared 'Overrides' because it does not override a &lt;type1&gt; in a base &lt;type2&gt;</span></span>
-<span data-ttu-id="c4f4e-103">기본 클래스에 동일한 이름을 가진 형식이 없을 때 `Sub`, `Function`또는 `Property` 문에서 `Overrides` 를 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="c4f4e-103">A `Sub`, `Function`, or `Property` statement specifies `Overrides` when no type with the same name exists in a base class.</span></span>  
+# <a name="type1-typename-cannot-be-declared-overrides-because-it-does-not-override-a-type1-in-a-base-type2"></a><span data-ttu-id="84d15-102">\<type1 > '\<typename >' 재정의 하지 않으므로 'o v e로 선언할 수 없습니다는 \<type1 > 자료의 \<type2 ></span><span class="sxs-lookup"><span data-stu-id="84d15-102">\<type1> '\<typename>' cannot be declared 'Overrides' because it does not override a \<type1> in a base \<type2></span></span>
+<span data-ttu-id="84d15-103">기본 클래스에 동일한 이름을 가진 형식이 없을 때 `Sub`, `Function`또는 `Property` 문에서 `Overrides` 를 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="84d15-103">A `Sub`, `Function`, or `Property` statement specifies `Overrides` when no type with the same name exists in a base class.</span></span>  
   
- <span data-ttu-id="c4f4e-104">**오류 ID:** BC30284</span><span class="sxs-lookup"><span data-stu-id="c4f4e-104">**Error ID:** BC30284</span></span>  
+ <span data-ttu-id="84d15-104">**오류 ID:** BC30284</span><span class="sxs-lookup"><span data-stu-id="84d15-104">**Error ID:** BC30284</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="c4f4e-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="c4f4e-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="84d15-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="84d15-105">To correct this error</span></span>  
   
-1.  <span data-ttu-id="c4f4e-106">형식 이름 철자가 올바른지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="c4f4e-106">Check that the type name is spelled correctly.</span></span>  
+1.  <span data-ttu-id="84d15-106">형식 이름 철자가 올바른지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="84d15-106">Check that the type name is spelled correctly.</span></span>  
   
-2.  <span data-ttu-id="c4f4e-107">불필요한 `Overrides` 키워드를 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="c4f4e-107">Remove the superfluous `Overrides` keyword.</span></span>  
+2.  <span data-ttu-id="84d15-107">불필요한 `Overrides` 키워드를 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="84d15-107">Remove the superfluous `Overrides` keyword.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="c4f4e-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="c4f4e-108">See also</span></span>
-- [<span data-ttu-id="c4f4e-109">속성 및 파생된 클래스에서 메서드 재정의</span><span class="sxs-lookup"><span data-stu-id="c4f4e-109">Overriding properties and methods in derived classes</span></span>](~/docs/visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md#overriding-properties-and-methods-in-derived-classes)
+## <a name="see-also"></a><span data-ttu-id="84d15-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="84d15-108">See also</span></span>
+- [<span data-ttu-id="84d15-109">속성 및 파생된 클래스에서 메서드 재정의</span><span class="sxs-lookup"><span data-stu-id="84d15-109">Overriding properties and methods in derived classes</span></span>](~/docs/visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md#overriding-properties-and-methods-in-derived-classes)
