--- a/docs/visual-basic/misc/bc30524.md
+++ b/docs/visual-basic/misc/bc30524.md
@@ -1,5 +1,5 @@
 ---
-title: 속성 '&lt;propertyname&gt;'는 'WriteOnly'
+title: 속성 '<propertyname>'는 'WriteOnly'
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30524
@@ -7,21 +7,21 @@ f1_keywords:
 helpviewer_keywords:
 - BC30524
 ms.assetid: 82249c64-df77-4890-8292-e4da707eca96
-ms.openlocfilehash: 8d9ca6b9fa8e121e478ac9d278a58c9074b5bcbd
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 3de979383796c832a55765c53606763a1721cba8
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54683010"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55254602"
 ---
-# <a name="property-ltpropertynamegt-is-writeonly"></a><span data-ttu-id="d1ee1-102">속성 '&lt;propertyname&gt;'는 'WriteOnly'</span><span class="sxs-lookup"><span data-stu-id="d1ee1-102">Property '&lt;propertyname&gt;' is 'WriteOnly'</span></span>
-<span data-ttu-id="d1ee1-103">`WriteOnly`로 선언된 속성에서 값을 가져오려고 했습니다.</span><span class="sxs-lookup"><span data-stu-id="d1ee1-103">You have tried to retrieve a value from a property that is declared `WriteOnly`.</span></span>  
+# <a name="property-propertyname-is-writeonly"></a><span data-ttu-id="f497a-102">속성 '\<propertyname >'는 'WriteOnly'</span><span class="sxs-lookup"><span data-stu-id="f497a-102">Property '\<propertyname>' is 'WriteOnly'</span></span>
+<span data-ttu-id="f497a-103">`WriteOnly`로 선언된 속성에서 값을 가져오려고 했습니다.</span><span class="sxs-lookup"><span data-stu-id="f497a-103">You have tried to retrieve a value from a property that is declared `WriteOnly`.</span></span>  
   
- <span data-ttu-id="d1ee1-104">**오류 ID:** BC30524</span><span class="sxs-lookup"><span data-stu-id="d1ee1-104">**Error ID:** BC30524</span></span>  
+ <span data-ttu-id="f497a-104">**오류 ID:** BC30524</span><span class="sxs-lookup"><span data-stu-id="f497a-104">**Error ID:** BC30524</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="d1ee1-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="d1ee1-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="f497a-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="f497a-105">To correct this error</span></span>  
   
--   <span data-ttu-id="d1ee1-106">속성 선언에서 `WriteOnly` 지정자를 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="d1ee1-106">Remove the `WriteOnly` specifier from the property declaration.</span></span>  
+-   <span data-ttu-id="f497a-106">속성 선언에서 `WriteOnly` 지정자를 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="f497a-106">Remove the `WriteOnly` specifier from the property declaration.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="d1ee1-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="d1ee1-107">See also</span></span>
-- [<span data-ttu-id="d1ee1-108">WriteOnly</span><span class="sxs-lookup"><span data-stu-id="d1ee1-108">WriteOnly</span></span>](../../visual-basic/language-reference/modifiers/writeonly.md)
+## <a name="see-also"></a><span data-ttu-id="f497a-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="f497a-107">See also</span></span>
+- [<span data-ttu-id="f497a-108">WriteOnly</span><span class="sxs-lookup"><span data-stu-id="f497a-108">WriteOnly</span></span>](../../visual-basic/language-reference/modifiers/writeonly.md)
