--- a/docs/visual-basic/misc/bc30554.md
+++ b/docs/visual-basic/misc/bc30554.md
@@ -1,5 +1,5 @@
 ---
-title: "'&lt;namespacename&gt;' 모호 합니다."
+title: "'<namespacename>' 모호 합니다."
 ms.date: 07/20/2015
 f1_keywords:
 - bc30554
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30554
 ms.assetid: f79778e7-a300-4eef-999f-c5cb22e0fbfa
-ms.openlocfilehash: 67bca2a36bff2bca7e2eef527e4ec3eb17ace17f
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: c9a253d381856579c81ba7f383ec6d591b48c0d9
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54583498"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55258281"
 ---
-# <a name="ltnamespacenamegt-is-ambiguous"></a><span data-ttu-id="eb55f-102">'&lt;namespacename&gt;' 모호 합니다.</span><span class="sxs-lookup"><span data-stu-id="eb55f-102">'&lt;namespacename&gt;' is ambiguous</span></span>
-<span data-ttu-id="eb55f-103">모호한 이름을 제공했으므로 다른 이름과 충돌합니다.</span><span class="sxs-lookup"><span data-stu-id="eb55f-103">You have provided a name that is ambiguous and therefore conflicts with another name.</span></span> <span data-ttu-id="eb55f-104">Visual Basic 컴파일러에 충돌 해결 규칙이; 되어 있지 않습니다. 직접 이름을 구분 해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="eb55f-104">The Visual Basic compiler does not have any conflict-resolution rules; you must disambiguate names yourself.</span></span>  
+# <a name="namespacename-is-ambiguous"></a><span data-ttu-id="fd56d-102">'\<namespacename >' 모호 합니다.</span><span class="sxs-lookup"><span data-stu-id="fd56d-102">'\<namespacename>' is ambiguous</span></span>
+<span data-ttu-id="fd56d-103">모호한 이름을 제공했으므로 다른 이름과 충돌합니다.</span><span class="sxs-lookup"><span data-stu-id="fd56d-103">You have provided a name that is ambiguous and therefore conflicts with another name.</span></span> <span data-ttu-id="fd56d-104">Visual Basic 컴파일러에 충돌 해결 규칙이; 되어 있지 않습니다. 직접 이름을 구분 해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="fd56d-104">The Visual Basic compiler does not have any conflict-resolution rules; you must disambiguate names yourself.</span></span>  
   
- <span data-ttu-id="eb55f-105">**오류 ID:** BC30554</span><span class="sxs-lookup"><span data-stu-id="eb55f-105">**Error ID:** BC30554</span></span>  
+ <span data-ttu-id="fd56d-105">**오류 ID:** BC30554</span><span class="sxs-lookup"><span data-stu-id="fd56d-105">**Error ID:** BC30554</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="eb55f-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="eb55f-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="fd56d-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="fd56d-106">To correct this error</span></span>  
   
--   <span data-ttu-id="eb55f-107">이름을 정규화합니다.</span><span class="sxs-lookup"><span data-stu-id="eb55f-107">Fully qualify the name.</span></span>  
+-   <span data-ttu-id="fd56d-107">이름을 정규화합니다.</span><span class="sxs-lookup"><span data-stu-id="fd56d-107">Fully qualify the name.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="eb55f-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="eb55f-108">See also</span></span>
-- [<span data-ttu-id="eb55f-109">Visual Basic의 네임 스페이스</span><span class="sxs-lookup"><span data-stu-id="eb55f-109">Namespaces in Visual Basic</span></span>](../../visual-basic/programming-guide/program-structure/namespaces.md)
-- [<span data-ttu-id="eb55f-110">Namespace 문</span><span class="sxs-lookup"><span data-stu-id="eb55f-110">Namespace Statement</span></span>](../../visual-basic/language-reference/statements/namespace-statement.md)
+## <a name="see-also"></a><span data-ttu-id="fd56d-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="fd56d-108">See also</span></span>
+- [<span data-ttu-id="fd56d-109">Visual Basic의 네임 스페이스</span><span class="sxs-lookup"><span data-stu-id="fd56d-109">Namespaces in Visual Basic</span></span>](../../visual-basic/programming-guide/program-structure/namespaces.md)
+- [<span data-ttu-id="fd56d-110">Namespace 문</span><span class="sxs-lookup"><span data-stu-id="fd56d-110">Namespace Statement</span></span>](../../visual-basic/language-reference/statements/namespace-statement.md)
