--- a/docs/visual-basic/misc/bc31131.md
+++ b/docs/visual-basic/misc/bc31131.md
@@ -1,5 +1,5 @@
 ---
-title: "'RemoveHandler' 정의가 없습니다. 이벤트에 대 한 '&lt;eventname&gt;'"
+title: 누락 이벤트에 대 한 'RemoveHandler' 정의가 '<eventname>'
 ms.date: 07/20/2015
 f1_keywords:
 - bc31131
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC31131
 ms.assetid: 0ef68daf-b66e-4ecf-bf2c-dcacabd8aa3d
-ms.openlocfilehash: b898b31cb5372679de0db3a7849c6b50d9849dab
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: ce5683ce6f5749a62e94698fb627423391f1a7c2
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54728949"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55257241"
 ---
-# <a name="removehandler-definition-missing-for-event-lteventnamegt"></a><span data-ttu-id="0b54b-102">'RemoveHandler' 정의가 없습니다. 이벤트에 대 한 '&lt;eventname&gt;'</span><span class="sxs-lookup"><span data-stu-id="0b54b-102">'RemoveHandler' definition missing for event '&lt;eventname&gt;'</span></span>
-<span data-ttu-id="0b54b-103">이벤트가 `Custom`으로 선언된 경우 이벤트 처리기를 제거하기 위한 프로시저를 제공해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="0b54b-103">If an event is declared as `Custom`, it must supply a procedure for removing an event handler.</span></span>  
+# <a name="removehandler-definition-missing-for-event-eventname"></a><span data-ttu-id="79c2c-102">누락 이벤트에 대 한 'RemoveHandler' 정의가 '\<eventname >'</span><span class="sxs-lookup"><span data-stu-id="79c2c-102">'RemoveHandler' definition missing for event '\<eventname>'</span></span>
+<span data-ttu-id="79c2c-103">이벤트가 `Custom`으로 선언된 경우 이벤트 처리기를 제거하기 위한 프로시저를 제공해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="79c2c-103">If an event is declared as `Custom`, it must supply a procedure for removing an event handler.</span></span>  
   
- <span data-ttu-id="0b54b-104">**오류 ID:** BC31131</span><span class="sxs-lookup"><span data-stu-id="0b54b-104">**Error ID:** BC31131</span></span>  
+ <span data-ttu-id="79c2c-104">**오류 ID:** BC31131</span><span class="sxs-lookup"><span data-stu-id="79c2c-104">**Error ID:** BC31131</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="0b54b-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="0b54b-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="79c2c-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="79c2c-105">To correct this error</span></span>  
   
-1.  <span data-ttu-id="0b54b-106">`RemoveHandler` 문과 `Custom Event` 문 사이에 `End Event` 선언을 포함합니다.</span><span class="sxs-lookup"><span data-stu-id="0b54b-106">Include a `RemoveHandler` declaration between the `Custom Event` statement and the `End Event` statement.</span></span>  
+1.  <span data-ttu-id="79c2c-106">`RemoveHandler` 문과 `Custom Event` 문 사이에 `End Event` 선언을 포함합니다.</span><span class="sxs-lookup"><span data-stu-id="79c2c-106">Include a `RemoveHandler` declaration between the `Custom Event` statement and the `End Event` statement.</span></span>  
   
-2.  <span data-ttu-id="0b54b-107">이벤트 선언 내의 다른 프로시저가 올바르게 종료되었는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="0b54b-107">Verify that other procedures within the event declaration are correctly terminated.</span></span>  
+2.  <span data-ttu-id="79c2c-107">이벤트 선언 내의 다른 프로시저가 올바르게 종료되었는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="79c2c-107">Verify that other procedures within the event declaration are correctly terminated.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="0b54b-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="0b54b-108">See also</span></span>
-- [<span data-ttu-id="0b54b-109">RemoveHandler 문</span><span class="sxs-lookup"><span data-stu-id="0b54b-109">RemoveHandler Statement</span></span>](../../visual-basic/language-reference/statements/removehandler-statement.md)
-- [<span data-ttu-id="0b54b-110">Event 문</span><span class="sxs-lookup"><span data-stu-id="0b54b-110">Event Statement</span></span>](../../visual-basic/language-reference/statements/event-statement.md)
+## <a name="see-also"></a><span data-ttu-id="79c2c-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="79c2c-108">See also</span></span>
+- [<span data-ttu-id="79c2c-109">RemoveHandler 문</span><span class="sxs-lookup"><span data-stu-id="79c2c-109">RemoveHandler Statement</span></span>](../../visual-basic/language-reference/statements/removehandler-statement.md)
+- [<span data-ttu-id="79c2c-110">Event 문</span><span class="sxs-lookup"><span data-stu-id="79c2c-110">Event Statement</span></span>](../../visual-basic/language-reference/statements/event-statement.md)
