--- a/docs/visual-basic/misc/bc31139.md
+++ b/docs/visual-basic/misc/bc31139.md
@@ -1,5 +1,5 @@
 ---
-title: "'&lt;이름을&gt;' 'm e'를 대신 사용 하십시오 기본 인스턴스를 통해 자신을 참조할 수 없습니다."
+title: "'<name>' 'm e'를 대신 사용 하십시오 기본 인스턴스를 통해 자신을 참조할 수 없습니다."
 ms.date: 07/20/2015
 f1_keywords:
 - vbc31139
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC31139
 ms.assetid: 459e5d5a-d526-4cd0-934e-96e4e1eb51bb
-ms.openlocfilehash: 314d9f99bad397adb6d7d72f089596d9f0ef77e0
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: b08461f58f8be9cf46f36a361f526f69017385eb
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54618674"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55258268"
 ---
-# <a name="ltnamegt-cannot-refer-to-itself-through-its-default-instance-use-me-instead"></a><span data-ttu-id="b449a-102">'&lt;이름을&gt;' 'm e'를 대신 사용 하십시오 기본 인스턴스를 통해 자신을 참조할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="b449a-102">'&lt;name&gt;' cannot refer to itself through its default instance, use 'Me' instead</span></span>
-<span data-ttu-id="b449a-103">폼 내부에서 해당 폼을 기본 인스턴스로 참조하려고 했습니다.</span><span class="sxs-lookup"><span data-stu-id="b449a-103">An attempt has been made from inside a form to refer to that form as a default instance.</span></span> <span data-ttu-id="b449a-104">이 경우 폼이 자신을 재귀적으로 호출할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="b449a-104">This can cause the form to call itself recursively.</span></span>  
+# <a name="name-cannot-refer-to-itself-through-its-default-instance-use-me-instead"></a><span data-ttu-id="63091-102">'\<이름 >'은 기본 인스턴스를 통해 자신을 참조할 수 없습니다 'Me' 대신 사용 하세요</span><span class="sxs-lookup"><span data-stu-id="63091-102">'\<name>' cannot refer to itself through its default instance, use 'Me' instead</span></span>
+<span data-ttu-id="63091-103">폼 내부에서 해당 폼을 기본 인스턴스로 참조하려고 했습니다.</span><span class="sxs-lookup"><span data-stu-id="63091-103">An attempt has been made from inside a form to refer to that form as a default instance.</span></span> <span data-ttu-id="63091-104">이 경우 폼이 자신을 재귀적으로 호출할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="63091-104">This can cause the form to call itself recursively.</span></span>  
   
- <span data-ttu-id="b449a-105">대체로 폼의 현재 인스턴스를 참조하는 경우 기본 인스턴스 대신 `Me` 를 사용해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="b449a-105">In most circumstances, you should use `Me` to when referring to the current instance of the form, instead of using the default instance.</span></span>  
+ <span data-ttu-id="63091-105">대체로 폼의 현재 인스턴스를 참조하는 경우 기본 인스턴스 대신 `Me` 를 사용해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="63091-105">In most circumstances, you should use `Me` to when referring to the current instance of the form, instead of using the default instance.</span></span>  
   
- <span data-ttu-id="b449a-106">**오류 ID:** BC31139</span><span class="sxs-lookup"><span data-stu-id="b449a-106">**Error ID:** BC31139</span></span>  
+ <span data-ttu-id="63091-106">**오류 ID:** BC31139</span><span class="sxs-lookup"><span data-stu-id="63091-106">**Error ID:** BC31139</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="b449a-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="b449a-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="63091-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="63091-107">To correct this error</span></span>  
   
--   <span data-ttu-id="b449a-108">`Me` 를 사용하여 개체를 참조합니다.</span><span class="sxs-lookup"><span data-stu-id="b449a-108">Use `Me` to refer to the object.</span></span>  
+-   <span data-ttu-id="63091-108">`Me` 를 사용하여 개체를 참조합니다.</span><span class="sxs-lookup"><span data-stu-id="63091-108">Use `Me` to refer to the object.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="b449a-109">참고자료</span><span class="sxs-lookup"><span data-stu-id="b449a-109">See also</span></span>
-- [<span data-ttu-id="b449a-110">디버거 기본 사항</span><span class="sxs-lookup"><span data-stu-id="b449a-110">Debugger Basics</span></span>](/visualstudio/debugger/debugger-basics)
+## <a name="see-also"></a><span data-ttu-id="63091-109">참고자료</span><span class="sxs-lookup"><span data-stu-id="63091-109">See also</span></span>
+- [<span data-ttu-id="63091-110">디버거 기본 사항</span><span class="sxs-lookup"><span data-stu-id="63091-110">Debugger Basics</span></span>](/visualstudio/debugger/debugger-basics)
