--- a/docs/visual-basic/misc/bc31407.md
+++ b/docs/visual-basic/misc/bc31407.md
@@ -1,5 +1,5 @@
 ---
-title: 이벤트 '&lt;행사 이름 1&gt;'이벤트를 구현할 수 없습니다.'&lt;eventname2&gt;''대리자 형식이에 의해 구현 된 다른 이벤트의 대리자 형식 일치 하지 않아&lt;행사 이름 1&gt;'
+title: 이벤트 '<eventname1>'이벤트를 구현할 수 없습니다.'<eventname2>''대리자 형식이에 의해 구현 된 다른 이벤트의 대리자 형식 일치 하지 않아<eventname1>'
 ms.date: 07/20/2015
 f1_keywords:
 - bc31407
@@ -7,21 +7,21 @@ f1_keywords:
 helpviewer_keywords:
 - BC31407
 ms.assetid: 0b9ffddb-4759-438b-b569-beac7062e986
-ms.openlocfilehash: ba7567ef0b81ff22160cbe3bd083fd8f679b1f5a
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 4d49d85d9821018223af0d476176ea18da312a58
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54593552"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55259493"
 ---
-# <a name="event-lteventname1gt-cannot-implement-event-lteventname2gt-because-its-delegate-type-does-not-match-the-delegate-type-of-another-event-implemented-by-lteventname1gt"></a><span data-ttu-id="6d9d0-102">이벤트 '&lt;행사 이름 1&gt;'이벤트를 구현할 수 없습니다.'&lt;eventname2&gt;''대리자 형식이에 의해 구현 된 다른 이벤트의 대리자 형식 일치 하지 않아&lt;행사 이름 1&gt;'</span><span class="sxs-lookup"><span data-stu-id="6d9d0-102">Event '&lt;eventname1&gt;' cannot implement event '&lt;eventname2&gt;' because its delegate type does not match the delegate type of another event implemented by '&lt;eventname1&gt;'</span></span>
-<span data-ttu-id="6d9d0-103">이벤트의 대리자 형식과 다른 이벤트의 대리자 형식과 일치 하지 않으므로 Visual Basic에서 이벤트를 구현할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="6d9d0-103">Visual Basic cannot implement an event because the delegate type of the event does not match the delegate type of another event.</span></span> <span data-ttu-id="6d9d0-104">이 오류는 인터페이스에서 여러 이벤트를 정의한 다음 동일한 이벤트로 함께 구현하려고 하는 경우에 발생할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="6d9d0-104">This error can occur when you define multiple events in an interface and then attempt to implement them together with the same event.</span></span> <span data-ttu-id="6d9d0-105">구현된 모든 이벤트가 `As` 구문을 사용하여 선언되고 동일한 대리자 형식을 지정하는 경우에만 이벤트에서 둘 이상의 이벤트를 구현할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="6d9d0-105">An event can implement two or more events only if all implemented events are declared using the `As` syntax and specify the same delegate type.</span></span>  
+# <a name="event-eventname1-cannot-implement-event-eventname2-because-its-delegate-type-does-not-match-the-delegate-type-of-another-event-implemented-by-eventname1"></a><span data-ttu-id="6ef0a-102">이벤트 '\<행사 이름 1 >' 이벤트를 구현할 수 없습니다. '\<eventname2 >' 대리자 형식이 의해 구현 된 다른 이벤트의 대리자 형식과 맞지 않기 때문에 '\<행사 이름 1 >'</span><span class="sxs-lookup"><span data-stu-id="6ef0a-102">Event '\<eventname1>' cannot implement event '\<eventname2>' because its delegate type does not match the delegate type of another event implemented by '\<eventname1>'</span></span>
+<span data-ttu-id="6ef0a-103">이벤트의 대리자 형식과 다른 이벤트의 대리자 형식과 일치 하지 않으므로 Visual Basic에서 이벤트를 구현할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="6ef0a-103">Visual Basic cannot implement an event because the delegate type of the event does not match the delegate type of another event.</span></span> <span data-ttu-id="6ef0a-104">이 오류는 인터페이스에서 여러 이벤트를 정의한 다음 동일한 이벤트로 함께 구현하려고 하는 경우에 발생할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="6ef0a-104">This error can occur when you define multiple events in an interface and then attempt to implement them together with the same event.</span></span> <span data-ttu-id="6ef0a-105">구현된 모든 이벤트가 `As` 구문을 사용하여 선언되고 동일한 대리자 형식을 지정하는 경우에만 이벤트에서 둘 이상의 이벤트를 구현할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="6ef0a-105">An event can implement two or more events only if all implemented events are declared using the `As` syntax and specify the same delegate type.</span></span>  
   
- <span data-ttu-id="6d9d0-106">**오류 ID:** BC31407</span><span class="sxs-lookup"><span data-stu-id="6d9d0-106">**Error ID:** BC31407</span></span>  
+ <span data-ttu-id="6ef0a-106">**오류 ID:** BC31407</span><span class="sxs-lookup"><span data-stu-id="6ef0a-106">**Error ID:** BC31407</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="6d9d0-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="6d9d0-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="6ef0a-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="6ef0a-107">To correct this error</span></span>  
   
--   <span data-ttu-id="6d9d0-108">이벤트를 개별적으로 구현합니다.</span><span class="sxs-lookup"><span data-stu-id="6d9d0-108">Implement the events separately.</span></span>  
+-   <span data-ttu-id="6ef0a-108">이벤트를 개별적으로 구현합니다.</span><span class="sxs-lookup"><span data-stu-id="6ef0a-108">Implement the events separately.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="6d9d0-109">참고자료</span><span class="sxs-lookup"><span data-stu-id="6d9d0-109">See also</span></span>
-- [<span data-ttu-id="6d9d0-110">이벤트</span><span class="sxs-lookup"><span data-stu-id="6d9d0-110">Events</span></span>](../../visual-basic/programming-guide/language-features/events/index.md)
+## <a name="see-also"></a><span data-ttu-id="6ef0a-109">참고자료</span><span class="sxs-lookup"><span data-stu-id="6ef0a-109">See also</span></span>
+- [<span data-ttu-id="6ef0a-110">이벤트</span><span class="sxs-lookup"><span data-stu-id="6ef0a-110">Events</span></span>](../../visual-basic/programming-guide/language-features/events/index.md)
