--- a/docs/visual-basic/misc/bc31437.md
+++ b/docs/visual-basic/misc/bc31437.md
@@ -1,5 +1,5 @@
 ---
-title: "'&lt;elementname&gt;' 부분 메서드는 Sub 여야 하므로 'Partial'로 선언할 수 없습니다"
+title: "'<elementname>' 부분 메서드는 Sub 여야 하므로 'Partial'로 선언할 수 없습니다"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc31437
@@ -7,29 +7,29 @@ f1_keywords:
 helpviewer_keywords:
 - BC31437
 ms.assetid: 31ca12ab-2c26-4907-a253-e7c57bb4f34b
-ms.openlocfilehash: 2469b3b17f2b16e2bfcebbdea8f790f532ee856e
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: ccfa5569fab959e47e6c834e5c275c834e5ee5d9
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54526472"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55257280"
 ---
-# <a name="ltelementnamegt-cannot-be-declared-partial-because-partial-methods-must-be-subs"></a><span data-ttu-id="617b8-102">'&lt;elementname&gt;' 부분 메서드는 Sub 여야 하므로 'Partial'로 선언할 수 없습니다</span><span class="sxs-lookup"><span data-stu-id="617b8-102">'&lt;elementname&gt;' cannot be declared 'Partial' because partial methods must be Subs</span></span>
-<span data-ttu-id="617b8-103">`Sub` 프로시저만 부분 메서드(Partial Method)를 선언할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="617b8-103">Only `Sub` procedures can be declared to be partial methods.</span></span> <span data-ttu-id="617b8-104">예를 들어 다음 코드는 `partialMethod` 가 함수이기 때문에 이 오류를 생성합니다.</span><span class="sxs-lookup"><span data-stu-id="617b8-104">For example, the following code causes this error because `partialMethod` is a function.</span></span>  
+# <a name="elementname-cannot-be-declared-partial-because-partial-methods-must-be-subs"></a><span data-ttu-id="e2617-102">'\<elementname >' 부분 메서드는 Sub 여야 하므로 'Partial'로 선언할 수 없습니다</span><span class="sxs-lookup"><span data-stu-id="e2617-102">'\<elementname>' cannot be declared 'Partial' because partial methods must be Subs</span></span>
+<span data-ttu-id="e2617-103">`Sub` 프로시저만 부분 메서드(Partial Method)를 선언할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="e2617-103">Only `Sub` procedures can be declared to be partial methods.</span></span> <span data-ttu-id="e2617-104">예를 들어 다음 코드는 `partialMethod` 가 함수이기 때문에 이 오류를 생성합니다.</span><span class="sxs-lookup"><span data-stu-id="e2617-104">For example, the following code causes this error because `partialMethod` is a function.</span></span>  
   
 ```  
 ' Partial Private Function partialMethod(ByVal n As Integer) As Integer  
 ' End Function  
 ```  
   
- <span data-ttu-id="617b8-105">**오류 ID:** BC31437</span><span class="sxs-lookup"><span data-stu-id="617b8-105">**Error ID:** BC31437</span></span>  
+ <span data-ttu-id="e2617-105">**오류 ID:** BC31437</span><span class="sxs-lookup"><span data-stu-id="e2617-105">**Error ID:** BC31437</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="617b8-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="617b8-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="e2617-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="e2617-106">To correct this error</span></span>  
   
--   <span data-ttu-id="617b8-107">부분 메서드(Partial Method)로 선언하는 항목을 `Sub`로 변환합니다.</span><span class="sxs-lookup"><span data-stu-id="617b8-107">Convert what you are declaring as a partial method to a `Sub`.</span></span>  
+-   <span data-ttu-id="e2617-107">부분 메서드(Partial Method)로 선언하는 항목을 `Sub`로 변환합니다.</span><span class="sxs-lookup"><span data-stu-id="e2617-107">Convert what you are declaring as a partial method to a `Sub`.</span></span>  
   
--   <span data-ttu-id="617b8-108">이 경우 부분 메서드(Partial Method)를 사용하지 마세요.</span><span class="sxs-lookup"><span data-stu-id="617b8-108">Do not use a partial method in this case.</span></span>  
+-   <span data-ttu-id="e2617-108">이 경우 부분 메서드(Partial Method)를 사용하지 마세요.</span><span class="sxs-lookup"><span data-stu-id="e2617-108">Do not use a partial method in this case.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="617b8-109">참고자료</span><span class="sxs-lookup"><span data-stu-id="617b8-109">See also</span></span>
-- [<span data-ttu-id="617b8-110">부분 메서드</span><span class="sxs-lookup"><span data-stu-id="617b8-110">Partial Methods</span></span>](../../visual-basic/programming-guide/language-features/procedures/partial-methods.md)
-- [<span data-ttu-id="617b8-111">Sub 프로시저</span><span class="sxs-lookup"><span data-stu-id="617b8-111">Sub Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/sub-procedures.md)
+## <a name="see-also"></a><span data-ttu-id="e2617-109">참고자료</span><span class="sxs-lookup"><span data-stu-id="e2617-109">See also</span></span>
+- [<span data-ttu-id="e2617-110">부분 메서드</span><span class="sxs-lookup"><span data-stu-id="e2617-110">Partial Methods</span></span>](../../visual-basic/programming-guide/language-features/procedures/partial-methods.md)
+- [<span data-ttu-id="e2617-111">Sub 프로시저</span><span class="sxs-lookup"><span data-stu-id="e2617-111">Sub Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/sub-procedures.md)
