--- a/docs/visual-basic/misc/bc32078.md
+++ b/docs/visual-basic/misc/bc32078.md
@@ -1,5 +1,5 @@
 ---
-title: "'&lt;membername&gt;'구현할 수 없습니다.'&lt;interfacename&gt;.&lt; 다르기&gt;' 형식 매개 변수 제약 조건이 다르기 때문에"
+title: "'<membername>'구현할 수 없습니다.'<interfacename>.<interfacemembername>' 형식 매개 변수 제약 조건이 다르기 때문에"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc32078
@@ -7,30 +7,30 @@ f1_keywords:
 helpviewer_keywords:
 - BC32078
 ms.assetid: 2c971345-edb4-491e-9202-8eb8286b66f8
-ms.openlocfilehash: a37a7e672d69219833ce63307f591aed33d5cd9d
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 05347a876ad9c816fb0d1403ff9b677c60259f76
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54500787"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55258177"
 ---
-# <a name="ltmembernamegt-cannot-implement-ltinterfacenamegtltinterfacemembernamegt-because-they-differ-by-type-parameter-constraints"></a><span data-ttu-id="26f18-102">'&lt;membername&gt;'구현할 수 없습니다.'&lt;interfacename&gt;.&lt; 다르기&gt;' 형식 매개 변수 제약 조건이 다르기 때문에</span><span class="sxs-lookup"><span data-stu-id="26f18-102">'&lt;membername&gt;' cannot implement '&lt;interfacename&gt;.&lt;interfacemembername&gt;' because they differ by type parameter constraints</span></span>
-<span data-ttu-id="26f18-103">제네릭 이벤트, 속성 또는 프로시저가 인터페이스에서 정의된 유사한 멤버를 구현하려고 하지만 각각의 형식 매개 변수가 서로 다른 제약 조건 목록을 가지고 있습니다.</span><span class="sxs-lookup"><span data-stu-id="26f18-103">A generic event, property, or procedure attempts to implement a similar member defined in an interface, but they have different constraint lists on their type parameters.</span></span>  
+# <a name="membername-cannot-implement-interfacenameinterfacemembername-because-they-differ-by-type-parameter-constraints"></a><span data-ttu-id="62526-102">'\<membername >' 구현할 수 없습니다. '\<interfacename >.\< 다르기 >' 형식 매개 변수 제약 조건이 다르기 때문에</span><span class="sxs-lookup"><span data-stu-id="62526-102">'\<membername>' cannot implement '\<interfacename>.\<interfacemembername>' because they differ by type parameter constraints</span></span>
+<span data-ttu-id="62526-103">제네릭 이벤트, 속성 또는 프로시저가 인터페이스에서 정의된 유사한 멤버를 구현하려고 하지만 각각의 형식 매개 변수가 서로 다른 제약 조건 목록을 가지고 있습니다.</span><span class="sxs-lookup"><span data-stu-id="62526-103">A generic event, property, or procedure attempts to implement a similar member defined in an interface, but they have different constraint lists on their type parameters.</span></span>  
   
- <span data-ttu-id="26f18-104">인터페이스 멤버를 구현하려면 구현 멤버가 인터페이스 멤버의 전체 서명뿐만 아니라 각 매개 변수의 전달 메커니즘과도 일치해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="26f18-104">To implement an interface member, the implementing member must match not only the complete signature of the interface member, but also the passing mechanism of each parameter.</span></span>  
+ <span data-ttu-id="62526-104">인터페이스 멤버를 구현하려면 구현 멤버가 인터페이스 멤버의 전체 서명뿐만 아니라 각 매개 변수의 전달 메커니즘과도 일치해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="62526-104">To implement an interface member, the implementing member must match not only the complete signature of the interface member, but also the passing mechanism of each parameter.</span></span>  
   
- <span data-ttu-id="26f18-105">제네릭 인터페이스 멤버를 구현하려면 구현 멤버가 추가적으로 형식 매개 변수 수 및 각 형식 매개 변수의 제약 조건 목록과 일치해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="26f18-105">To implement a generic interface member, the implementing member must additionally match the number of type parameters and the constraint list of each one.</span></span>  
+ <span data-ttu-id="62526-105">제네릭 인터페이스 멤버를 구현하려면 구현 멤버가 추가적으로 형식 매개 변수 수 및 각 형식 매개 변수의 제약 조건 목록과 일치해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="62526-105">To implement a generic interface member, the implementing member must additionally match the number of type parameters and the constraint list of each one.</span></span>  
   
- <span data-ttu-id="26f18-106">인터페이스 구현에 대 한 내용은 다음을 참조 하세요.</span><span class="sxs-lookup"><span data-stu-id="26f18-106">For details on interface implementation, see .</span></span>  
+ <span data-ttu-id="62526-106">인터페이스 구현에 대 한 내용은 다음을 참조 하세요.</span><span class="sxs-lookup"><span data-stu-id="62526-106">For details on interface implementation, see .</span></span>  
   
- <span data-ttu-id="26f18-107">**오류 ID:** BC32078</span><span class="sxs-lookup"><span data-stu-id="26f18-107">**Error ID:** BC32078</span></span>  
+ <span data-ttu-id="62526-107">**오류 ID:** BC32078</span><span class="sxs-lookup"><span data-stu-id="62526-107">**Error ID:** BC32078</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="26f18-108">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="26f18-108">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="62526-108">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="62526-108">To correct this error</span></span>  
   
--   <span data-ttu-id="26f18-109">인터페이스 멤버를 구현하려면 형식 매개 변수 제약 조건을 수정하여 인터페이스 멤버의 형식 매개 변수 제약 조건과 정확히 일치시킵니다.</span><span class="sxs-lookup"><span data-stu-id="26f18-109">If you intend to implement the interface member, revise the type parameter constraints to exactly match those of the interface member.</span></span>  
+-   <span data-ttu-id="62526-109">인터페이스 멤버를 구현하려면 형식 매개 변수 제약 조건을 수정하여 인터페이스 멤버의 형식 매개 변수 제약 조건과 정확히 일치시킵니다.</span><span class="sxs-lookup"><span data-stu-id="62526-109">If you intend to implement the interface member, revise the type parameter constraints to exactly match those of the interface member.</span></span>  
   
--   <span data-ttu-id="26f18-110">형식 매개 변수 제약 조건을 있는 그대로 유지해야 하는 경우 이 선언에서 인터페이스 멤버를 구현할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="26f18-110">If the type parameter constraints must remain as you have them, you cannot implement the interface member in this declaration.</span></span> <span data-ttu-id="26f18-111">제거 된 [구현](../../visual-basic/language-reference/statements/implements-clause.md) 선언에서 키워드입니다.</span><span class="sxs-lookup"><span data-stu-id="26f18-111">Remove the [Implements](../../visual-basic/language-reference/statements/implements-clause.md) keyword from the declaration.</span></span>  
+-   <span data-ttu-id="62526-110">형식 매개 변수 제약 조건을 있는 그대로 유지해야 하는 경우 이 선언에서 인터페이스 멤버를 구현할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="62526-110">If the type parameter constraints must remain as you have them, you cannot implement the interface member in this declaration.</span></span> <span data-ttu-id="62526-111">제거 된 [구현](../../visual-basic/language-reference/statements/implements-clause.md) 선언에서 키워드입니다.</span><span class="sxs-lookup"><span data-stu-id="62526-111">Remove the [Implements](../../visual-basic/language-reference/statements/implements-clause.md) keyword from the declaration.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="26f18-112">참고자료</span><span class="sxs-lookup"><span data-stu-id="26f18-112">See also</span></span>
-- [<span data-ttu-id="26f18-113">Visual Basic의 제네릭 형식</span><span class="sxs-lookup"><span data-stu-id="26f18-113">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+## <a name="see-also"></a><span data-ttu-id="62526-112">참고자료</span><span class="sxs-lookup"><span data-stu-id="62526-112">See also</span></span>
+- [<span data-ttu-id="62526-113">Visual Basic의 제네릭 형식</span><span class="sxs-lookup"><span data-stu-id="62526-113">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
 
