--- a/docs/visual-basic/misc/bc32087.md
+++ b/docs/visual-basic/misc/bc32087.md
@@ -1,5 +1,5 @@
 ---
-title: 오버 로드 확인에 실패 했습니다 액세스 가능한 '&lt;genericprocedurename&gt;'이 개수의 형식 인수를 허용 합니다.
+title: 오버 로드 확인에 실패 했습니다 액세스 가능한 '<genericprocedurename>'이 개수의 형식 인수를 허용 합니다.
 ms.date: 07/20/2015
 f1_keywords:
 - bc32087
@@ -7,32 +7,32 @@ f1_keywords:
 helpviewer_keywords:
 - BC32087
 ms.assetid: a3eaafd3-80f6-4b7d-9b75-47b043fe17b5
-ms.openlocfilehash: 8211c1b275f4c01f13724a18b119c3c3f0cca623
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: e6e340bc6a506b2cb1bc8acccd4710a6903e69c1
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54548939"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55256747"
 ---
-# <a name="overload-resolution-failed-because-no-accessible-ltgenericprocedurenamegt-accepts-this-number-of-type-arguments"></a><span data-ttu-id="42915-102">오버 로드 확인에 실패 했습니다 액세스 가능한 '&lt;genericprocedurename&gt;'이 개수의 형식 인수를 허용 합니다.</span><span class="sxs-lookup"><span data-stu-id="42915-102">Overload resolution failed because no accessible '&lt;genericprocedurename&gt;' accepts this number of type arguments</span></span>
-<span data-ttu-id="42915-103">컴파일러가 적절한 개수의 형식 매개 변수를 사용하여 오버로드된 버전에 액세스할 수 없으므로 오버로드된 제네릭 프로시저 호출을 확인할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="42915-103">A call to an overloaded generic procedure cannot be resolved because the compiler cannot access any overloaded version with the appropriate number of type parameters.</span></span>  
+# <a name="overload-resolution-failed-because-no-accessible-genericprocedurename-accepts-this-number-of-type-arguments"></a><span data-ttu-id="04a04-102">오버 로드 확인에 실패 했습니다 액세스 가능한 '\<genericprocedurename >'이 개수의 형식 인수를 허용 합니다.</span><span class="sxs-lookup"><span data-stu-id="04a04-102">Overload resolution failed because no accessible '\<genericprocedurename>' accepts this number of type arguments</span></span>
+<span data-ttu-id="04a04-103">컴파일러가 적절한 개수의 형식 매개 변수를 사용하여 오버로드된 버전에 액세스할 수 없으므로 오버로드된 제네릭 프로시저 호출을 확인할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="04a04-103">A call to an overloaded generic procedure cannot be resolved because the compiler cannot access any overloaded version with the appropriate number of type parameters.</span></span>  
   
- <span data-ttu-id="42915-104">제네릭 프로시저를 호출하는 경우 각 형식 매개 변수에 대해 하나의 형식 인수를 제공해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="42915-104">When you call a generic procedure, you must supply one type argument for each type parameter.</span></span> <span data-ttu-id="42915-105">또는 형식 인수를 제공하지 않고 컴파일러에서 *형식 유추*를 수행하도록 할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="42915-105">Alternatively, you can supply no type arguments at all and let the compiler attempt to do *type inference*.</span></span> <span data-ttu-id="42915-106">자세한 내용은 [Generic Procedures in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)의 "형식 유추"를 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="42915-106">For more information, see "Type Inference" in [Generic Procedures in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md).</span></span>  
+ <span data-ttu-id="04a04-104">제네릭 프로시저를 호출하는 경우 각 형식 매개 변수에 대해 하나의 형식 인수를 제공해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="04a04-104">When you call a generic procedure, you must supply one type argument for each type parameter.</span></span> <span data-ttu-id="04a04-105">또는 형식 인수를 제공하지 않고 컴파일러에서 *형식 유추*를 수행하도록 할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="04a04-105">Alternatively, you can supply no type arguments at all and let the compiler attempt to do *type inference*.</span></span> <span data-ttu-id="04a04-106">자세한 내용은 [Generic Procedures in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)의 "형식 유추"를 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="04a04-106">For more information, see "Type Inference" in [Generic Procedures in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md).</span></span>  
   
- <span data-ttu-id="42915-107">**오류 ID:** BC32087</span><span class="sxs-lookup"><span data-stu-id="42915-107">**Error ID:** BC32087</span></span>  
+ <span data-ttu-id="04a04-107">**오류 ID:** BC32087</span><span class="sxs-lookup"><span data-stu-id="04a04-107">**Error ID:** BC32087</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="42915-108">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="42915-108">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="04a04-108">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="04a04-108">To correct this error</span></span>  
   
-1.  <span data-ttu-id="42915-109">호출 코드에서 호출하려는 버전에 액세스할 수 있는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="42915-109">Ensure that the version you intend to call is accessible by the calling code.</span></span> <span data-ttu-id="42915-110">[Access levels in Visual Basic](../../visual-basic/programming-guide/language-features/declared-elements/access-levels.md)을 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="42915-110">See [Access levels in Visual Basic](../../visual-basic/programming-guide/language-features/declared-elements/access-levels.md).</span></span>  
+1.  <span data-ttu-id="04a04-109">호출 코드에서 호출하려는 버전에 액세스할 수 있는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="04a04-109">Ensure that the version you intend to call is accessible by the calling code.</span></span> <span data-ttu-id="04a04-110">[Access levels in Visual Basic](../../visual-basic/programming-guide/language-features/declared-elements/access-levels.md)을 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="04a04-110">See [Access levels in Visual Basic](../../visual-basic/programming-guide/language-features/declared-elements/access-levels.md).</span></span>  
   
-2.  <span data-ttu-id="42915-111">형식 인수 목록이 호출하려는 버전의 형식 매개 변수 목록과 일치하도록 호출 코드에서 형식 인수를 추가하거나 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="42915-111">Add or remove type arguments from your calling code so that the type argument list matches the type parameter list of the version you intend to call.</span></span>  
+2.  <span data-ttu-id="04a04-111">형식 인수 목록이 호출하려는 버전의 형식 매개 변수 목록과 일치하도록 호출 코드에서 형식 인수를 추가하거나 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="04a04-111">Add or remove type arguments from your calling code so that the type argument list matches the type parameter list of the version you intend to call.</span></span>  
   
-     <span data-ttu-id="42915-112">또는</span><span class="sxs-lookup"><span data-stu-id="42915-112">-or-</span></span>  
+     <span data-ttu-id="04a04-112">또는</span><span class="sxs-lookup"><span data-stu-id="04a04-112">-or-</span></span>  
   
-     <span data-ttu-id="42915-113">호출 코드에서 모든 형식 인수를 제거하고 컴파일러에서 형식 유추를 수행하도록 합니다.</span><span class="sxs-lookup"><span data-stu-id="42915-113">Remove all type arguments from your calling code and let the compiler attempt to do type inference.</span></span> <span data-ttu-id="42915-114">충돌 또는 모호성이 있을 경우 형식 유추에 실패할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="42915-114">Be aware that type inference can fail if there are conflicts or ambiguities.</span></span>  
+     <span data-ttu-id="04a04-113">호출 코드에서 모든 형식 인수를 제거하고 컴파일러에서 형식 유추를 수행하도록 합니다.</span><span class="sxs-lookup"><span data-stu-id="04a04-113">Remove all type arguments from your calling code and let the compiler attempt to do type inference.</span></span> <span data-ttu-id="04a04-114">충돌 또는 모호성이 있을 경우 형식 유추에 실패할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="04a04-114">Be aware that type inference can fail if there are conflicts or ambiguities.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="42915-115">참고자료</span><span class="sxs-lookup"><span data-stu-id="42915-115">See also</span></span>
-- [<span data-ttu-id="42915-116">오버로드된 속성 및 메서드</span><span class="sxs-lookup"><span data-stu-id="42915-116">Overloaded Properties and Methods</span></span>](../../visual-basic/programming-guide/language-features/objects-and-classes/overloaded-properties-and-methods.md)
-- [<span data-ttu-id="42915-117">오버로드 확인</span><span class="sxs-lookup"><span data-stu-id="42915-117">Overload Resolution</span></span>](../../visual-basic/programming-guide/language-features/procedures/overload-resolution.md)
-- [<span data-ttu-id="42915-118">Visual Basic의 제네릭 형식</span><span class="sxs-lookup"><span data-stu-id="42915-118">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="42915-119">형식 목록</span><span class="sxs-lookup"><span data-stu-id="42915-119">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
+## <a name="see-also"></a><span data-ttu-id="04a04-115">참고자료</span><span class="sxs-lookup"><span data-stu-id="04a04-115">See also</span></span>
+- [<span data-ttu-id="04a04-116">오버로드된 속성 및 메서드</span><span class="sxs-lookup"><span data-stu-id="04a04-116">Overloaded Properties and Methods</span></span>](../../visual-basic/programming-guide/language-features/objects-and-classes/overloaded-properties-and-methods.md)
+- [<span data-ttu-id="04a04-117">오버로드 확인</span><span class="sxs-lookup"><span data-stu-id="04a04-117">Overload Resolution</span></span>](../../visual-basic/programming-guide/language-features/procedures/overload-resolution.md)
+- [<span data-ttu-id="04a04-118">Visual Basic의 제네릭 형식</span><span class="sxs-lookup"><span data-stu-id="04a04-118">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="04a04-119">형식 목록</span><span class="sxs-lookup"><span data-stu-id="04a04-119">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
