--- a/docs/visual-basic/misc/bc36666-bc36665.md
+++ b/docs/visual-basic/misc/bc36666-bc36665.md
@@ -1,5 +1,5 @@
 ---
-title: "'&lt;methodname&gt;' 반환 형식에 액세스할 수 없기 때문에이 컨텍스트에서 액세스할 수 없는"
+title: "'<methodname>' 반환 형식에 액세스할 수 없기 때문에이 컨텍스트에서 액세스할 수 없는"
 ms.date: 07/20/2015
 f1_keywords:
 - bc36665
@@ -10,15 +10,15 @@ helpviewer_keywords:
 - BC36666
 - BC36665
 ms.assetid: 8f29eb7e-351f-486c-9d1f-3556cc11b7c5
-ms.openlocfilehash: 440e7f4e4396092ddee2c1f03e954e42e0bbe81a
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 1303a1991f898b3c6b2ed54c7c514e47290291fe
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54589060"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55259624"
 ---
-# <a name="ltmethodnamegt-is-not-accessible-in-this-context-because-the-return-type-is-not-accessible"></a><span data-ttu-id="59252-102">'&lt;methodname&gt;' 반환 형식에 액세스할 수 없기 때문에이 컨텍스트에서 액세스할 수 없는</span><span class="sxs-lookup"><span data-stu-id="59252-102">'&lt;methodname&gt;' is not accessible in this context because the return type is not accessible</span></span>
-<span data-ttu-id="59252-103">호출 문에서 액세스할 수 없는 반환 형식을 가진 함수를 호출했습니다.</span><span class="sxs-lookup"><span data-stu-id="59252-103">You have called a function that has a return type that you cannot access from the calling statement.</span></span> <span data-ttu-id="59252-104">예를 들어 다음 코드에서 반환 형식인 `Main` 이 `PublicMethod` 클래스에서 `PrivateType`액세스 한정자를 사용하여 선언되므로 `Private` 에서 `TestClass`로의 호출은 실패합니다.</span><span class="sxs-lookup"><span data-stu-id="59252-104">For example, in the following code, the call from `Main` to `PublicMethod` fails because the return type, `PrivateType`, is declared with the `Private` access modifier in class `TestClass`.</span></span> <span data-ttu-id="59252-105">따라서 `PrivateType` 을 액세스할 수 있는 컨텍스트는 `TestClass`로 제한됩니다.</span><span class="sxs-lookup"><span data-stu-id="59252-105">Therefore, the context within which `PrivateType` can be accessed is limited to `TestClass`.</span></span>  
+# <a name="methodname-is-not-accessible-in-this-context-because-the-return-type-is-not-accessible"></a><span data-ttu-id="afc5e-102">'\<methodname >' 반환 형식에 액세스할 수 없기 때문에이 컨텍스트에서 액세스할 수 없는</span><span class="sxs-lookup"><span data-stu-id="afc5e-102">'\<methodname>' is not accessible in this context because the return type is not accessible</span></span>
+<span data-ttu-id="afc5e-103">호출 문에서 액세스할 수 없는 반환 형식을 가진 함수를 호출했습니다.</span><span class="sxs-lookup"><span data-stu-id="afc5e-103">You have called a function that has a return type that you cannot access from the calling statement.</span></span> <span data-ttu-id="afc5e-104">예를 들어 다음 코드에서 반환 형식인 `Main` 이 `PublicMethod` 클래스에서 `PrivateType`액세스 한정자를 사용하여 선언되므로 `Private` 에서 `TestClass`로의 호출은 실패합니다.</span><span class="sxs-lookup"><span data-stu-id="afc5e-104">For example, in the following code, the call from `Main` to `PublicMethod` fails because the return type, `PrivateType`, is declared with the `Private` access modifier in class `TestClass`.</span></span> <span data-ttu-id="afc5e-105">따라서 `PrivateType` 을 액세스할 수 있는 컨텍스트는 `TestClass`로 제한됩니다.</span><span class="sxs-lookup"><span data-stu-id="afc5e-105">Therefore, the context within which `PrivateType` can be accessed is limited to `TestClass`.</span></span>  
   
 ```vb  
 Class TestClass  
@@ -52,15 +52,15 @@ Module Module1
 End Module  
 ```  
   
- <span data-ttu-id="59252-106">**오류 ID:** BC36665 및 BC36666</span><span class="sxs-lookup"><span data-stu-id="59252-106">**Error ID:** BC36665 and BC36666</span></span>  
+ <span data-ttu-id="afc5e-106">**오류 ID:** BC36665 및 BC36666</span><span class="sxs-lookup"><span data-stu-id="afc5e-106">**Error ID:** BC36665 and BC36666</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="59252-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="59252-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="afc5e-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="afc5e-107">To correct this error</span></span>  
   
--   <span data-ttu-id="59252-108">형식 정의에 액세스할 수 있는 경우 액세스 한정자를 `Private` 에서 `Public`으로 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="59252-108">If the type definition is accessible, change the access modifier from `Private` to `Public`.</span></span>  
+-   <span data-ttu-id="afc5e-108">형식 정의에 액세스할 수 있는 경우 액세스 한정자를 `Private` 에서 `Public`으로 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="afc5e-108">If the type definition is accessible, change the access modifier from `Private` to `Public`.</span></span>  
   
--   <span data-ttu-id="59252-109">액세스 권한이 있는 경우 함수의 반환 형식을 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="59252-109">Change the return type of the function if you have access to it.</span></span>  
+-   <span data-ttu-id="afc5e-109">액세스 권한이 있는 경우 함수의 반환 형식을 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="afc5e-109">Change the return type of the function if you have access to it.</span></span>  
   
--   <span data-ttu-id="59252-110">액세스할 수 있는 형식을 반환하는 메서드 또는 확장 메서드를 작성합니다.</span><span class="sxs-lookup"><span data-stu-id="59252-110">Write a method or extension method that returns an accessible type.</span></span>  
+-   <span data-ttu-id="afc5e-110">액세스할 수 있는 형식을 반환하는 메서드 또는 확장 메서드를 작성합니다.</span><span class="sxs-lookup"><span data-stu-id="afc5e-110">Write a method or extension method that returns an accessible type.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="59252-111">참고자료</span><span class="sxs-lookup"><span data-stu-id="59252-111">See also</span></span>
-- [<span data-ttu-id="59252-112">Visual Basic의 액세스 수준</span><span class="sxs-lookup"><span data-stu-id="59252-112">Access levels in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/declared-elements/access-levels.md)
+## <a name="see-also"></a><span data-ttu-id="afc5e-111">참고자료</span><span class="sxs-lookup"><span data-stu-id="afc5e-111">See also</span></span>
+- [<span data-ttu-id="afc5e-112">Visual Basic의 액세스 수준</span><span class="sxs-lookup"><span data-stu-id="afc5e-112">Access levels in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/declared-elements/access-levels.md)
