--- a/docs/visual-basic/misc/bc36709.md
+++ b/docs/visual-basic/misc/bc36709.md
@@ -1,5 +1,5 @@
 ---
-title: Option Strict On에서는 없도록 확장 메서드 사이의 암시적 형식 변환에 축소 변환을 사용할 '&lt;extensionmethodname&gt;'에 정의 된'&lt;modulename&gt;'및 대리자'&lt;delegatename&gt;'
+title: Option Strict On에서는 없도록 확장 메서드 사이의 암시적 형식 변환에 축소 변환을 사용할 '<extensionmethodname>'에 정의 된'<modulename>'및' 대리자<delegatename>'
 ms.date: 07/20/2015
 f1_keywords:
 - bc36709
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC36709
 ms.assetid: 95d8c833-3525-411b-98e8-b7d3f61f75c9
-ms.openlocfilehash: 9a25148ad5c84d7fed1793d6f0ab47202be4196b
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 1d3df30ec4aeadcf81c16a7340736887ec961718
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54566335"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55259438"
 ---
-# <a name="option-strict-on-does-not-allow-narrowing-in-implicit-type-conversions-between-extension-method-ltextensionmethodnamegt-defined-in-ltmodulenamegt-and-delegate-ltdelegatenamegt"></a><span data-ttu-id="08eee-102">Option Strict On에서는 없도록 확장 메서드 사이의 암시적 형식 변환에 축소 변환을 사용할 '&lt;extensionmethodname&gt;'에 정의 된'&lt;modulename&gt;'및 대리자'&lt;delegatename&gt;'</span><span class="sxs-lookup"><span data-stu-id="08eee-102">Option Strict On does not allow narrowing in implicit type conversions between extension method '&lt;extensionmethodname&gt;' defined in '&lt;modulename&gt;' and delegate '&lt;delegatename&gt;'</span></span>
-<span data-ttu-id="08eee-103">`Option Strict` 이 설정되면 대리자의 매개 변수 데이터 형식에서 해당 대리자 형식의 변수에 할당된 확장 메서드의 해당 변수로 축소 변환을 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="08eee-103">With `Option Strict` on, you cannot have a narrowing conversion from the data type of a parameter in a delegate to the corresponding parameter of an extension method assigned to a variable of that delegate type.</span></span> <span data-ttu-id="08eee-104">대리자 매개 변수의 데이터 형식을 확장 메서드의 데이터 형식으로 확장해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="08eee-104">The data type of the delegate parameter must widen to the data type of the extension method.</span></span>  
+# <a name="option-strict-on-does-not-allow-narrowing-in-implicit-type-conversions-between-extension-method-extensionmethodname-defined-in-modulename-and-delegate-delegatename"></a><span data-ttu-id="99863-102">Option Strict On에서는 없도록 확장 메서드 사이의 암시적 형식 변환에 축소 변환을 사용할 '\<extensionmethodname >'에 정의 된 '\<modulename >' 대리자와 '\<delegatename >'</span><span class="sxs-lookup"><span data-stu-id="99863-102">Option Strict On does not allow narrowing in implicit type conversions between extension method '\<extensionmethodname>' defined in '\<modulename>' and delegate '\<delegatename>'</span></span>
+<span data-ttu-id="99863-103">`Option Strict` 이 설정되면 대리자의 매개 변수 데이터 형식에서 해당 대리자 형식의 변수에 할당된 확장 메서드의 해당 변수로 축소 변환을 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="99863-103">With `Option Strict` on, you cannot have a narrowing conversion from the data type of a parameter in a delegate to the corresponding parameter of an extension method assigned to a variable of that delegate type.</span></span> <span data-ttu-id="99863-104">대리자 매개 변수의 데이터 형식을 확장 메서드의 데이터 형식으로 확장해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="99863-104">The data type of the delegate parameter must widen to the data type of the extension method.</span></span>  
   
- <span data-ttu-id="08eee-105">**오류 ID:** BC36709</span><span class="sxs-lookup"><span data-stu-id="08eee-105">**Error ID:** BC36709</span></span>  
+ <span data-ttu-id="99863-105">**오류 ID:** BC36709</span><span class="sxs-lookup"><span data-stu-id="99863-105">**Error ID:** BC36709</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="08eee-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="08eee-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="99863-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="99863-106">To correct this error</span></span>  
   
--   <span data-ttu-id="08eee-107">필요한 확대 관계가 존재하도록 대리자 또는 확장 메서드에서 매개 변수의 데이터 형식을 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="08eee-107">Change the data type of the parameter in the delegate or the extension method so that the required widening relationship exists.</span></span>  
+-   <span data-ttu-id="99863-107">필요한 확대 관계가 존재하도록 대리자 또는 확장 메서드에서 매개 변수의 데이터 형식을 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="99863-107">Change the data type of the parameter in the delegate or the extension method so that the required widening relationship exists.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="08eee-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="08eee-108">See also</span></span>
-- [<span data-ttu-id="08eee-109">확장명 메서드</span><span class="sxs-lookup"><span data-stu-id="08eee-109">Extension Methods</span></span>](../../visual-basic/programming-guide/language-features/procedures/extension-methods.md)
-- [<span data-ttu-id="08eee-110">완화된 대리자 변환</span><span class="sxs-lookup"><span data-stu-id="08eee-110">Relaxed Delegate Conversion</span></span>](../../visual-basic/programming-guide/language-features/delegates/relaxed-delegate-conversion.md)
-- [<span data-ttu-id="08eee-111">대리자</span><span class="sxs-lookup"><span data-stu-id="08eee-111">Delegates</span></span>](../../visual-basic/programming-guide/language-features/delegates/index.md)
-- [<span data-ttu-id="08eee-112">확대 변환과 축소 변환</span><span class="sxs-lookup"><span data-stu-id="08eee-112">Widening and Narrowing Conversions</span></span>](../../visual-basic/programming-guide/language-features/data-types/widening-and-narrowing-conversions.md)
+## <a name="see-also"></a><span data-ttu-id="99863-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="99863-108">See also</span></span>
+- [<span data-ttu-id="99863-109">확장명 메서드</span><span class="sxs-lookup"><span data-stu-id="99863-109">Extension Methods</span></span>](../../visual-basic/programming-guide/language-features/procedures/extension-methods.md)
+- [<span data-ttu-id="99863-110">완화된 대리자 변환</span><span class="sxs-lookup"><span data-stu-id="99863-110">Relaxed Delegate Conversion</span></span>](../../visual-basic/programming-guide/language-features/delegates/relaxed-delegate-conversion.md)
+- [<span data-ttu-id="99863-111">대리자</span><span class="sxs-lookup"><span data-stu-id="99863-111">Delegates</span></span>](../../visual-basic/programming-guide/language-features/delegates/index.md)
+- [<span data-ttu-id="99863-112">확대 변환과 축소 변환</span><span class="sxs-lookup"><span data-stu-id="99863-112">Widening and Narrowing Conversions</span></span>](../../visual-basic/programming-guide/language-features/data-types/widening-and-narrowing-conversions.md)
 
