--- a/docs/visual-basic/misc/bc40005.md
+++ b/docs/visual-basic/misc/bc40005.md
@@ -1,5 +1,5 @@
 ---
-title: "&lt;형식&gt; '&lt;typename&gt;' 기본 클래스에 재정의 가능한 메서드를 숨깁니다."
+title: <type> '<typename>' 기본 클래스에 재정의 가능한 메서드를 숨깁니다.
 ms.date: 07/20/2015
 f1_keywords:
 - vbc40005
@@ -7,32 +7,32 @@ f1_keywords:
 helpviewer_keywords:
 - BC40005
 ms.assetid: 1dadda7f-1d26-4ae8-a668-9f69d55ceb50
-ms.openlocfilehash: d4c745a28b06c0b4268d0da5c1b961a88fb81760
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 3b6f8dc0fc6bc72a5d5cdabae264073bc1d60fad
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54534295"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55258985"
 ---
-# <a name="lttypegt-lttypenamegt-shadows-an-overridable-method-in-the-base-class"></a><span data-ttu-id="26939-102">&lt;형식&gt; '&lt;typename&gt;' 기본 클래스에 재정의 가능한 메서드를 숨깁니다.</span><span class="sxs-lookup"><span data-stu-id="26939-102">&lt;type&gt; '&lt;typename&gt;' shadows an overridable method in the base class</span></span>
-<span data-ttu-id="26939-103">\<형식 > '\<typename >' 기본 클래스에 재정의 가능한 메서드를 섀도 처리 합니다.</span><span class="sxs-lookup"><span data-stu-id="26939-103">\<type> '\<typename>' shadows an overridable method in the base class.</span></span> <span data-ttu-id="26939-104">기본 메서드를 재정의하려면 이 메서드를 'Overrides'로 선언해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="26939-104">If you want to override the base method, this method must be declared 'Overrides'.</span></span>  
+# <a name="type-typename-shadows-an-overridable-method-in-the-base-class"></a><span data-ttu-id="df5a1-102">\<형식 > '\<typename >' 기본 클래스에 재정의 가능한 메서드를 숨깁니다.</span><span class="sxs-lookup"><span data-stu-id="df5a1-102">\<type> '\<typename>' shadows an overridable method in the base class</span></span>
+<span data-ttu-id="df5a1-103">\<형식 > '\<typename >' 기본 클래스에 재정의 가능한 메서드를 섀도 처리 합니다.</span><span class="sxs-lookup"><span data-stu-id="df5a1-103">\<type> '\<typename>' shadows an overridable method in the base class.</span></span> <span data-ttu-id="df5a1-104">기본 메서드를 재정의하려면 이 메서드를 'Overrides'로 선언해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="df5a1-104">If you want to override the base method, this method must be declared 'Overrides'.</span></span>  
   
- <span data-ttu-id="26939-105">프로그래밍 요소가 기본 클래스에 정의된 속성 또는 재정의 가능한 프로시저와 같은 이름을 사용하여 선언되었습니다.</span><span class="sxs-lookup"><span data-stu-id="26939-105">A programming element is declared with the same name as an overridable procedure or property defined in the base class.</span></span> <span data-ttu-id="26939-106">이 상황에서 이 클래스의 요소는 기본 클래스 요소를 숨깁니다.</span><span class="sxs-lookup"><span data-stu-id="26939-106">In this situation, the element in this class should shadow the base class element.</span></span>  
+ <span data-ttu-id="df5a1-105">프로그래밍 요소가 기본 클래스에 정의된 속성 또는 재정의 가능한 프로시저와 같은 이름을 사용하여 선언되었습니다.</span><span class="sxs-lookup"><span data-stu-id="df5a1-105">A programming element is declared with the same name as an overridable procedure or property defined in the base class.</span></span> <span data-ttu-id="df5a1-106">이 상황에서 이 클래스의 요소는 기본 클래스 요소를 숨깁니다.</span><span class="sxs-lookup"><span data-stu-id="df5a1-106">In this situation, the element in this class should shadow the base class element.</span></span>  
   
- <span data-ttu-id="26939-107">이 메시지는 기본적으로 경고입니다.</span><span class="sxs-lookup"><span data-stu-id="26939-107">By default, this message is a warning.</span></span> <span data-ttu-id="26939-108">경고를 숨기거나 오류로 처리하는 방법에 대한 자세한 내용은 [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)을 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="26939-108">For more information about hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
+ <span data-ttu-id="df5a1-107">이 메시지는 기본적으로 경고입니다.</span><span class="sxs-lookup"><span data-stu-id="df5a1-107">By default, this message is a warning.</span></span> <span data-ttu-id="df5a1-108">경고를 숨기거나 오류로 처리하는 방법에 대한 자세한 내용은 [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)을 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="df5a1-108">For more information about hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
   
- <span data-ttu-id="26939-109">**오류 ID:** BC40005</span><span class="sxs-lookup"><span data-stu-id="26939-109">**Error ID:** BC40005</span></span>  
+ <span data-ttu-id="df5a1-109">**오류 ID:** BC40005</span><span class="sxs-lookup"><span data-stu-id="df5a1-109">**Error ID:** BC40005</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="26939-110">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="26939-110">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="df5a1-110">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="df5a1-110">To correct this error</span></span>  
   
--   <span data-ttu-id="26939-111">기본 프로시저로 재정의하려면 `Overrides` 키워드를 선언에 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="26939-111">If you intend to override the base procedure, add the `Overrides` keyword to the declaration.</span></span>  
+-   <span data-ttu-id="df5a1-111">기본 프로시저로 재정의하려면 `Overrides` 키워드를 선언에 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="df5a1-111">If you intend to override the base procedure, add the `Overrides` keyword to the declaration.</span></span>  
   
--   <span data-ttu-id="26939-112">기본 프로시저를 숨기려면 `Shadows` 키워드를 선언에 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="26939-112">If you intend to shadow the base procedure, add the `Shadows` keyword to the declaration.</span></span>  
+-   <span data-ttu-id="df5a1-112">기본 프로시저를 숨기려면 `Shadows` 키워드를 선언에 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="df5a1-112">If you intend to shadow the base procedure, add the `Shadows` keyword to the declaration.</span></span>  
   
--   <span data-ttu-id="26939-113">재정의 또는 숨기기를 수행하려는 경우가 아니면 선언될 요소 이름을 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="26939-113">If you do not intend either overriding or shadowing, change the name of the element being declared.</span></span>  
+-   <span data-ttu-id="df5a1-113">재정의 또는 숨기기를 수행하려는 경우가 아니면 선언될 요소 이름을 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="df5a1-113">If you do not intend either overriding or shadowing, change the name of the element being declared.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="26939-114">참고자료</span><span class="sxs-lookup"><span data-stu-id="26939-114">See also</span></span>
-- [<span data-ttu-id="26939-115">속성 및 파생된 클래스에서 메서드 재정의</span><span class="sxs-lookup"><span data-stu-id="26939-115">Overriding properties and methods in derived classes</span></span>](~/docs/visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md#overriding-properties-and-methods-in-derived-classes)
-- [<span data-ttu-id="26939-116">Visual Basic의 숨김 기능</span><span class="sxs-lookup"><span data-stu-id="26939-116">Shadowing in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/declared-elements/shadowing.md)
-- [<span data-ttu-id="26939-117">재정의</span><span class="sxs-lookup"><span data-stu-id="26939-117">Overrides</span></span>](../../visual-basic/language-reference/modifiers/overrides.md)
-- [<span data-ttu-id="26939-118">Shadows</span><span class="sxs-lookup"><span data-stu-id="26939-118">Shadows</span></span>](../../visual-basic/language-reference/modifiers/shadows.md)
+## <a name="see-also"></a><span data-ttu-id="df5a1-114">참고자료</span><span class="sxs-lookup"><span data-stu-id="df5a1-114">See also</span></span>
+- [<span data-ttu-id="df5a1-115">속성 및 파생된 클래스에서 메서드 재정의</span><span class="sxs-lookup"><span data-stu-id="df5a1-115">Overriding properties and methods in derived classes</span></span>](~/docs/visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md#overriding-properties-and-methods-in-derived-classes)
+- [<span data-ttu-id="df5a1-116">Visual Basic의 숨김 기능</span><span class="sxs-lookup"><span data-stu-id="df5a1-116">Shadowing in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/declared-elements/shadowing.md)
+- [<span data-ttu-id="df5a1-117">재정의</span><span class="sxs-lookup"><span data-stu-id="df5a1-117">Overrides</span></span>](../../visual-basic/language-reference/modifiers/overrides.md)
+- [<span data-ttu-id="df5a1-118">Shadows</span><span class="sxs-lookup"><span data-stu-id="df5a1-118">Shadows</span></span>](../../visual-basic/language-reference/modifiers/shadows.md)
